--- a/docs/professor/amilcar_machado_profeta_filho.mdx
+++ b/docs/professor/amilcar_machado_profeta_filho.mdx
@@ -4,7 +4,18 @@ const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "PCCC 7  - Temas transversais - 1549",
+          size: 1,
+          teachers: [
+            "Amilcar Machado Profeta Filho"
+          ],
+          classroom: "",
+          students: "BIO2020",
+          time: "19:50 - 20:40"
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
@@ -15,39 +26,9 @@ const data = {
           teachers: [
             "Amilcar Machado Profeta Filho"
           ],
-          classroom: "Sala 15-2",
+          classroom: "",
           students: "AGO2021",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "História II - 1089",
-          size: 1,
-          teachers: [
-            "Amilcar Machado Profeta Filho"
-          ],
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "PCCC 7  - Temas transversais - 1549",
-          size: 1,
-          teachers: [
-            "Amilcar Machado Profeta Filho"
-          ],
-          classroom: "Sala 11-2",
-          students: "BIO2020",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "PCCC 7  - Temas transversais - 1549",
-          size: 1,
-          teachers: [
-            "Amilcar Machado Profeta Filho"
-          ],
-          classroom: "Sala 11-2",
-          students: "BIO2020",
-          time: "19:50 - 20:40"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Ética e Responsabilidade Social e Ambiental - 1497",
@@ -55,9 +36,9 @@ const data = {
           teachers: [
             "Amilcar Machado Profeta Filho"
           ],
-          classroom: "Sala 3-1",
+          classroom: "",
           students: "TGC2022",
-          time: "21:00 - 21:50"
+          time: "19:00 - 19:50"
         }
       ]
     },
@@ -65,12 +46,22 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
+          subject: "História II - 1089",
+          size: 1,
+          teachers: [
+            "Amilcar Machado Profeta Filho"
+          ],
+          classroom: "",
+          students: "AGO2021",
+          time: "09:25 - 10:15"
+        },
+        {
           subject: "Legislação e ética profissional - 2229",
           size: 2,
           teachers: [
             "Amilcar Machado Profeta Filho"
           ],
-          classroom: "Sala 6-2",
+          classroom: "",
           students: "ELE2022",
           time: "21:00 - 21:50"
         },
@@ -80,7 +71,17 @@ const data = {
           teachers: [
             "Amilcar Machado Profeta Filho"
           ],
-          classroom: "Sala 11-2",
+          classroom: "",
+          students: "BIO2020",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "PCCC 7  - Temas transversais - 1549",
+          size: 1,
+          teachers: [
+            "Amilcar Machado Profeta Filho"
+          ],
+          classroom: "",
           students: "BIO2020",
           time: "19:50 - 20:40"
         }
