--- a/docs/professor/bruna_valeriano_da_silva_lisboa.mdx
+++ b/docs/professor/bruna_valeriano_da_silva_lisboa.mdx
@@ -6,14 +6,24 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Educação Física I - 1072",
+          subject: "Educação Física I - 457",
           size: 2,
           teachers: [
             "Bruna Valeriano da Silva Lisboa"
           ],
-          classroom: "Educação Física / Sala 4 B2",
-          students: "IIW2023A",
+          classroom: "",
+          students: "AGO2023",
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Educação Física II - 1227",
+          size: 2,
+          teachers: [
+            "Bruna Valeriano da Silva Lisboa"
+          ],
+          classroom: "",
+          students: "IIW2022A",
+          time: "15:05 - 15:55"
         }
       ]
     },
@@ -21,13 +31,28 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Educação Física II - 615",
+          subject: "Educação Física I - 1072",
           size: 2,
           teachers: [
             "Bruna Valeriano da Silva Lisboa"
           ],
-          classroom: "Educação Física / Sala 4 B2",
-          students: "AGO2022",
+          classroom: "",
+          students: "IIW2023A",
+          time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
+          subject: "Educação Física I - 2323",
+          size: 2,
+          teachers: [
+            "Bruna Valeriano da Silva Lisboa"
+          ],
+          classroom: "",
+          students: "COM2023",
           time: "07:30 - 08:20"
         },
         {
@@ -36,34 +61,9 @@ const data = {
           teachers: [
             "Bruna Valeriano da Silva Lisboa"
           ],
-          classroom: "Educação Física / Sala 4 B2",
+          classroom: "",
           students: "AGO2021",
-          time: "13:10 - 14:00"
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Educação Física 2 - 170",
-          size: 1,
-          teachers: [
-            "Bruna Valeriano da Silva Lisboa"
-          ],
-          classroom: "Educação Física / Sala 4 B2",
-          students: "EIN2022",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Educação Física 3 - 203",
-          size: 1,
-          teachers: [
-            "Bruna Valeriano da Silva Lisboa"
-          ],
-          classroom: "Educação Física / Sala 4 B2",
-          students: "EIN2021",
-          time: "07:30 - 08:20"
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -76,19 +76,9 @@ const data = {
           teachers: [
             "Bruna Valeriano da Silva Lisboa"
           ],
-          classroom: "Educação Física / Sala 4 B2",
+          classroom: "",
           students: "EIN2023",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Educação Física I - 457",
-          size: 2,
-          teachers: [
-            "Bruna Valeriano da Silva Lisboa"
-          ],
-          classroom: "Educação Física / Sala 4 B2",
-          students: "AGO2023",
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -96,24 +86,34 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Educação Física I - 2323",
+          subject: "Educação Física 2 - 170",
+          size: 1,
+          teachers: [
+            "Bruna Valeriano da Silva Lisboa"
+          ],
+          classroom: "",
+          students: "EIN2022",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Educação Física 3 - 203",
+          size: 1,
+          teachers: [
+            "Bruna Valeriano da Silva Lisboa"
+          ],
+          classroom: "",
+          students: "EIN2021",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Educação Física II - 615",
           size: 2,
           teachers: [
             "Bruna Valeriano da Silva Lisboa"
           ],
           classroom: "",
-          students: "COM2023",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Educação Física II - 1227",
-          size: 2,
-          teachers: [
-            "Bruna Valeriano da Silva Lisboa"
-          ],
-          classroom: "Educação Física / Sala 4 B2",
-          students: "IIW2022A",
-          time: "15:05 - 15:55"
+          students: "AGO2022",
+          time: "07:30 - 08:20"
         }
       ]
     }
