--- a/docs/professor/celina_de_oliveira_barbosa_gomes.mdx
+++ b/docs/professor/celina_de_oliveira_barbosa_gomes.mdx
@@ -11,8 +11,18 @@ const data = {
           teachers: [
             "Celina de Oliveira Barbosa Gomes"
           ],
-          classroom: "Sala 8-2",
+          classroom: "",
           students: "EIN2020",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Lingua estrangeira - Inglês - 1225",
+          size: 1,
+          teachers: [
+            "Celina de Oliveira Barbosa Gomes"
+          ],
+          classroom: "",
+          students: "IIW2023A",
           time: "11:05 - 11:55"
         }
       ]
@@ -20,16 +30,6 @@ const data = {
     {
       dayName: "Terça-Feira",
       dayClasses: [
-        {
-          subject: "Lingua Estrangeira Moderna 2 - Ingles - 208",
-          size: 1,
-          teachers: [
-            "Celina de Oliveira Barbosa Gomes"
-          ],
-          classroom: "Sala 7-2",
-          students: "EIN2021",
-          time: "11:05 - 11:55"
-        },
         {
           subject: "Língua Portuguesa e Literatura I - 2322",
           size: 2,
@@ -48,13 +48,43 @@ const data = {
           ],
           classroom: "",
           students: "AGO2023",
-          time: "07:30 - 08:20"
+          time: "13:10 - 14:00"
         }
       ]
     },
     {
       dayName: "Quarta-Feira",
       dayClasses: [
+        {
+          subject: "Diversidade e educação inclusiva - 657",
+          size: 1,
+          teachers: [
+            "Celina de Oliveira Barbosa Gomes"
+          ],
+          classroom: "",
+          students: "BIO_ESPECIAL_2",
+          time: "19:50 - 20:40"
+        },
+        {
+          subject: "Diversidade e educação inclusiva - 657",
+          size: 1,
+          teachers: [
+            "Celina de Oliveira Barbosa Gomes"
+          ],
+          classroom: "",
+          students: "BIO_ESPECIAL_2",
+          time: "21:50 - 22:40"
+        },
+        {
+          subject: "Lingua Estrangeira Moderna 2 - Ingles - 208",
+          size: 1,
+          teachers: [
+            "Celina de Oliveira Barbosa Gomes"
+          ],
+          classroom: "",
+          students: "EIN2021",
+          time: "09:25 - 10:15"
+        },
         {
           subject: "Lingua estrangeira - Inglês - 1225",
           size: 1,
@@ -69,27 +99,11 @@ const data = {
     },
     {
       dayName: "Quinta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Sexta-Feira",
       dayClasses: [
-        {
-          subject: "Diversidade e educação inclusiva - 657",
-          size: 1,
-          teachers: [
-            "Celina de Oliveira Barbosa Gomes"
-          ],
-          classroom: "",
-          students: "BIO_ESPECIAL_2",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Diversidade e educação inclusiva - 657",
-          size: 1,
-          teachers: [
-            "Celina de Oliveira Barbosa Gomes"
-          ],
-          classroom: "",
-          students: "BIO_ESPECIAL_2",
-          time: "19:00 - 19:50"
-        },
         {
           subject: "Língua Portuguesa e Literatura I - 2322",
           size: 2,
@@ -98,22 +112,7 @@ const data = {
           ],
           classroom: "",
           students: "COM2023",
-          time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Lingua estrangeira - Inglês - 1225",
-          size: 1,
-          teachers: [
-            "Celina de Oliveira Barbosa Gomes"
-          ],
-          classroom: "",
-          students: "IIW2023A",
-          time: "09:25 - 10:15"
+          time: "15:05 - 15:55"
         }
       ]
     }
