--- a/docs/professor/cesar_gomes_de_freitas.mdx
+++ b/docs/professor/cesar_gomes_de_freitas.mdx
@@ -6,34 +6,14 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Contabilidade de Custos e Formação de Preços - 1492",
+          subject: "Gestão de Produção - 117",
           size: 2,
           teachers: [
             "Cesar Gomes de Freitas"
           ],
-          classroom: "Sala 3-1",
-          students: "TGC2022",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Contabilidade de Custos e Formação de Preços - 1492",
-          size: 2,
-          teachers: [
-            "Cesar Gomes de Freitas"
-          ],
-          classroom: "Sala 3-1",
-          students: "TGC2022",
+          classroom: "",
+          students: "ELM2022",
           time: "21:00 - 21:50"
-        },
-        {
-          subject: "Gestão e Empreendedorismo Rural - 1095",
-          size: 2,
-          teachers: [
-            "Cesar Gomes de Freitas"
-          ],
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "09:25 - 10:15"
         }
       ]
     },
@@ -46,7 +26,7 @@ const data = {
           teachers: [
             "Cesar Gomes de Freitas"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGR2022",
           time: "19:00 - 19:50"
         },
@@ -56,7 +36,7 @@ const data = {
           teachers: [
             "Cesar Gomes de Freitas"
           ],
-          classroom: "Sala 15-2",
+          classroom: "",
           students: "TGC2021",
           time: "21:00 - 21:50"
         }
@@ -66,22 +46,12 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Gestão de Compras e Estoques - 1491",
-          size: 2,
-          teachers: [
-            "Cesar Gomes de Freitas"
-          ],
-          classroom: "Sala 3-1",
-          students: "TGC2022",
-          time: "19:00 - 19:50"
-        },
-        {
           subject: "Logística aplicada - 1503",
           size: 2,
           teachers: [
             "Cesar Gomes de Freitas"
           ],
-          classroom: "Sala 15-2",
+          classroom: "",
           students: "TGC2021",
           time: "21:00 - 21:50"
         }
@@ -91,14 +61,34 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Gestão de Produção - 117",
+          subject: "Contabilidade de Custos e Formação de Preços - 1492",
           size: 2,
           teachers: [
             "Cesar Gomes de Freitas"
           ],
-          classroom: "Sala 7-2",
-          students: "ELM2022",
+          classroom: "",
+          students: "TGC2022",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Contabilidade de Custos e Formação de Preços - 1492",
+          size: 2,
+          teachers: [
+            "Cesar Gomes de Freitas"
+          ],
+          classroom: "",
+          students: "TGC2022",
           time: "21:00 - 21:50"
+        },
+        {
+          subject: "Gestão e Empreendedorismo Rural - 1095",
+          size: 2,
+          teachers: [
+            "Cesar Gomes de Freitas"
+          ],
+          classroom: "",
+          students: "AGO2021",
+          time: "13:10 - 14:00"
         }
       ]
     },
@@ -114,6 +104,16 @@ const data = {
           classroom: "",
           students: "COM2023",
           time: "13:10 - 14:00"
+        },
+        {
+          subject: "Gestão de Compras e Estoques - 1491",
+          size: 2,
+          teachers: [
+            "Cesar Gomes de Freitas"
+          ],
+          classroom: "",
+          students: "TGC2022",
+          time: "19:00 - 19:50"
         }
       ]
     }
