--- a/docs/professor/darlan_roque_dapieve.mdx
+++ b/docs/professor/darlan_roque_dapieve.mdx
@@ -11,49 +11,38 @@ const data = {
           teachers: [
             "Darlan Roque Dapieve"
           ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
+          classroom: "",
           students: "ELM2023",
+          time: "21:00 - 21:50"
+        },
+        {
+          subject: "Resistência dos Materiais - 109",
+          size: 2,
+          teachers: [
+            "Darlan Roque Dapieve"
+          ],
+          classroom: "",
+          students: "ELM2022",
           time: "19:00 - 19:50"
         }
       ]
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Resistência dos Materiais - 109",
-          size: 2,
-          teachers: [
-            "Darlan Roque Dapieve"
-          ],
-          classroom: "Sala 7-2",
-          students: "ELM2022",
-          time: "19:00 - 19:50"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Cálculo Mecânico - 154",
+          subject: "Desenho Técnico 2 - 132",
           size: 2,
           teachers: [
             "Darlan Roque Dapieve"
           ],
-          classroom: "Sala 6-2",
-          students: "EIN2022",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Manutenção Industrial e Gestão da Produção - 1592",
-          size: 1,
-          teachers: [
-            "Darlan Roque Dapieve"
-          ],
-          classroom: "Sala 8-2",
-          students: "EIN2020",
-          time: "11:05 - 11:55"
+          classroom: "",
+          students: "ELM2023",
+          time: "21:00 - 21:50"
         },
         {
           subject: "Resistência dos Materiais - 109",
@@ -61,9 +50,19 @@ const data = {
           teachers: [
             "Darlan Roque Dapieve"
           ],
-          classroom: "Sala 7-2",
+          classroom: "",
           students: "ELM2022",
           time: "19:00 - 19:50"
+        },
+        {
+          subject: "Tecnologia dos Materiais - 1531",
+          size: 2,
+          teachers: [
+            "Darlan Roque Dapieve"
+          ],
+          classroom: "",
+          students: "EIN2023",
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -75,24 +74,24 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Desenho Técnico 2 - 132",
-          size: 2,
-          teachers: [
-            "Darlan Roque Dapieve"
-          ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
-          students: "ELM2023",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Tecnologia dos Materiais - 1531",
+          subject: "Cálculo Mecânico - 154",
           size: 2,
           teachers: [
             "Darlan Roque Dapieve"
           ],
           classroom: "",
-          students: "EIN2023",
+          students: "EIN2022",
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Manutenção Industrial e Gestão da Produção - 1592",
+          size: 1,
+          teachers: [
+            "Darlan Roque Dapieve"
+          ],
+          classroom: "",
+          students: "EIN2020",
+          time: "11:05 - 11:55"
         }
       ]
     }
