--- a/docs/professor/douglas_barbosa_sousa.mdx
+++ b/docs/professor/douglas_barbosa_sousa.mdx
@@ -8,24 +8,13 @@ const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Linguagem de Programação - 14",
-          size: 2,
-          teachers: [
-            "Douglas Barbosa Sousa"
-          ],
-          classroom: "",
-          students: "TADS_ESP",
-          time: "19:00 - 19:50"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Banco de Dados II - 13",
+          subject: "Linguagem de Programação - 14",
           size: 2,
           teachers: [
             "Douglas Barbosa Sousa"
@@ -50,7 +39,7 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Linguagem de Programação - 14",
+          subject: "Banco de Dados II - 13",
           size: 2,
           teachers: [
             "Douglas Barbosa Sousa"
@@ -58,6 +47,16 @@ const data = {
           classroom: "",
           students: "TADS_ESP",
           time: "21:00 - 21:50"
+        },
+        {
+          subject: "Linguagem de Programação - 14",
+          size: 2,
+          teachers: [
+            "Douglas Barbosa Sousa"
+          ],
+          classroom: "",
+          students: "TADS_ESP",
+          time: "19:00 - 19:50"
         }
       ]
     },
@@ -72,7 +71,7 @@ const data = {
           ],
           classroom: "",
           students: "TADS_ESP",
-          time: "19:00 - 19:50"
+          time: "21:00 - 21:50"
         }
       ]
     }
