--- a/docs/professor/elizangela_cavazzini_cesca.mdx
+++ b/docs/professor/elizangela_cavazzini_cesca.mdx
@@ -6,14 +6,24 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Química II - 1230",
+          subject: "Química 1 - 143",
+          size: 1,
+          teachers: [
+            "Elizangela Cavazzini Cesca"
+          ],
+          classroom: "",
+          students: "EIN2023",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Química I - 2326",
           size: 2,
           teachers: [
             "Elizangela Cavazzini Cesca"
           ],
-          classroom: "BioPark-01",
-          students: "IIW2022B",
-          time: "10:15 - 11:05"
+          classroom: "",
+          students: "COM2023",
+          time: "13:10 - 14:00"
         }
       ]
     },
@@ -32,82 +42,20 @@ const data = {
           time: "19:00 - 19:50"
         },
         {
-          subject: "Química I - 1068",
-          size: 2,
+          subject: "Química 3 - 211",
+          size: 1,
           teachers: [
             "Elizangela Cavazzini Cesca"
           ],
-          classroom: "BioPark-02",
-          students: "IIW2023B",
-          time: "10:15 - 11:05"
+          classroom: "",
+          students: "EIN2021",
+          time: "09:25 - 10:15"
         }
       ]
     },
     {
       dayName: "Quarta-Feira",
       dayClasses: [
-        {
-          subject: "Fundamentos da Química - 2337",
-          size: 1,
-          teachers: [
-            "Daniele de Almeida Paula",
-            "Elizangela Cavazzini Cesca"
-          ],
-          classroom: "",
-          students: "TAL2023",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Química 4 - 235",
-          size: 2,
-          teachers: [
-            "Elizangela Cavazzini Cesca"
-          ],
-          classroom: "Laboratório de Química",
-          students: "EIN2020",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Química I - 2326",
-          size: 2,
-          teachers: [
-            "Elizangela Cavazzini Cesca"
-          ],
-          classroom: "",
-          students: "COM2023",
-          time: "09:25 - 10:15"
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Química 1 - 143",
-          size: 1,
-          teachers: [
-            "Elizangela Cavazzini Cesca"
-          ],
-          classroom: "Laboratório de Química",
-          students: "EIN2023",
-          time: "09:25 - 10:15"
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Fundamentos da Química - 2337",
-          size: 1,
-          teachers: [
-            "Daniele de Almeida Paula",
-            "Elizangela Cavazzini Cesca"
-          ],
-          classroom: "",
-          students: "TAL2023",
-          time: "19:50 - 20:40"
-        },
         {
           subject: "Fundamentos da Química - 2337",
           size: 1,
@@ -125,21 +73,72 @@ const data = {
           teachers: [
             "Elizangela Cavazzini Cesca"
           ],
-          classroom: "Laboratório de Química",
+          classroom: "",
           students: "EIN2022",
           time: "07:30 - 08:20"
         },
         {
-          subject: "Química 3 - 211",
-          size: 1,
+          subject: "Química 4 - 235",
+          size: 2,
           teachers: [
             "Elizangela Cavazzini Cesca"
           ],
-          classroom: "Laboratório de Química",
-          students: "EIN2021",
-          time: "11:05 - 11:55"
+          classroom: "",
+          students: "EIN2020",
+          time: "10:15 - 11:05"
         }
       ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Fundamentos da Química - 2337",
+          size: 1,
+          teachers: [
+            "Daniele de Almeida Paula",
+            "Elizangela Cavazzini Cesca"
+          ],
+          classroom: "",
+          students: "TAL2023",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Fundamentos da Química - 2337",
+          size: 1,
+          teachers: [
+            "Daniele de Almeida Paula",
+            "Elizangela Cavazzini Cesca"
+          ],
+          classroom: "",
+          students: "TAL2023",
+          time: "21:50 - 22:40"
+        },
+        {
+          subject: "Química I - 1068",
+          size: 2,
+          teachers: [
+            "Elizangela Cavazzini Cesca"
+          ],
+          classroom: "",
+          students: "IIW2023B",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Química II - 1230",
+          size: 2,
+          teachers: [
+            "Elizangela Cavazzini Cesca"
+          ],
+          classroom: "",
+          students: "IIW2022B",
+          time: "10:15 - 11:05"
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: []
     }
   ],
   time: [
