--- a/docs/professor/everaldo_lorensetti.mdx
+++ b/docs/professor/everaldo_lorensetti.mdx
@@ -6,14 +6,14 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Sociologia 3 - 212",
+          subject: "Sociologia 2 - 189",
           size: 1,
           teachers: [
             "Everaldo Lorensetti"
           ],
-          classroom: "Sala 7-2",
-          students: "EIN2021",
-          time: "11:05 - 11:55"
+          classroom: "",
+          students: "EIN2022",
+          time: "09:25 - 10:15"
         },
         {
           subject: "Sociologia I - 1071",
@@ -23,8 +23,23 @@ const data = {
           ],
           classroom: "",
           students: "IIW2023A",
-          time: "09:25 - 10:15"
+          time: "08:20 - 09:10"
         },
+        {
+          subject: "Sociologia II - 1246",
+          size: 1,
+          teachers: [
+            "Everaldo Lorensetti"
+          ],
+          classroom: "",
+          students: "IIW2021",
+          time: "11:05 - 11:55"
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
         {
           subject: "Sociologia I - 465",
           size: 1,
@@ -33,12 +48,22 @@ const data = {
           ],
           classroom: "",
           students: "AGO2023",
-          time: "15:05 - 15:55"
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Sociologia II - 1246",
+          size: 1,
+          teachers: [
+            "Everaldo Lorensetti"
+          ],
+          classroom: "",
+          students: "IIW2021",
+          time: "11:05 - 11:55"
         }
       ]
     },
     {
-      dayName: "Terça-Feira",
+      dayName: "Quarta-Feira",
       dayClasses: [
         {
           subject: "Sociologia 1 - 146",
@@ -48,8 +73,33 @@ const data = {
           ],
           classroom: "",
           students: "EIN2023",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Sociologia 3 - 212",
+          size: 1,
+          teachers: [
+            "Everaldo Lorensetti"
+          ],
+          classroom: "",
+          students: "EIN2021",
           time: "07:30 - 08:20"
         },
+        {
+          subject: "Sociologia 4 - 238",
+          size: 1,
+          teachers: [
+            "Everaldo Lorensetti"
+          ],
+          classroom: "",
+          students: "EIN2020",
+          time: "09:25 - 10:15"
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
         {
           subject: "Sociologia I - 1071",
           size: 1,
@@ -58,56 +108,6 @@ const data = {
           ],
           classroom: "",
           students: "IIW2023A",
-          time: "09:25 - 10:15"
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Sociologia 4 - 238",
-          size: 1,
-          teachers: [
-            "Everaldo Lorensetti"
-          ],
-          classroom: "Sala 8-2",
-          students: "EIN2020",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Sociologia II - 1246",
-          size: 1,
-          teachers: [
-            "Everaldo Lorensetti"
-          ],
-          classroom: "Sala 12-2",
-          students: "IIW2021",
-          time: "11:05 - 11:55"
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Sociologia 2 - 189",
-          size: 1,
-          teachers: [
-            "Everaldo Lorensetti"
-          ],
-          classroom: "Sala 6-2",
-          students: "EIN2022",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Sociologia II - 1246",
-          size: 1,
-          teachers: [
-            "Everaldo Lorensetti"
-          ],
-          classroom: "Sala 12-2",
-          students: "IIW2021",
           time: "09:25 - 10:15"
         }
       ]
@@ -123,7 +123,7 @@ const data = {
           ],
           classroom: "",
           students: "AGO2023",
-          time: "09:25 - 10:15"
+          time: "11:05 - 11:55"
         }
       ]
     }
