--- a/docs/professor/fabio_antonio_da_silva.mdx
+++ b/docs/professor/fabio_antonio_da_silva.mdx
@@ -11,9 +11,29 @@ const data = {
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "Sala 7-2",
+          classroom: "",
           students: "EIN2021",
-          time: "10:15 - 11:05"
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "Filosofia I - 1139",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "",
+          students: "IIW2023A",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Filosofia I - 1139",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "",
+          students: "IIW2023B",
+          time: "09:25 - 10:15"
         },
         {
           subject: "Filosofia I - 464",
@@ -24,6 +44,21 @@ const data = {
           classroom: "",
           students: "AGO2023",
           time: "11:05 - 11:55"
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
+        {
+          subject: "Filosofia 2 - 173",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "",
+          students: "EIN2022",
+          time: "10:15 - 11:05"
         },
         {
           subject: "Filosofia I - 464",
@@ -33,32 +68,17 @@ const data = {
           ],
           classroom: "",
           students: "AGO2023",
-          time: "15:55 - 16:45"
+          time: "09:25 - 10:15"
         },
         {
-          subject: "Filosofia II - 624",
+          subject: "Filosofia III - 1088",
           size: 1,
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "Sala 14-2",
-          students: "AGO2022",
-          time: "15:05 - 15:55"
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Sociologia I - 1071",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "BioPark-02",
-          students: "IIW2023B",
-          time: "09:25 - 10:15"
+          classroom: "",
+          students: "AGO2021",
+          time: "08:20 - 09:10"
         }
       ]
     },
@@ -66,24 +86,24 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Filosofia 4 - 223",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "Sala 8-2",
-          students: "EIN2020",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Filosofia I - 1139",
+          subject: "Filosofia II - 1232",
           size: 1,
           teachers: [
             "Fabio Antônio da Silva"
           ],
           classroom: "",
-          students: "IIW2023A",
-          time: "13:10 - 14:00"
+          students: "IIW2022B",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Filosofia II - 624",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "",
+          students: "AGO2022",
+          time: "15:05 - 15:55"
         }
       ]
     },
@@ -98,16 +118,51 @@ const data = {
           ],
           classroom: "",
           students: "EIN2023",
-          time: "07:30 - 08:20"
+          time: "08:20 - 09:10"
         },
         {
-          subject: "Filosofia 2 - 173",
+          subject: "Filosofia II - 624",
           size: 1,
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "Sala 6-2",
-          students: "EIN2022",
+          classroom: "",
+          students: "AGO2022",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Sociologia I - 1071",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "",
+          students: "IIW2023B",
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Sociologia I - 1071",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "",
+          students: "IIW2023B",
+          time: "15:55 - 16:45"
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
+          subject: "Filosofia 4 - 223",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "",
+          students: "EIN2020",
           time: "08:20 - 09:10"
         },
         {
@@ -118,42 +173,7 @@ const data = {
           ],
           classroom: "",
           students: "IIW2023A",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Filosofia II - 624",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "Sala 14-2",
-          students: "AGO2022",
           time: "11:05 - 11:55"
-        },
-        {
-          subject: "Filosofia III - 1088",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "15:05 - 15:55"
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Filosofia I - 1139",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "BioPark-02",
-          students: "IIW2023B",
-          time: "08:20 - 09:10"
         },
         {
           subject: "Filosofia I - 1139",
@@ -161,29 +181,9 @@ const data = {
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "BioPark-02",
+          classroom: "",
           students: "IIW2023B",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Filosofia II - 1232",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "BioPark-01",
-          students: "IIW2022B",
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Sociologia I - 1071",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "BioPark-02",
-          students: "IIW2023B",
-          time: "07:30 - 08:20"
         }
       ]
     }
