--- a/docs/professor/gabriele_antico_freiria.mdx
+++ b/docs/professor/gabriele_antico_freiria.mdx
@@ -4,41 +4,20 @@ const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "PCCC 2 - Sexualidade e gênero - 498",
-          size: 1,
-          teachers: [
-            "Gabriele Antico Freiria"
-          ],
-          classroom: "",
-          students: "BIO_ESPECIAL_2",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "PCCC 2 - Sexualidade e gênero - 498",
-          size: 1,
-          teachers: [
-            "Gabriele Antico Freiria"
-          ],
-          classroom: "",
-          students: "BIO_ESPECIAL_2",
-          time: "19:50 - 20:40"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Genética molecular - 85",
+          subject: "PCCC 2 - Sexualidade e gênero - 498",
           size: 1,
           teachers: [
             "Gabriele Antico Freiria"
           ],
-          classroom: "Sala 11-2",
-          students: "BIO2020",
-          time: "21:00 - 21:50"
+          classroom: "",
+          students: "BIO_ESPECIAL_2",
+          time: "21:50 - 22:40"
         },
         {
           subject: "PCCC 2 - Sexualidade e gênero - 498",
@@ -48,7 +27,7 @@ const data = {
           ],
           classroom: "",
           students: "BIO_ESPECIAL_2",
-          time: "19:50 - 20:40"
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -61,9 +40,9 @@ const data = {
           teachers: [
             "Gabriele Antico Freiria"
           ],
-          classroom: "Sala 11-2",
+          classroom: "",
           students: "BIO2020",
-          time: "19:00 - 19:50"
+          time: "21:50 - 22:40"
         }
       ]
     },
@@ -71,14 +50,14 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Biologia III - 1241",
-          size: 2,
+          subject: "Genética molecular - 85",
+          size: 1,
           teachers: [
             "Gabriele Antico Freiria"
           ],
-          classroom: "Laboratório de Biologia",
-          students: "IIW2021",
-          time: "07:30 - 08:20"
+          classroom: "",
+          students: "BIO2020",
+          time: "19:50 - 20:40"
         }
       ]
     },
@@ -86,14 +65,14 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Genética molecular - 85",
-          size: 1,
+          subject: "Biologia III - 1241",
+          size: 2,
           teachers: [
             "Gabriele Antico Freiria"
           ],
-          classroom: "Sala 11-2",
-          students: "BIO2020",
-          time: "21:50 - 22:40"
+          classroom: "",
+          students: "IIW2021",
+          time: "10:15 - 11:05"
         },
         {
           subject: "Genética molecular - 85",
@@ -101,9 +80,29 @@ const data = {
           teachers: [
             "Gabriele Antico Freiria"
           ],
-          classroom: "Sala 11-2",
+          classroom: "",
           students: "BIO2020",
           time: "21:00 - 21:50"
+        },
+        {
+          subject: "Genética molecular - 85",
+          size: 1,
+          teachers: [
+            "Gabriele Antico Freiria"
+          ],
+          classroom: "",
+          students: "BIO2020",
+          time: "21:50 - 22:40"
+        },
+        {
+          subject: "PCCC 2 - Sexualidade e gênero - 498",
+          size: 1,
+          teachers: [
+            "Gabriele Antico Freiria"
+          ],
+          classroom: "",
+          students: "BIO_ESPECIAL_2",
+          time: "19:00 - 19:50"
         }
       ]
     }
