--- a/docs/professor/grazielli_bueno.mdx
+++ b/docs/professor/grazielli_bueno.mdx
@@ -6,24 +6,14 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Projetos e Instalações Elétricas - 200",
-          size: 2,
-          teachers: [
-            "Grazielli Bueno"
-          ],
-          classroom: "Sala 7-2",
-          students: "EIN2021",
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "Segurança do Trabalho - 197",
           size: 1,
           teachers: [
             "Grazielli Bueno"
           ],
-          classroom: "Sala 7-2",
+          classroom: "",
           students: "EIN2021",
-          time: "09:25 - 10:15"
+          time: "11:05 - 11:55"
         }
       ]
     },
@@ -36,7 +26,7 @@ const data = {
           teachers: [
             "Grazielli Bueno"
           ],
-          classroom: "Sala 6-2",
+          classroom: "",
           students: "ELE2022",
           time: "21:00 - 21:50"
         },
@@ -46,7 +36,7 @@ const data = {
           teachers: [
             "Grazielli Bueno"
           ],
-          classroom: "Sala 8-2",
+          classroom: "",
           students: "EIN2020",
           time: "11:05 - 11:55"
         }
@@ -58,7 +48,18 @@ const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Projetos e Instalações Elétricas - 200",
+          size: 2,
+          teachers: [
+            "Grazielli Bueno"
+          ],
+          classroom: "",
+          students: "EIN2021",
+          time: "07:30 - 08:20"
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
@@ -69,7 +70,7 @@ const data = {
           teachers: [
             "Grazielli Bueno"
           ],
-          classroom: "Sala 6-2",
+          classroom: "",
           students: "ELE2022",
           time: "19:00 - 19:50"
         }
