--- a/docs/professor/humberto_fioravante_ferro.mdx
+++ b/docs/professor/humberto_fioravante_ferro.mdx
@@ -13,7 +13,7 @@ const data = {
           ],
           classroom: "",
           students: "TADS_ESP",
-          time: "19:50 - 20:40"
+          time: "21:50 - 22:40"
         }
       ]
     },
@@ -51,17 +51,7 @@ const data = {
           teachers: [
             "Humberto Fioravante Ferro"
           ],
-          classroom: "Laboratório de Informatica C",
-          students: "TGC2023",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Tecnologia e Automação comercial - 1512",
-          size: 2,
-          teachers: [
-            "Humberto Fioravante Ferro"
-          ],
-          classroom: "Laboratório de Informatica C",
+          classroom: "",
           students: "TGC2023",
           time: "21:00 - 21:50"
         }
@@ -69,7 +59,18 @@ const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Tecnologia e Automação comercial - 1512",
+          size: 2,
+          teachers: [
+            "Humberto Fioravante Ferro"
+          ],
+          classroom: "",
+          students: "TGC2023",
+          time: "21:00 - 21:50"
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
