--- a/docs/professor/jhones_donizetti_mendes.mdx
+++ b/docs/professor/jhones_donizetti_mendes.mdx
@@ -6,19 +6,59 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Geografia I - 463",
-          size: 2,
+          subject: "Geografia 2 - 177",
+          size: 1,
           teachers: [
             "Jhones Donizetti Mendes"
           ],
           classroom: "",
-          students: "AGO2023",
-          time: "07:30 - 08:20"
+          students: "EIN2022",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Trabalho de conclusão de curso I - 484",
+          size: 1,
+          teachers: [
+            "Jhones Donizetti Mendes"
+          ],
+          classroom: "",
+          students: "BIO2020",
+          time: "19:00 - 19:50"
         }
       ]
     },
     {
       dayName: "Terça-Feira",
+      dayClasses: [
+        {
+          subject: "Geografia II - 623",
+          size: 2,
+          teachers: [
+            "Jhones Donizetti Mendes"
+          ],
+          classroom: "",
+          students: "AGO2022",
+          time: "10:15 - 11:05"
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
+          subject: "Geografia 3 - 206",
+          size: 1,
+          teachers: [
+            "Jhones Donizetti Mendes"
+          ],
+          classroom: "",
+          students: "EIN2021",
+          time: "08:20 - 09:10"
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
       dayClasses: [
         {
           subject: "Geografia 1 - 126",
@@ -28,7 +68,7 @@ const data = {
           ],
           classroom: "",
           students: "EIN2023",
-          time: "10:15 - 11:05"
+          time: "11:05 - 11:55"
         },
         {
           subject: "Geografia 4 - 227",
@@ -36,49 +76,9 @@ const data = {
           teachers: [
             "Jhones Donizetti Mendes"
           ],
-          classroom: "Sala 8-2",
+          classroom: "",
           students: "EIN2020",
           time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Geografia II - 623",
-          size: 2,
-          teachers: [
-            "Jhones Donizetti Mendes"
-          ],
-          classroom: "Sala 14-2",
-          students: "AGO2022",
-          time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Geografia 2 - 177",
-          size: 1,
-          teachers: [
-            "Jhones Donizetti Mendes"
-          ],
-          classroom: "Sala 6-2",
-          students: "EIN2022",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Geografia 3 - 206",
-          size: 1,
-          teachers: [
-            "Jhones Donizetti Mendes"
-          ],
-          classroom: "Sala 7-2",
-          students: "EIN2021",
-          time: "09:25 - 10:15"
         },
         {
           subject: "Trabalho de conclusão de curso I - 484",
@@ -86,7 +86,7 @@ const data = {
           teachers: [
             "Jhones Donizetti Mendes"
           ],
-          classroom: "Sala 11-2",
+          classroom: "",
           students: "BIO2020",
           time: "21:00 - 21:50"
         }
@@ -96,14 +96,14 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Trabalho de conclusão de curso I - 484",
-          size: 1,
+          subject: "Geografia I - 463",
+          size: 2,
           teachers: [
             "Jhones Donizetti Mendes"
           ],
-          classroom: "Sala 11-2",
-          students: "BIO2020",
-          time: "19:50 - 20:40"
+          classroom: "",
+          students: "AGO2023",
+          time: "09:25 - 10:15"
         }
       ]
     }
