--- a/docs/professor/josiane_paula_maltauro.mdx
+++ b/docs/professor/josiane_paula_maltauro.mdx
@@ -6,20 +6,41 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Arte I - 1235",
+          subject: "Projeto Integrador I - 2334",
           size: 1,
           teachers: [
             "Josiane Paula Maltauro"
           ],
-          classroom: "BioPark-01",
-          students: "IIW2022B",
-          time: "09:25 - 10:15"
+          classroom: "",
+          students: "COM2023",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Projeto Integrador I - 2334",
+          size: 1,
+          teachers: [
+            "Josiane Paula Maltauro"
+          ],
+          classroom: "",
+          students: "COM2023",
+          time: "08:20 - 09:10"
         }
       ]
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Arte I - 1235",
+          size: 1,
+          teachers: [
+            "Josiane Paula Maltauro"
+          ],
+          classroom: "",
+          students: "IIW2022B",
+          time: "09:25 - 10:15"
+        }
+      ]
     },
     {
       dayName: "Quarta-Feira",
@@ -35,13 +56,13 @@ const data = {
           time: "11:05 - 11:55"
         },
         {
-          subject: "Cultura e Cinema Nacional III - 1193",
+          subject: "Cultura e Cinema Nacional II - 1192",
           size: 1,
           teachers: [
             "Josiane Paula Maltauro"
           ],
-          classroom: "Sala 15-2",
-          students: "AGO2021",
+          classroom: "",
+          students: "AGO2022",
           time: "09:25 - 10:15"
         }
       ]
@@ -50,13 +71,13 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Arte I - 1235",
+          subject: "Cultura e Cinema Nacional III - 1193",
           size: 1,
           teachers: [
             "Josiane Paula Maltauro"
           ],
-          classroom: "BioPark-01",
-          students: "IIW2022B",
+          classroom: "",
+          students: "AGO2021",
           time: "09:25 - 10:15"
         }
       ]
@@ -65,34 +86,14 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Cultura e Cinema Nacional II - 1192",
-          size: 1,
-          teachers: [
-            "Josiane Paula Maltauro"
-          ],
-          classroom: "Sala 14-2",
-          students: "AGO2022",
-          time: "13:10 - 14:00"
-        },
-        {
-          subject: "Projeto Integrador I - 2334",
+          subject: "Arte I - 1235",
           size: 1,
           teachers: [
             "Josiane Paula Maltauro"
           ],
           classroom: "",
-          students: "COM2023",
+          students: "IIW2022B",
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Projeto Integrador I - 2334",
-          size: 1,
-          teachers: [
-            "Josiane Paula Maltauro"
-          ],
-          classroom: "",
-          students: "COM2023",
-          time: "15:05 - 15:55"
         }
       ]
     }
