--- a/docs/professor/karina_dias_espartosa.mdx
+++ b/docs/professor/karina_dias_espartosa.mdx
@@ -6,14 +6,14 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Biologia II - 1228",
+          subject: "Biologia II - 616",
           size: 2,
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "Laboratório de Biologia",
-          students: "IIW2022A",
-          time: "07:30 - 08:20"
+          classroom: "",
+          students: "AGO2022",
+          time: "09:25 - 10:15"
         },
         {
           subject: "Bioquímica - 71",
@@ -21,19 +21,9 @@ const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "Laboratório de Química",
+          classroom: "",
           students: "BIO_ESPECIAL",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Bioquímica - 71",
-          size: 1,
-          teachers: [
-            "Karina Dias Espartosa"
-          ],
-          classroom: "Laboratório de Química",
-          students: "BIO_ESPECIAL",
-          time: "19:00 - 19:50"
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -41,14 +31,14 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Biologia 3 - 202",
+          subject: "Biologia II - 1228",
           size: 2,
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "Laboratório de Biologia",
-          students: "EIN2021",
-          time: "09:25 - 10:15"
+          classroom: "",
+          students: "IIW2022A",
+          time: "10:15 - 11:05"
         },
         {
           subject: "Sistemática vegetal I - 660",
@@ -56,7 +46,17 @@ const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "Sala 9-2",
+          classroom: "",
+          students: "BIO_ESPECIAL",
+          time: "19:50 - 20:40"
+        },
+        {
+          subject: "Sistemática vegetal I - 660",
+          size: 1,
+          teachers: [
+            "Karina Dias Espartosa"
+          ],
+          classroom: "",
           students: "BIO_ESPECIAL",
           time: "21:00 - 21:50"
         },
@@ -66,9 +66,9 @@ const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "Sala 9-2",
+          classroom: "",
           students: "BIO_ESPECIAL",
-          time: "19:50 - 20:40"
+          time: "19:00 - 19:50"
         }
       ]
     },
@@ -76,14 +76,14 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Bioquímica - 71",
-          size: 1,
+          subject: "Biologia 3 - 202",
+          size: 2,
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "Laboratório de Química",
-          students: "BIO_ESPECIAL",
-          time: "19:00 - 19:50"
+          classroom: "",
+          students: "EIN2021",
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -91,14 +91,14 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Sistemática vegetal I - 660",
+          subject: "Bioquímica - 71",
           size: 1,
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "Sala 9-2",
+          classroom: "",
           students: "BIO_ESPECIAL",
-          time: "19:00 - 19:50"
+          time: "21:50 - 22:40"
         }
       ]
     },
@@ -106,14 +106,14 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Biologia II - 616",
-          size: 2,
+          subject: "Bioquímica - 71",
+          size: 1,
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "Laboratório de Biologia",
-          students: "AGO2022",
-          time: "07:30 - 08:20"
+          classroom: "",
+          students: "BIO_ESPECIAL",
+          time: "19:50 - 20:40"
         },
         {
           subject: "Bioquímica - 71",
@@ -121,7 +121,7 @@ const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "Laboratório de Química",
+          classroom: "",
           students: "BIO_ESPECIAL",
           time: "19:00 - 19:50"
         },
@@ -131,9 +131,9 @@ const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "Sala 9-2",
+          classroom: "",
           students: "BIO_ESPECIAL",
-          time: "19:50 - 20:40"
+          time: "21:00 - 21:50"
         }
       ]
     }
