--- a/docs/professor/kathia_regina_kunzler_bechlin.mdx
+++ b/docs/professor/kathia_regina_kunzler_bechlin.mdx
@@ -6,14 +6,14 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Química I - 461",
+          subject: "Química III - 1243",
           size: 2,
           teachers: [
             "Kathia Regina Kunzler Bechlin"
           ],
-          classroom: "Laboratório de Química",
-          students: "AGO2023",
-          time: "09:25 - 10:15"
+          classroom: "",
+          students: "IIW2021",
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -21,34 +21,24 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Química II - 1230",
-          size: 2,
-          teachers: [
-            "Kathia Regina Kunzler Bechlin"
-          ],
-          classroom: "Sala 11-2",
-          students: "IIW2022A",
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "Química II - 618",
           size: 2,
           teachers: [
             "Kathia Regina Kunzler Bechlin"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGO2022",
           time: "15:05 - 15:55"
         },
         {
-          subject: "Química III - 1243",
+          subject: "Química III - 1085",
           size: 2,
           teachers: [
             "Kathia Regina Kunzler Bechlin"
           ],
-          classroom: "Laboratório de Química",
-          students: "IIW2021",
-          time: "07:30 - 08:20"
+          classroom: "",
+          students: "AGO2021",
+          time: "13:10 - 14:00"
         }
       ]
     },
@@ -64,26 +54,38 @@ const data = {
           classroom: "",
           students: "IIW2023A",
           time: "07:30 - 08:20"
-        },
-        {
-          subject: "Química III - 1085",
-          size: 2,
-          teachers: [
-            "Kathia Regina Kunzler Bechlin"
-          ],
-          classroom: "Laboratório de Química",
-          students: "AGO2021",
-          time: "13:10 - 14:00"
         }
       ]
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Química II - 1230",
+          size: 2,
+          teachers: [
+            "Kathia Regina Kunzler Bechlin"
+          ],
+          classroom: "",
+          students: "IIW2022A",
+          time: "15:05 - 15:55"
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Química I - 461",
+          size: 2,
+          teachers: [
+            "Kathia Regina Kunzler Bechlin"
+          ],
+          classroom: "",
+          students: "AGO2023",
+          time: "07:30 - 08:20"
+        }
+      ]
     }
   ],
   time: [
