--- a/docs/professor/luiz_inacio_chaves.mdx
+++ b/docs/professor/luiz_inacio_chaves.mdx
@@ -11,7 +11,7 @@ const data = {
           teachers: [
             "Luiz Inácio Chaves"
           ],
-          classroom: "Laboratório de Usinagem B4",
+          classroom: "",
           students: "EIN2020",
           time: "07:30 - 08:20"
         }
@@ -21,14 +21,14 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Máquinas Térmicas de Fluxo - 111",
+          subject: "Processos de Fabricação 2 - 1573",
           size: 2,
           teachers: [
             "Luiz Inácio Chaves"
           ],
-          classroom: "Laboratório de Materiais e Hidráulica B4",
-          students: "ELM2022",
-          time: "21:00 - 21:50"
+          classroom: "",
+          students: "EIN2021",
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -41,7 +41,7 @@ const data = {
           teachers: [
             "Luiz Inácio Chaves"
           ],
-          classroom: "Laboratório de Usinagem B4",
+          classroom: "",
           students: "ELM2023",
           time: "19:00 - 19:50"
         }
@@ -56,7 +56,7 @@ const data = {
           teachers: [
             "Luiz Inácio Chaves"
           ],
-          classroom: "Laboratório de Materiais e Hidráulica B4",
+          classroom: "",
           students: "ELM2022",
           time: "19:00 - 19:50"
         },
@@ -66,9 +66,9 @@ const data = {
           teachers: [
             "Luiz Inácio Chaves"
           ],
-          classroom: "Laboratório de Materiais e Hidráulica B4",
+          classroom: "",
           students: "EIN2020",
-          time: "10:15 - 11:05"
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -76,14 +76,14 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Processos de Fabricação 2 - 1573",
+          subject: "Máquinas Térmicas de Fluxo - 111",
           size: 2,
           teachers: [
             "Luiz Inácio Chaves"
           ],
-          classroom: "Laboratório de Usinagem B4",
-          students: "EIN2021",
-          time: "09:25 - 10:15"
+          classroom: "",
+          students: "ELM2022",
+          time: "19:00 - 19:50"
         }
       ]
     }
