--- a/docs/professor/marcia_aparecida_barbosa.mdx
+++ b/docs/professor/marcia_aparecida_barbosa.mdx
@@ -8,6 +8,10 @@ const data = {
     },
     {
       dayName: "Terça-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quarta-Feira",
       dayClasses: [
         {
           subject: "Estágio curricular supervisionado em ciências I - 84",
@@ -15,18 +19,18 @@ const data = {
           teachers: [
             "Marcia Aparecida Barbosa"
           ],
-          classroom: "Sala 9-2",
+          classroom: "",
           students: "BIO_ESPECIAL",
-          time: "21:50 - 22:40"
+          time: "19:00 - 19:50"
         }
       ]
     },
     {
-      dayName: "Quarta-Feira",
+      dayName: "Quinta-Feira",
       dayClasses: []
     },
     {
-      dayName: "Quinta-Feira",
+      dayName: "Sexta-Feira",
       dayClasses: [
         {
           subject: "PCCC 4 - Tecnologia da informação e comunicação na educação - 783",
@@ -34,15 +38,11 @@ const data = {
           teachers: [
             "Marcia Aparecida Barbosa"
           ],
-          classroom: "Sala 9-2",
+          classroom: "",
           students: "BIO_ESPECIAL",
-          time: "19:50 - 20:40"
+          time: "21:50 - 22:40"
         }
       ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: []
     }
   ],
   time: [
