--- a/docs/professor/mauro_cesar_de_souza_siena.mdx
+++ b/docs/professor/mauro_cesar_de_souza_siena.mdx
@@ -6,14 +6,14 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Matemática 2 - 185",
+          subject: "Matemática I - 2327",
           size: 2,
           teachers: [
             "Mauro César de Souza Siena"
           ],
-          classroom: "Sala 6-2",
-          students: "EIN2022",
-          time: "07:30 - 08:20"
+          classroom: "",
+          students: "COM2023",
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -26,38 +26,44 @@ const data = {
           teachers: [
             "Mauro César de Souza Siena"
           ],
-          classroom: "Sala 7-2",
+          classroom: "",
           students: "EIN2021",
           time: "07:30 - 08:20"
-        },
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
         {
           subject: "Matemática 4 - 234",
           size: 2,
           teachers: [
             "Mauro César de Souza Siena"
           ],
-          classroom: "Sala 8-2",
+          classroom: "",
           students: "EIN2020",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Matemática I - 2327",
-          size: 2,
-          teachers: [
-            "Mauro César de Souza Siena"
-          ],
-          classroom: "Sala 3-1",
-          students: "COM2023",
-          time: "13:10 - 14:00"
+          time: "07:30 - 08:20"
         }
       ]
     },
     {
-      dayName: "Quarta-Feira",
-      dayClasses: []
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Matemática 2 - 185",
+          size: 2,
+          teachers: [
+            "Mauro César de Souza Siena"
+          ],
+          classroom: "",
+          students: "EIN2022",
+          time: "10:15 - 11:05"
+        }
+      ]
     },
     {
-      dayName: "Quinta-Feira",
+      dayName: "Sexta-Feira",
       dayClasses: [
         {
           subject: "Matemática 4 - 234",
@@ -65,15 +71,10 @@ const data = {
           teachers: [
             "Mauro César de Souza Siena"
           ],
-          classroom: "Sala 8-2",
+          classroom: "",
           students: "EIN2020",
-          time: "09:25 - 10:15"
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
+          time: "07:30 - 08:20"
+        },
         {
           subject: "Matemática Financeira - 1510",
           size: 2,
@@ -82,7 +83,7 @@ const data = {
           ],
           classroom: "",
           students: "TGC2023",
-          time: "19:00 - 19:50"
+          time: "21:00 - 21:50"
         },
         {
           subject: "Matemática I - 2327",
@@ -90,9 +91,9 @@ const data = {
           teachers: [
             "Mauro César de Souza Siena"
           ],
-          classroom: "Sala 3-1",
+          classroom: "",
           students: "COM2023",
-          time: "07:30 - 08:20"
+          time: "09:25 - 10:15"
         }
       ]
     }
