--- a/docs/professor/milton_aparecido_azevedo.mdx
+++ b/docs/professor/milton_aparecido_azevedo.mdx
@@ -11,39 +11,14 @@ const data = {
           teachers: [
             "Milton Aparecido Azevedo"
           ],
-          classroom: "Sala 11-2",
-          students: "IIW2022A",
+          classroom: "",
+          students: "IIW2022B",
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "História III - 2236",
-          size: 1,
-          teachers: [
-            "Milton Aparecido Azevedo"
-          ],
-          classroom: "Sala 12-2",
-          students: "IIW2021",
-          time: "11:05 - 11:55"
         }
       ]
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "História II - 1234",
-          size: 1,
-          teachers: [
-            "Milton Aparecido Azevedo"
-          ],
-          classroom: "BioPark-01",
-          students: "IIW2022B",
-          time: "11:05 - 11:55"
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
       dayClasses: [
         {
           subject: "História I - 1224",
@@ -53,7 +28,7 @@ const data = {
           ],
           classroom: "",
           students: "IIW2023A",
-          time: "14:00 - 14:50"
+          time: "11:05 - 11:55"
         },
         {
           subject: "História II - 1234",
@@ -61,8 +36,23 @@ const data = {
           teachers: [
             "Milton Aparecido Azevedo"
           ],
-          classroom: "BioPark-01",
-          students: "IIW2022B",
+          classroom: "",
+          students: "IIW2022A",
+          time: "09:25 - 10:15"
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
+          subject: "História III - 2236",
+          size: 1,
+          teachers: [
+            "Milton Aparecido Azevedo"
+          ],
+          classroom: "",
+          students: "IIW2021",
           time: "09:25 - 10:15"
         }
       ]
@@ -76,8 +66,18 @@ const data = {
           teachers: [
             "Milton Aparecido Azevedo"
           ],
-          classroom: "BioPark-02",
+          classroom: "",
           students: "IIW2023B",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "História II - 1234",
+          size: 1,
+          teachers: [
+            "Milton Aparecido Azevedo"
+          ],
+          classroom: "",
+          students: "IIW2022B",
           time: "09:25 - 10:15"
         }
       ]
@@ -91,9 +91,9 @@ const data = {
           teachers: [
             "Milton Aparecido Azevedo"
           ],
-          classroom: "Sala 11-2",
+          classroom: "",
           students: "IIW2022A",
-          time: "09:25 - 10:15"
+          time: "11:05 - 11:55"
         },
         {
           subject: "História III - 2236",
@@ -101,9 +101,9 @@ const data = {
           teachers: [
             "Milton Aparecido Azevedo"
           ],
-          classroom: "Sala 12-2",
+          classroom: "",
           students: "IIW2021",
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
         }
       ]
     }
