--- a/docs/professor/novo_professor_de_administracao_pss.mdx
+++ b/docs/professor/novo_professor_de_administracao_pss.mdx
@@ -13,17 +13,17 @@ const data = {
           ],
           classroom: "",
           students: "TGC2023",
-          time: "21:00 - 21:50"
+          time: "19:00 - 19:50"
         },
         {
-          subject: "Plano de Negócio - 1506",
+          subject: "Técnicas de Vendas e Negociação - 1493",
           size: 2,
           teachers: [
             "Novo professor de Administração PSS - 40h"
           ],
-          classroom: "Sala 15-2",
-          students: "TGC2021",
-          time: "19:00 - 19:50"
+          classroom: "",
+          students: "TGC2022",
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -31,7 +31,7 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Gestão Empresarial - 1508",
+          subject: "Marketing e Comportamento do Consumidor - 1511",
           size: 2,
           teachers: [
             "Novo professor de Administração PSS - 40h"
@@ -41,13 +41,13 @@ const data = {
           time: "21:00 - 21:50"
         },
         {
-          subject: "Técnicas de Vendas e Negociação - 1493",
+          subject: "Plano de Negócio - 1506",
           size: 2,
           teachers: [
             "Novo professor de Administração PSS - 40h"
           ],
-          classroom: "Sala 3-1",
-          students: "TGC2022",
+          classroom: "",
+          students: "TGC2021",
           time: "19:00 - 19:50"
         }
       ]
@@ -56,22 +56,22 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Planejamento e Gestão estratégica - 1500",
+          subject: "Gestão Empresarial - 1508",
           size: 2,
           teachers: [
             "Novo professor de Administração PSS - 40h"
           ],
-          classroom: "Sala 15-2",
-          students: "TGC2021",
+          classroom: "",
+          students: "TGC2023",
           time: "19:00 - 19:50"
         },
         {
-          subject: "Plano de Marketing - 1498",
+          subject: "Gestão Estratégica de Pessoas - 1496",
           size: 2,
           teachers: [
             "Novo professor de Administração PSS - 40h"
           ],
-          classroom: "Sala 3-1",
+          classroom: "",
           students: "TGC2022",
           time: "21:00 - 21:50"
         }
@@ -91,16 +91,6 @@ const data = {
           time: "15:05 - 15:55"
         },
         {
-          subject: "Gestão Estratégica de Pessoas - 1496",
-          size: 2,
-          teachers: [
-            "Novo professor de Administração PSS - 40h"
-          ],
-          classroom: "Sala 3-1",
-          students: "TGC2022",
-          time: "19:00 - 19:50"
-        },
-        {
           subject: "Gestão de pessoas - 2331",
           size: 2,
           teachers: [
@@ -111,13 +101,23 @@ const data = {
           time: "13:10 - 14:00"
         },
         {
-          subject: "Marketing e Comportamento do Consumidor - 1511",
+          subject: "Planejamento e Gestão estratégica - 1500",
           size: 2,
           teachers: [
             "Novo professor de Administração PSS - 40h"
           ],
           classroom: "",
-          students: "TGC2023",
+          students: "TGC2021",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Planejamento e Gestão estratégica - 1500",
+          size: 2,
+          teachers: [
+            "Novo professor de Administração PSS - 40h"
+          ],
+          classroom: "",
+          students: "TGC2021",
           time: "21:00 - 21:50"
         }
       ]
@@ -133,17 +133,17 @@ const data = {
           ],
           classroom: "",
           students: "TGC2023",
-          time: "21:00 - 21:50"
+          time: "19:00 - 19:50"
         },
         {
-          subject: "Planejamento e Gestão estratégica - 1500",
+          subject: "Plano de Marketing - 1498",
           size: 2,
           teachers: [
             "Novo professor de Administração PSS - 40h"
           ],
-          classroom: "Sala 15-2",
-          students: "TGC2021",
-          time: "19:00 - 19:50"
+          classroom: "",
+          students: "TGC2022",
+          time: "21:00 - 21:50"
         }
       ]
     }
