--- a/docs/professor/novo_professor_de_eletrica_pss.mdx
+++ b/docs/professor/novo_professor_de_eletrica_pss.mdx
@@ -4,6 +4,10 @@ const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Terça-Feira",
       dayClasses: [
         {
           subject: "Eletrônica de Potência - 114",
@@ -11,25 +15,11 @@ const data = {
           teachers: [
             "Novo Professor de Elétrica PSS - 40h"
           ],
-          classroom: "Laboratório de Eletrônica",
+          classroom: "",
           students: "ELM2022",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Projetos elétricos industriais - 2232",
-          size: 2,
-          teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
-          ],
-          classroom: "Sala 6-2",
-          students: "ELE2022",
           time: "19:00 - 19:50"
         }
       ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
@@ -40,7 +30,7 @@ const data = {
           teachers: [
             "Novo Professor de Elétrica PSS - 40h"
           ],
-          classroom: "Laboratório de Eletrônica",
+          classroom: "",
           students: "ELM2022",
           time: "21:00 - 21:50"
         }
@@ -55,7 +45,17 @@ const data = {
           teachers: [
             "Novo Professor de Elétrica PSS - 40h"
           ],
-          classroom: "Sala 6-2",
+          classroom: "",
+          students: "ELE2022",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Eletrônica de Potência - 2228",
+          size: 2,
+          teachers: [
+            "Novo Professor de Elétrica PSS - 40h"
+          ],
+          classroom: "",
           students: "ELE2022",
           time: "21:00 - 21:50"
         }
@@ -65,12 +65,12 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Eletrônica de Potência - 2228",
+          subject: "Projetos elétricos industriais - 2232",
           size: 2,
           teachers: [
             "Novo Professor de Elétrica PSS - 40h"
           ],
-          classroom: "Sala 6-2",
+          classroom: "",
           students: "ELE2022",
           time: "21:00 - 21:50"
         }
