--- a/docs/professor/rafael_silva_santos.mdx
+++ b/docs/professor/rafael_silva_santos.mdx
@@ -6,6 +6,16 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Comércio Eletrônico e Mídias Digitais - 1499",
+          size: 2,
+          teachers: [
+            "Rafael Silva Santos"
+          ],
+          classroom: "",
+          students: "TGC2021",
+          time: "21:00 - 21:50"
+        },
+        {
           subject: "Informática Básica - 2340",
           size: 1,
           teachers: [
@@ -14,26 +24,6 @@ const data = {
           classroom: "",
           students: "TAL2023",
           time: "19:00 - 19:50"
-        },
-        {
-          subject: "Informática Instrumental - 153",
-          size: 2,
-          teachers: [
-            "Rafael Silva Santos"
-          ],
-          classroom: "Laboratório de Informatica C",
-          students: "ELM2023",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Prototipação de Interfaces e Interação Humano-Computador - 1251",
-          size: 2,
-          teachers: [
-            "Rafael Silva Santos"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: "IIW2021",
-          time: "09:25 - 10:15"
         }
       ]
     },
@@ -41,14 +31,14 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Comércio Eletrônico e Mídias Digitais - 1499",
-          size: 2,
+          subject: "Informática Básica - 2340",
+          size: 1,
           teachers: [
             "Rafael Silva Santos"
           ],
-          classroom: "Sala 15-2",
-          students: "TGC2021",
-          time: "19:00 - 19:50"
+          classroom: "",
+          students: "TAL2023",
+          time: "19:50 - 20:40"
         }
       ]
     },
@@ -61,19 +51,19 @@ const data = {
           teachers: [
             "Rafael Silva Santos"
           ],
-          classroom: "Sala 11-2",
+          classroom: "",
           students: "IIW2022A",
-          time: "10:15 - 11:05"
+          time: "09:25 - 10:15"
         },
         {
-          subject: "Informática Básica - 2340",
-          size: 1,
+          subject: "Comércio Eletrônico e Mídias Digitais - 1499",
+          size: 2,
           teachers: [
             "Rafael Silva Santos"
           ],
           classroom: "",
-          students: "TAL2023",
-          time: "21:00 - 21:50"
+          students: "TGC2021",
+          time: "19:00 - 19:50"
         }
       ]
     },
@@ -88,7 +78,17 @@ const data = {
           ],
           classroom: "",
           students: "TAL2023",
-          time: "19:00 - 19:50"
+          time: "19:50 - 20:40"
+        },
+        {
+          subject: "Prototipação de Interfaces e Interação Humano-Computador - 1251",
+          size: 2,
+          teachers: [
+            "Rafael Silva Santos"
+          ],
+          classroom: "",
+          students: "IIW2021",
+          time: "13:10 - 14:00"
         }
       ]
     },
@@ -101,19 +101,19 @@ const data = {
           teachers: [
             "Rafael Silva Santos"
           ],
-          classroom: "Sala 11-2",
+          classroom: "",
           students: "IIW2022A",
-          time: "07:30 - 08:20"
+          time: "09:25 - 10:15"
         },
         {
-          subject: "Comércio Eletrônico e Mídias Digitais - 1499",
+          subject: "Informática Instrumental - 153",
           size: 2,
           teachers: [
             "Rafael Silva Santos"
           ],
-          classroom: "Sala 15-2",
-          students: "TGC2021",
-          time: "21:00 - 21:50"
+          classroom: "",
+          students: "ELM2023",
+          time: "19:00 - 19:50"
         }
       ]
     }
