--- a/docs/professor/renato_lada_guerreiro.mdx
+++ b/docs/professor/renato_lada_guerreiro.mdx
@@ -11,9 +11,19 @@ const data = {
           teachers: [
             "Renato Lada Guerreiro"
           ],
-          classroom: "BioPark-01",
-          students: "IIW2022B",
+          classroom: "",
+          students: "IIW2022A",
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Geografia I - 1233",
+          size: 2,
+          teachers: [
+            "Renato Lada Guerreiro"
+          ],
+          classroom: "",
+          students: "IIW2022B",
+          time: "13:10 - 14:00"
         }
       ]
     },
@@ -21,13 +31,13 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Geografia I - 1233",
+          subject: "Geografia II - 1247",
           size: 2,
           teachers: [
             "Renato Lada Guerreiro"
           ],
-          classroom: "Sala 11-2",
-          students: "IIW2022A",
+          classroom: "",
+          students: "IIW2021",
           time: "07:30 - 08:20"
         },
         {
@@ -36,9 +46,9 @@ const data = {
           teachers: [
             "Renato Lada Guerreiro"
           ],
-          classroom: "Sala 11-2",
+          classroom: "",
           students: "BIO2020",
-          time: "21:50 - 22:40"
+          time: "19:50 - 20:40"
         }
       ]
     },
@@ -51,14 +61,18 @@ const data = {
           teachers: [
             "Renato Lada Guerreiro"
           ],
-          classroom: "Sala 11-2",
+          classroom: "",
           students: "BIO2020",
-          time: "21:50 - 22:40"
+          time: "21:00 - 21:50"
         }
       ]
     },
     {
       dayName: "Quinta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Sexta-Feira",
       dayClasses: [
         {
           subject: "Geologia e paleontologia - 491",
@@ -66,9 +80,9 @@ const data = {
           teachers: [
             "Renato Lada Guerreiro"
           ],
-          classroom: "Sala 11-2",
+          classroom: "",
           students: "BIO2020",
-          time: "19:50 - 20:40"
+          time: "19:00 - 19:50"
         },
         {
           subject: "Geologia e paleontologia - 491",
@@ -76,24 +90,9 @@ const data = {
           teachers: [
             "Renato Lada Guerreiro"
           ],
-          classroom: "Sala 11-2",
+          classroom: "",
           students: "BIO2020",
-          time: "19:00 - 19:50"
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Geografia II - 1247",
-          size: 2,
-          teachers: [
-            "Renato Lada Guerreiro"
-          ],
-          classroom: "Sala 12-2",
-          students: "IIW2021",
-          time: "09:25 - 10:15"
+          time: "19:50 - 20:40"
         }
       ]
     }
