--- a/docs/professor/sergio_takahashi.mdx
+++ b/docs/professor/sergio_takahashi.mdx
@@ -6,43 +6,13 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Desenho Técnico - 2226",
-          size: 2,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
-          students: "ELE2023",
-          time: "21:00 - 21:50"
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Metrologia - 1550",
-          size: 1,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
-          classroom: "Laboratório de Metrologia B4",
-          students: "EIN2022",
-          time: "10:15 - 11:05"
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: [
-        {
           subject: "Desenho Técnico - 1529",
           size: 2,
           teachers: [
             "Sérgio Takahashi"
           ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
-          students: "EIN2023 - GB",
+          classroom: "",
+          students: "EIN2023 - Grupo B",
           time: "09:25 - 10:15"
         },
         {
@@ -51,8 +21,43 @@ const data = {
           teachers: [
             "Sérgio Takahashi"
           ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
-          students: "EIN2023 - GB",
+          classroom: "",
+          students: "EIN2023 - Grupo B",
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "Metrologia - 1550",
+          size: 1,
+          teachers: [
+            "Sérgio Takahashi"
+          ],
+          classroom: "",
+          students: "EIN2022",
+          time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
+        {
+          subject: "Desenho Técnico - 1529",
+          size: 2,
+          teachers: [
+            "Sérgio Takahashi"
+          ],
+          classroom: "",
+          students: "EIN2023 - Grupo A",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Desenho Técnico - 1529",
+          size: 1,
+          teachers: [
+            "Sérgio Takahashi"
+          ],
+          classroom: "",
+          students: "EIN2023 - Grupo A",
           time: "11:05 - 11:55"
         },
         {
@@ -61,8 +66,18 @@ const data = {
           teachers: [
             "Sérgio Takahashi"
           ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
+          classroom: "",
           students: "ELE2023",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Metrologia - 108",
+          size: 2,
+          teachers: [
+            "Sérgio Takahashi"
+          ],
+          classroom: "",
+          students: "ELM2022",
           time: "21:00 - 21:50"
         },
         {
@@ -71,9 +86,24 @@ const data = {
           teachers: [
             "Sérgio Takahashi"
           ],
-          classroom: "Laboratório de Usinagem B4",
+          classroom: "",
           students: "EIN2022",
           time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
+          subject: "Desenho Técnico - 2226",
+          size: 2,
+          teachers: [
+            "Sérgio Takahashi"
+          ],
+          classroom: "",
+          students: "ELE2023",
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -83,38 +113,7 @@ const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Desenho Técnico - 1529",
-          size: 2,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
-          students: "EIN2023 - GA",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Desenho Técnico - 1529",
-          size: 1,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
-          students: "EIN2023 - GA",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Metrologia - 108",
-          size: 2,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
-          classroom: "Laboratório de Metrologia B4",
-          students: "ELM2022",
-          time: "19:00 - 19:50"
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
