--- a/docs/professor/sonia_maria_mandotti.mdx
+++ b/docs/professor/sonia_maria_mandotti.mdx
@@ -11,34 +11,9 @@ const data = {
           teachers: [
             "Sônia Maria Mandotti"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGO2022",
           time: "11:05 - 11:55"
-        },
-        {
-          subject: "Planejamento Agropecuário - 2215",
-          size: 2,
-          teachers: [
-            "Sônia Maria Mandotti"
-          ],
-          classroom: "Sala 14-2",
-          students: "AGR2022",
-          time: "19:00 - 19:50"
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Culturas I - 627",
-          size: 2,
-          teachers: [
-            "Sônia Maria Mandotti"
-          ],
-          classroom: "Sala 14-2",
-          students: "AGO2022",
-          time: "09:25 - 10:15"
         },
         {
           subject: "Culturas II - 2221",
@@ -46,9 +21,24 @@ const data = {
           teachers: [
             "Sônia Maria Mandotti"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGR2022",
           time: "21:00 - 21:50"
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
+        {
+          subject: "Culturas II - 1091",
+          size: 2,
+          teachers: [
+            "Sônia Maria Mandotti"
+          ],
+          classroom: "",
+          students: "AGO2021",
+          time: "15:05 - 15:55"
         }
       ]
     },
@@ -60,22 +50,12 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Culturas II - 1091",
-          size: 1,
-          teachers: [
-            "Sônia Maria Mandotti"
-          ],
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "15:55 - 16:45"
-        },
-        {
-          subject: "Culturas II - 2221",
+          subject: "Planejamento Agropecuário - 2215",
           size: 2,
           teachers: [
             "Sônia Maria Mandotti"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGR2022",
           time: "19:00 - 19:50"
         }
@@ -85,14 +65,34 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Culturas II - 1091",
+          subject: "Culturas I - 627",
           size: 2,
           teachers: [
             "Sônia Maria Mandotti"
           ],
-          classroom: "Sala 15-2",
-          students: "AGO2021",
+          classroom: "",
+          students: "AGO2022",
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Culturas II - 1091",
+          size: 1,
+          teachers: [
+            "Sônia Maria Mandotti"
+          ],
+          classroom: "",
+          students: "AGO2021",
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "Culturas II - 2221",
+          size: 2,
+          teachers: [
+            "Sônia Maria Mandotti"
+          ],
+          classroom: "",
+          students: "AGR2022",
+          time: "19:00 - 19:50"
         }
       ]
     }
