--- a/docs/professor/tiago_henrique_dos_santos.mdx
+++ b/docs/professor/tiago_henrique_dos_santos.mdx
@@ -4,10 +4,6 @@ const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Terça-Feira",
       dayClasses: [
         {
           subject: "Eletricidade Básica - 595",
@@ -15,28 +11,53 @@ const data = {
           teachers: [
             "Tiago Henrique dos Santos"
           ],
-          classroom: "Laboratório de Eletrônica",
+          classroom: "",
           students: "ELE2023",
           time: "19:00 - 19:50"
         },
         {
-          subject: "Eletrônica - 1554",
+          subject: "Eletricidade e Medidas Elétricas - 1530",
           size: 2,
           teachers: [
             "Tiago Henrique dos Santos"
           ],
-          classroom: "Laboratório de Eletrônica",
-          students: "EIN2022",
-          time: "07:30 - 08:20"
+          classroom: "",
+          students: "EIN2023 - Grupo A",
+          time: "09:25 - 10:15"
         },
         {
-          subject: "Eletrônica - 1554",
+          subject: "Eletricidade e Medidas Elétricas - 1530",
           size: 1,
           teachers: [
             "Tiago Henrique dos Santos"
           ],
-          classroom: "Laboratório de Eletrônica",
-          students: "EIN2022",
+          classroom: "",
+          students: "EIN2023 - Grupo A",
+          time: "08:20 - 09:10"
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
+        {
+          subject: "Eletricidade e Medidas Elétricas - 1530",
+          size: 2,
+          teachers: [
+            "Tiago Henrique dos Santos"
+          ],
+          classroom: "",
+          students: "EIN2023 - Grupo B",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Eletricidade e Medidas Elétricas - 1530",
+          size: 1,
+          teachers: [
+            "Tiago Henrique dos Santos"
+          ],
+          classroom: "",
+          students: "EIN2023 - Grupo B",
           time: "09:25 - 10:15"
         }
       ]
@@ -45,23 +66,23 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Eletricidade e Medidas Elétricas - 1530",
+          subject: "Eletrônica - 1554",
           size: 2,
           teachers: [
             "Tiago Henrique dos Santos"
           ],
-          classroom: "Laboratório de Eletrônica",
-          students: "EIN2023 - GA",
+          classroom: "",
+          students: "EIN2022",
           time: "09:25 - 10:15"
         },
         {
-          subject: "Eletricidade e Medidas Elétricas - 1530",
+          subject: "Eletrônica - 1554",
           size: 1,
           teachers: [
             "Tiago Henrique dos Santos"
           ],
-          classroom: "Laboratório de Eletrônica",
-          students: "EIN2023 - GA",
+          classroom: "",
+          students: "EIN2022",
           time: "11:05 - 11:55"
         }
       ]
@@ -79,29 +100,9 @@ const data = {
           teachers: [
             "Tiago Henrique dos Santos"
           ],
-          classroom: "Laboratório de Eletrônica",
+          classroom: "",
           students: "ELE2023",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Eletricidade e Medidas Elétricas - 1530",
-          size: 2,
-          teachers: [
-            "Tiago Henrique dos Santos"
-          ],
-          classroom: "Laboratório de Eletrônica",
-          students: "EIN2023 - GB",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Eletricidade e Medidas Elétricas - 1530",
-          size: 1,
-          teachers: [
-            "Tiago Henrique dos Santos"
-          ],
-          classroom: "Laboratório de Eletrônica",
-          students: "EIN2023 - GB",
-          time: "09:25 - 10:15"
+          time: "19:00 - 19:50"
         }
       ]
     }
