--- a/docs/professor/vander_fabio_silveira.mdx
+++ b/docs/professor/vander_fabio_silveira.mdx
@@ -6,13 +6,23 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Elementos de Automação - 112",
+          subject: "Elementos de Automação - 198",
           size: 2,
           teachers: [
             "Vander Fabio Silveira"
           ],
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
-          students: "ELM2022",
+          classroom: "",
+          students: "EIN2021",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Instalações Elétricas - 691",
+          size: 2,
+          teachers: [
+            "Vander Fabio Silveira"
+          ],
+          classroom: "",
+          students: "ELE2022",
           time: "19:00 - 19:50"
         },
         {
@@ -21,7 +31,7 @@ const data = {
           teachers: [
             "Vander Fabio Silveira"
           ],
-          classroom: "Sala 6-2",
+          classroom: "",
           students: "ELE2022",
           time: "21:00 - 21:50"
         }
@@ -36,7 +46,7 @@ const data = {
           teachers: [
             "Vander Fabio Silveira"
           ],
-          classroom: "Laboratório de Eletrônica",
+          classroom: "",
           students: "ELM2023",
           time: "21:00 - 21:50"
         }
@@ -44,41 +54,30 @@ const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Instalações Elétricas - 691",
-          size: 2,
-          teachers: [
-            "Vander Fabio Silveira"
-          ],
-          classroom: "Sala 6-2",
-          students: "ELE2022",
-          time: "19:00 - 19:50"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Elementos de Automação - 198",
+          subject: "Elementos de Automação - 112",
           size: 2,
           teachers: [
             "Vander Fabio Silveira"
           ],
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
-          students: "EIN2021",
-          time: "10:15 - 11:05"
+          classroom: "",
+          students: "ELM2022",
+          time: "21:00 - 21:50"
         },
         {
-          subject: "Eletricidade Básica - 134",
+          subject: "Sistemas Digitais - 1553",
           size: 2,
           teachers: [
             "Vander Fabio Silveira"
           ],
-          classroom: "Laboratório de Eletrônica",
-          students: "ELM2023",
-          time: "21:00 - 21:50"
+          classroom: "",
+          students: "EIN2022",
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -86,14 +85,14 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Sistemas Digitais - 1553",
+          subject: "Eletricidade Básica - 134",
           size: 2,
           teachers: [
             "Vander Fabio Silveira"
           ],
-          classroom: "Sala 6-2",
-          students: "EIN2022",
-          time: "10:15 - 11:05"
+          classroom: "",
+          students: "ELM2023",
+          time: "21:00 - 21:50"
         }
       ]
     }
