--- a/docs/professor/wylliam_salviano_gongora.mdx
+++ b/docs/professor/wylliam_salviano_gongora.mdx
@@ -15,7 +15,7 @@ const data = {
           teachers: [
             "Wylliam Salviano Gongora"
           ],
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
+          classroom: "",
           students: "ELE2022",
           time: "19:00 - 19:50"
         }
@@ -25,12 +25,27 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
+          subject: "Máquinas elétricas - 2231",
+          size: 2,
+          teachers: [
+            "Wylliam Salviano Gongora"
+          ],
+          classroom: "",
+          students: "ELE2022",
+          time: "19:00 - 19:50"
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
           subject: "Instrumentos de Medidas Elétricas - 1138",
           size: 2,
           teachers: [
             "Wylliam Salviano Gongora"
           ],
-          classroom: "Laboratório de Eletrônica",
+          classroom: "",
           students: "ELE2023",
           time: "19:00 - 19:50"
         },
@@ -50,9 +65,9 @@ const data = {
           teachers: [
             "Wylliam Salviano Gongora"
           ],
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
+          classroom: "",
           students: "EIN2021",
-          time: "10:15 - 11:05"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Máquinas e Acionamentos - 1575",
@@ -60,24 +75,9 @@ const data = {
           teachers: [
             "Wylliam Salviano Gongora"
           ],
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
+          classroom: "",
           students: "EIN2021",
-          time: "09:25 - 10:15"
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Máquinas elétricas - 2231",
-          size: 2,
-          teachers: [
-            "Wylliam Salviano Gongora"
-          ],
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
-          students: "ELE2022",
-          time: "19:00 - 19:50"
+          time: "11:05 - 11:55"
         }
       ]
     },
@@ -90,7 +90,7 @@ const data = {
           teachers: [
             "Wylliam Salviano Gongora"
           ],
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
+          classroom: "",
           students: "ELM2022",
           time: "21:00 - 21:50"
         }
