--- a/docs/turma/ago2022.mdx
+++ b/docs/turma/ago2022.mdx
@@ -6,44 +6,24 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Matemática II - 622",
+          subject: "Biologia II - 616",
           size: 2,
           teachers: [
-            "Elenice Josefa Kolancko Setti"
+            "Karina Dias Espartosa"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGO2022",
           time: "09:25 - 10:15"
         },
         {
-          subject: "Construções e Instalações Rurais - 630",
+          subject: "Língua Portuguesa e Literatura II - 613",
           size: 2,
           teachers: [
-            "Elias Franco"
+            "Pedro Leites Junior"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGO2022",
           time: "07:30 - 08:20"
-        },
-        {
-          subject: "Filosofia II - 624",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "Sala 14-2",
-          students: "AGO2022",
-          time: "15:05 - 15:55"
-        },
-        {
-          subject: "Meteorologia e Bioclimatologia na Agropecuária - 631",
-          size: 2,
-          teachers: [
-            "Octavio Henrique Viana"
-          ],
-          classroom: "Sala 14-2",
-          students: "AGO2022",
-          time: "13:10 - 14:00"
         },
         {
           subject: "Culturas I - 627",
@@ -51,7 +31,7 @@ const data = {
           teachers: [
             "Sônia Maria Mandotti"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGO2022",
           time: "11:05 - 11:55"
         }
@@ -61,14 +41,14 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Educação Física II - 615",
+          subject: "Geografia II - 623",
           size: 2,
           teachers: [
-            "Bruna Valeriano da Silva Lisboa"
+            "Jhones Donizetti Mendes"
           ],
-          classroom: "Educação Física / Sala 4 B2",
+          classroom: "",
           students: "AGO2022",
-          time: "07:30 - 08:20"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Química II - 618",
@@ -76,54 +56,9 @@ const data = {
           teachers: [
             "Kathia Regina Kunzler Bechlin"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGO2022",
           time: "15:05 - 15:55"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura II - 613",
-          size: 1,
-          teachers: [
-            "Pedro Leites Junior"
-          ],
-          classroom: "Sala 14-2",
-          students: "AGO2022",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Artes II - 614",
-          size: 2,
-          teachers: [
-            "Renata Carolina Pereira"
-          ],
-          classroom: "Sala 14-2",
-          students: "AGO2022",
-          time: "13:10 - 14:00"
-        },
-        {
-          subject: "Culturas I - 627",
-          size: 2,
-          teachers: [
-            "Sônia Maria Mandotti"
-          ],
-          classroom: "Sala 14-2",
-          students: "AGO2022",
-          time: "09:25 - 10:15"
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Geografia II - 623",
-          size: 2,
-          teachers: [
-            "Jhones Donizetti Mendes"
-          ],
-          classroom: "Sala 14-2",
-          students: "AGO2022",
-          time: "07:30 - 08:20"
         },
         {
           subject: "Produção Animal I - 628",
@@ -131,9 +66,9 @@ const data = {
           teachers: [
             "Leiliane Cristine de Souza"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGO2022",
-          time: "11:05 - 11:55"
+          time: "08:20 - 09:10"
         },
         {
           subject: "Física II - 617",
@@ -141,24 +76,64 @@ const data = {
           teachers: [
             "Polyanna Guimarães e Miranda"
           ],
-          classroom: "Laboratório de Física",
+          classroom: "",
+          students: "AGO2022",
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "História I - 626",
+          size: 1,
+          teachers: [
+            "Suzane Conceição Pantolfi Tostes"
+          ],
+          classroom: "",
           students: "AGO2022",
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "História I - 626",
+          size: 1,
+          teachers: [
+            "Suzane Conceição Pantolfi Tostes"
+          ],
+          classroom: "",
+          students: "AGO2022",
+          time: "07:30 - 08:20"
         }
       ]
     },
     {
-      dayName: "Quinta-Feira",
+      dayName: "Quarta-Feira",
       dayClasses: [
+        {
+          subject: "Matemática II - 622",
+          size: 2,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "",
+          students: "AGO2022",
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Construções e Instalações Rurais - 630",
+          size: 2,
+          teachers: [
+            "Elias Franco"
+          ],
+          classroom: "",
+          students: "AGO2022",
+          time: "07:30 - 08:20"
+        },
         {
           subject: "Sistemas Agroflorestais - 629",
           size: 2,
           teachers: [
             "Elias Franco"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGO2022",
-          time: "09:25 - 10:15"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Filosofia II - 624",
@@ -166,32 +141,7 @@ const data = {
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "Sala 14-2",
-          students: "AGO2022",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Produção Animal I - 628",
-          size: 2,
-          teachers: [
-            "Leiliane Cristine de Souza"
-          ],
-          classroom: "Sala 14-2",
-          students: "AGO2022",
-          time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Sociologia Rural - 625",
-          size: 2,
-          teachers: [
-            "Elias Franco"
-          ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGO2022",
           time: "15:05 - 15:55"
         },
@@ -201,49 +151,99 @@ const data = {
           teachers: [
             "Josiane Paula Maltauro"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGO2022",
-          time: "13:10 - 14:00"
-        },
+          time: "09:25 - 10:15"
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
         {
-          subject: "Biologia II - 616",
-          size: 2,
-          teachers: [
-            "Karina Dias Espartosa"
-          ],
-          classroom: "Laboratório de Biologia",
-          students: "AGO2022",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura II - 613",
-          size: 2,
-          teachers: [
-            "Pedro Leites Junior"
-          ],
-          classroom: "Sala 14-2",
-          students: "AGO2022",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "História I - 626",
+          subject: "Filosofia II - 624",
           size: 1,
           teachers: [
-            "Suzane Conceição Pantolfi Tostes"
+            "Fabio Antônio da Silva"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
+          students: "AGO2022",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Meteorologia e Bioclimatologia na Agropecuária - 631",
+          size: 2,
+          teachers: [
+            "Octavio Henrique Viana"
+          ],
+          classroom: "",
           students: "AGO2022",
           time: "09:25 - 10:15"
         },
         {
-          subject: "História I - 626",
+          subject: "Artes II - 614",
+          size: 2,
+          teachers: [
+            "Renata Carolina Pereira"
+          ],
+          classroom: "",
+          students: "AGO2022",
+          time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
+          subject: "Educação Física II - 615",
+          size: 2,
+          teachers: [
+            "Bruna Valeriano da Silva Lisboa"
+          ],
+          classroom: "",
+          students: "AGO2022",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Sociologia Rural - 625",
+          size: 2,
+          teachers: [
+            "Elias Franco"
+          ],
+          classroom: "",
+          students: "AGO2022",
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Produção Animal I - 628",
+          size: 2,
+          teachers: [
+            "Leiliane Cristine de Souza"
+          ],
+          classroom: "",
+          students: "AGO2022",
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura II - 613",
           size: 1,
           teachers: [
-            "Suzane Conceição Pantolfi Tostes"
+            "Pedro Leites Junior"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGO2022",
-          time: "14:00 - 14:50"
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Culturas I - 627",
+          size: 2,
+          teachers: [
+            "Sônia Maria Mandotti"
+          ],
+          classroom: "",
+          students: "AGO2022",
+          time: "10:15 - 11:05"
         }
       ]
     }
