--- a/docs/turma/ago2023.mdx
+++ b/docs/turma/ago2023.mdx
@@ -6,14 +6,14 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Sociologia I - 465",
-          size: 1,
+          subject: "Educação Física I - 457",
+          size: 2,
           teachers: [
-            "Everaldo Lorensetti"
+            "Bruna Valeriano da Silva Lisboa"
           ],
           classroom: "",
           students: "AGO2023",
-          time: "15:05 - 15:55"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Filosofia I - 464",
@@ -26,44 +26,14 @@ const data = {
           time: "11:05 - 11:55"
         },
         {
-          subject: "Filosofia I - 464",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "",
-          students: "AGO2023",
-          time: "15:55 - 16:45"
-        },
-        {
-          subject: "Geografia I - 463",
+          subject: "Língua Portuguesa e Literatura I - 455",
           size: 2,
           teachers: [
-            "Jhones Donizetti Mendes"
+            "Pedro Leites Junior"
           ],
           classroom: "",
-          students: "AGO2023",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Química I - 461",
-          size: 2,
-          teachers: [
-            "Kathia Regina Kunzler Bechlin"
-          ],
-          classroom: "Laboratório de Química",
           students: "AGO2023",
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Zootecnia Geral - 467",
-          size: 2,
-          teachers: [
-            "Roberto Haruyoshi Ito"
-          ],
-          classroom: "",
-          students: "AGO2023",
-          time: "13:10 - 14:00"
         }
       ]
     },
@@ -78,27 +48,57 @@ const data = {
           ],
           classroom: "",
           students: "AGO2023",
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Sociologia I - 465",
+          size: 1,
+          teachers: [
+            "Everaldo Lorensetti"
+          ],
+          classroom: "",
+          students: "AGO2023",
           time: "07:30 - 08:20"
         },
         {
-          subject: "Matemática I - 462",
-          size: 2,
+          subject: "Filosofia I - 464",
+          size: 1,
           teachers: [
-            "Elenice Josefa Kolancko Setti"
+            "Fabio Antônio da Silva"
           ],
           classroom: "",
           students: "AGO2023",
           time: "09:25 - 10:15"
         },
         {
-          subject: "Educação postural e Segurança no trabalho - 471",
+          subject: "Língua Portuguesa e Literatura I - 455",
           size: 1,
           teachers: [
-            "Tatiane Martinazzo Portz"
+            "Pedro Leites Junior"
           ],
           classroom: "",
           students: "AGO2023",
-          time: "11:05 - 11:55"
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "Artes I - 458",
+          size: 2,
+          teachers: [
+            "Renata Carolina Pereira"
+          ],
+          classroom: "",
+          students: "AGO2023",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Zootecnia Geral - 467",
+          size: 2,
+          teachers: [
+            "Roberto Haruyoshi Ito"
+          ],
+          classroom: "",
+          students: "AGO2023",
+          time: "15:05 - 15:55"
         }
       ]
     },
@@ -111,18 +111,8 @@ const data = {
           teachers: [
             "Eliana Peliçon Pereira Figueira"
           ],
-          classroom: "Laboratório de Biologia",
+          classroom: "",
           students: "AGO2023",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Informática instrumental e aplicada - 468",
-          size: 2,
-          teachers: [
-            "Joaquim José Honório de Lima"
-          ],
-          classroom: "Laboratório de Informatica C",
-          students: "AGO2023 - GB",
           time: "07:30 - 08:20"
         },
         {
@@ -136,14 +126,14 @@ const data = {
           time: "11:05 - 11:55"
         },
         {
-          subject: "Desenho técnico e topografia - 469",
+          subject: "Agroecologia e DRS - 470",
           size: 2,
           teachers: [
-            "Octavio Henrique Viana"
+            "Tatiane Martinazzo Portz"
           ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
-          students: "AGO2023 - GA",
-          time: "07:30 - 08:20"
+          classroom: "",
+          students: "AGO2023",
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -151,34 +141,74 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Educação Física I - 457",
+          subject: "Matemática I - 462",
           size: 2,
           teachers: [
-            "Bruna Valeriano da Silva Lisboa"
-          ],
-          classroom: "Educação Física / Sala 4 B2",
-          students: "AGO2023",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura I - 455",
-          size: 2,
-          teachers: [
-            "Pedro Leites Junior"
+            "Elenice Josefa Kolancko Setti"
           ],
           classroom: "",
           students: "AGO2023",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Informática instrumental e aplicada - 468",
+          size: 2,
+          teachers: [
+            "Joaquim José Honório de Lima"
+          ],
+          classroom: "",
+          students: "AGO2023 - Grupo A",
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Informática instrumental e aplicada - 468",
+          size: 2,
+          teachers: [
+            "Joaquim José Honório de Lima"
+          ],
+          classroom: "",
+          students: "AGO2023 - Grupo B",
           time: "07:30 - 08:20"
         },
         {
-          subject: "Língua Portuguesa e Literatura I - 455",
-          size: 1,
+          subject: "Desenho técnico e topografia - 469",
+          size: 2,
           teachers: [
-            "Pedro Leites Junior"
+            "Octavio Henrique Viana"
+          ],
+          classroom: "",
+          students: "AGO2023 - Grupo A",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Desenho técnico e topografia - 469",
+          size: 2,
+          teachers: [
+            "Octavio Henrique Viana"
+          ],
+          classroom: "",
+          students: "AGO2023 - Grupo B",
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Física I - 460",
+          size: 2,
+          teachers: [
+            "Polyanna Guimarães e Miranda"
           ],
           classroom: "",
           students: "AGO2023",
-          time: "11:05 - 11:55"
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Educação postural e Segurança no trabalho - 471",
+          size: 1,
+          teachers: [
+            "Tatiane Martinazzo Portz"
+          ],
+          classroom: "",
+          students: "AGO2023",
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -193,57 +223,27 @@ const data = {
           ],
           classroom: "",
           students: "AGO2023",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Geografia I - 463",
+          size: 2,
+          teachers: [
+            "Jhones Donizetti Mendes"
+          ],
+          classroom: "",
+          students: "AGO2023",
           time: "09:25 - 10:15"
         },
         {
-          subject: "Informática instrumental e aplicada - 468",
+          subject: "Química I - 461",
           size: 2,
           teachers: [
-            "Joaquim José Honório de Lima"
-          ],
-          classroom: "Laboratório de Informatica C",
-          students: "AGO2023 - GA",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Desenho técnico e topografia - 469",
-          size: 2,
-          teachers: [
-            "Octavio Henrique Viana"
-          ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
-          students: "AGO2023 - GB",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Física I - 460",
-          size: 2,
-          teachers: [
-            "Polyanna Guimarães e Miranda"
-          ],
-          classroom: "Laboratório de Física",
-          students: "AGO2023",
-          time: "15:05 - 15:55"
-        },
-        {
-          subject: "Artes I - 458",
-          size: 2,
-          teachers: [
-            "Renata Carolina Pereira"
+            "Kathia Regina Kunzler Bechlin"
           ],
           classroom: "",
           students: "AGO2023",
-          time: "13:10 - 14:00"
-        },
-        {
-          subject: "Agroecologia e DRS - 470",
-          size: 2,
-          teachers: [
-            "Tatiane Martinazzo Portz"
-          ],
-          classroom: "",
-          students: "AGO2023",
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         }
       ]
     }
