--- a/docs/turma/ein2020.mdx
+++ b/docs/turma/ein2020.mdx
@@ -6,24 +6,24 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Física 4 - 224",
-          size: 2,
-          teachers: [
-            "Bruno Garcia Bonfim"
-          ],
-          classroom: "Laboratório de Física",
-          students: "EIN2020",
-          time: "09:25 - 10:15"
-        },
-        {
           subject: "Lingua Estrangeira Moderna 3 - Inglês - 230",
           size: 1,
           teachers: [
             "Celina de Oliveira Barbosa Gomes"
           ],
-          classroom: "Sala 8-2",
+          classroom: "",
           students: "EIN2020",
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Lingua Portuguesa 4 - 232",
+          size: 2,
+          teachers: [
+            "Kátia Cristiane Kobus Novaes"
+          ],
+          classroom: "",
+          students: "EIN2020",
+          time: "10:15 - 11:05"
         },
         {
           subject: "Processos de Fabricação 3 - 1590",
@@ -31,7 +31,7 @@ const data = {
           teachers: [
             "Luiz Inácio Chaves"
           ],
-          classroom: "Laboratório de Usinagem B4",
+          classroom: "",
           students: "EIN2020",
           time: "07:30 - 08:20"
         }
@@ -41,34 +41,34 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
+          subject: "Física 4 - 224",
+          size: 2,
+          teachers: [
+            "Bruno Garcia Bonfim"
+          ],
+          classroom: "",
+          students: "EIN2020",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Biologia 4 - 222",
+          size: 2,
+          teachers: [
+            "Eliana Peliçon Pereira Figueira"
+          ],
+          classroom: "",
+          students: "EIN2020",
+          time: "09:25 - 10:15"
+        },
+        {
           subject: "Projeto Integrador - 1593",
           size: 1,
           teachers: [
             "Grazielli Bueno"
           ],
-          classroom: "Sala 8-2",
+          classroom: "",
           students: "EIN2020",
           time: "11:05 - 11:55"
-        },
-        {
-          subject: "Geografia 4 - 227",
-          size: 2,
-          teachers: [
-            "Jhones Donizetti Mendes"
-          ],
-          classroom: "Sala 8-2",
-          students: "EIN2020",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Matemática 4 - 234",
-          size: 2,
-          teachers: [
-            "Mauro César de Souza Siena"
-          ],
-          classroom: "Sala 8-2",
-          students: "EIN2020",
-          time: "09:25 - 10:15"
         }
       ]
     },
@@ -76,24 +76,14 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Manutenção Industrial e Gestão da Produção - 1592",
-          size: 1,
-          teachers: [
-            "Darlan Roque Dapieve"
-          ],
-          classroom: "Sala 8-2",
-          students: "EIN2020",
-          time: "11:05 - 11:55"
-        },
-        {
           subject: "Química 4 - 235",
           size: 2,
           teachers: [
             "Elizangela Cavazzini Cesca"
           ],
-          classroom: "Laboratório de Química",
+          classroom: "",
           students: "EIN2020",
-          time: "07:30 - 08:20"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Sociologia 4 - 238",
@@ -101,19 +91,19 @@ const data = {
           teachers: [
             "Everaldo Lorensetti"
           ],
-          classroom: "Sala 8-2",
+          classroom: "",
           students: "EIN2020",
           time: "09:25 - 10:15"
         },
         {
-          subject: "Filosofia 4 - 223",
-          size: 1,
+          subject: "Matemática 4 - 234",
+          size: 2,
           teachers: [
-            "Fabio Antônio da Silva"
+            "Mauro César de Souza Siena"
           ],
-          classroom: "Sala 8-2",
+          classroom: "",
           students: "EIN2020",
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -121,59 +111,24 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
+          subject: "Geografia 4 - 227",
+          size: 2,
+          teachers: [
+            "Jhones Donizetti Mendes"
+          ],
+          classroom: "",
+          students: "EIN2020",
+          time: "07:30 - 08:20"
+        },
+        {
           subject: "Máquinas Térmicas e de Fluxo - 218",
           size: 2,
           teachers: [
             "Luiz Inácio Chaves"
           ],
-          classroom: "Laboratório de Materiais e Hidráulica B4",
-          students: "EIN2020",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Matemática 4 - 234",
-          size: 1,
-          teachers: [
-            "Mauro César de Souza Siena"
-          ],
-          classroom: "Sala 8-2",
+          classroom: "",
           students: "EIN2020",
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "História 4 - 229",
-          size: 2,
-          teachers: [
-            "Suzane Conceição Pantolfi Tostes"
-          ],
-          classroom: "Sala 8-2",
-          students: "EIN2020",
-          time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Biologia 4 - 222",
-          size: 2,
-          teachers: [
-            "Eliana Peliçon Pereira Figueira"
-          ],
-          classroom: "Laboratório de Biologia",
-          students: "EIN2020",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Lingua Portuguesa 4 - 232",
-          size: 2,
-          teachers: [
-            "Kátia Cristiane Kobus Novaes"
-          ],
-          classroom: "Sala 8-2",
-          students: "EIN2020",
-          time: "07:30 - 08:20"
         },
         {
           subject: "Artes 3 - 221",
@@ -181,7 +136,52 @@ const data = {
           teachers: [
             "Renata Carolina Pereira"
           ],
-          classroom: "Sala 8-2",
+          classroom: "",
+          students: "EIN2020",
+          time: "11:05 - 11:55"
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
+          subject: "Manutenção Industrial e Gestão da Produção - 1592",
+          size: 1,
+          teachers: [
+            "Darlan Roque Dapieve"
+          ],
+          classroom: "",
+          students: "EIN2020",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Filosofia 4 - 223",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "",
+          students: "EIN2020",
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "Matemática 4 - 234",
+          size: 1,
+          teachers: [
+            "Mauro César de Souza Siena"
+          ],
+          classroom: "",
+          students: "EIN2020",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "História 4 - 229",
+          size: 2,
+          teachers: [
+            "Suzane Conceição Pantolfi Tostes"
+          ],
+          classroom: "",
           students: "EIN2020",
           time: "09:25 - 10:15"
         }
