--- a/docs/turma/ele2022.mdx
+++ b/docs/turma/ele2022.mdx
@@ -6,12 +6,12 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Projetos elétricos industriais - 2232",
+          subject: "Instalações Elétricas - 691",
           size: 2,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Vander Fabio Silveira"
           ],
-          classroom: "Sala 6-2",
+          classroom: "",
           students: "ELE2022",
           time: "19:00 - 19:50"
         },
@@ -21,7 +21,7 @@ const data = {
           teachers: [
             "Vander Fabio Silveira"
           ],
-          classroom: "Sala 6-2",
+          classroom: "",
           students: "ELE2022",
           time: "21:00 - 21:50"
         }
@@ -36,7 +36,7 @@ const data = {
           teachers: [
             "Grazielli Bueno"
           ],
-          classroom: "Sala 6-2",
+          classroom: "",
           students: "ELE2022",
           time: "21:00 - 21:50"
         },
@@ -46,7 +46,7 @@ const data = {
           teachers: [
             "Wylliam Salviano Gongora"
           ],
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
+          classroom: "",
           students: "ELE2022",
           time: "19:00 - 19:50"
         }
@@ -61,17 +61,17 @@ const data = {
           teachers: [
             "Amilcar Machado Profeta Filho"
           ],
-          classroom: "Sala 6-2",
+          classroom: "",
           students: "ELE2022",
           time: "21:00 - 21:50"
         },
         {
-          subject: "Instalações Elétricas - 691",
+          subject: "Máquinas elétricas - 2231",
           size: 2,
           teachers: [
-            "Vander Fabio Silveira"
+            "Wylliam Salviano Gongora"
           ],
-          classroom: "Sala 6-2",
+          classroom: "",
           students: "ELE2022",
           time: "19:00 - 19:50"
         }
@@ -86,19 +86,19 @@ const data = {
           teachers: [
             "Novo Professor de Elétrica PSS - 40h"
           ],
-          classroom: "Sala 6-2",
-          students: "ELE2022",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Máquinas elétricas - 2231",
-          size: 2,
-          teachers: [
-            "Wylliam Salviano Gongora"
-          ],
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
+          classroom: "",
           students: "ELE2022",
           time: "19:00 - 19:50"
+        },
+        {
+          subject: "Eletrônica de Potência - 2228",
+          size: 2,
+          teachers: [
+            "Novo Professor de Elétrica PSS - 40h"
+          ],
+          classroom: "",
+          students: "ELE2022",
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -111,17 +111,17 @@ const data = {
           teachers: [
             "Grazielli Bueno"
           ],
-          classroom: "Sala 6-2",
+          classroom: "",
           students: "ELE2022",
           time: "19:00 - 19:50"
         },
         {
-          subject: "Eletrônica de Potência - 2228",
+          subject: "Projetos elétricos industriais - 2232",
           size: 2,
           teachers: [
             "Novo Professor de Elétrica PSS - 40h"
           ],
-          classroom: "Sala 6-2",
+          classroom: "",
           students: "ELE2022",
           time: "21:00 - 21:50"
         }
