--- a/docs/turma/iiw2021.mdx
+++ b/docs/turma/iiw2021.mdx
@@ -6,47 +6,12 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "História III - 2236",
+          subject: "Sociologia II - 1246",
           size: 1,
           teachers: [
-            "Milton Aparecido Azevedo"
+            "Everaldo Lorensetti"
           ],
-          classroom: "Sala 12-2",
-          students: "IIW2021",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Prototipação de Interfaces e Interação Humano-Computador - 1251",
-          size: 2,
-          teachers: [
-            "Rafael Silva Santos"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: "IIW2021",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Matemática III - 1244",
-          size: 2,
-          teachers: [
-            "Sérgio Augusto Dias Castro"
-          ],
-          classroom: "Sala 12-2",
-          students: "IIW2021",
-          time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Filosofia III - 1245",
-          size: 1,
-          teachers: [
-            "José Jurandir Pereira Junior"
-          ],
-          classroom: "Sala 12-2",
+          classroom: "",
           students: "IIW2021",
           time: "11:05 - 11:55"
         },
@@ -56,97 +21,7 @@ const data = {
           teachers: [
             "Kathia Regina Kunzler Bechlin"
           ],
-          classroom: "Laboratório de Química",
-          students: "IIW2021",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Física III - 1242",
-          size: 2,
-          teachers: [
-            "Polyanna Guimarães e Miranda"
-          ],
-          classroom: "Laboratório de Física",
-          students: "IIW2021",
-          time: "09:25 - 10:15"
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Serviços em nuvem - 1250",
-          size: 2,
-          teachers: [
-            "Caroline Domingues Porto do Nascimento Barbieri"
-          ],
-          classroom: "Sala 12-2",
-          students: "IIW2021",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Sociologia II - 1246",
-          size: 1,
-          teachers: [
-            "Everaldo Lorensetti"
-          ],
-          classroom: "Sala 12-2",
-          students: "IIW2021",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Filosofia III - 1245",
-          size: 1,
-          teachers: [
-            "José Jurandir Pereira Junior"
-          ],
-          classroom: "Sala 12-2",
-          students: "IIW2021",
-          time: "15:05 - 15:55"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura III - 1240",
-          size: 2,
-          teachers: [
-            "Michelli Cristina Galli"
-          ],
-          classroom: "Sala 12-2",
-          students: "IIW2021",
-          time: "13:10 - 14:00"
-        },
-        {
-          subject: "Sistemas Gerenciadores de Conteúdo WEB - 1252",
-          size: 2,
-          teachers: [
-            "Rafael Gil Ferques"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: "IIW2021",
-          time: "09:25 - 10:15"
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Sociologia II - 1246",
-          size: 1,
-          teachers: [
-            "Everaldo Lorensetti"
-          ],
-          classroom: "Sala 12-2",
-          students: "IIW2021",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Biologia III - 1241",
-          size: 2,
-          teachers: [
-            "Gabriele Antico Freiria"
-          ],
-          classroom: "Laboratório de Biologia",
+          classroom: "",
           students: "IIW2021",
           time: "07:30 - 08:20"
         },
@@ -156,32 +31,22 @@ const data = {
           teachers: [
             "Olavo José Luiz Junior"
           ],
-          classroom: "Sala 12-2",
+          classroom: "",
           students: "IIW2021",
-          time: "10:15 - 11:05"
+          time: "09:25 - 10:15"
         }
       ]
     },
     {
-      dayName: "Sexta-Feira",
+      dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Desenvolvimento Responsivo e Otimização de Sites - 1249",
-          size: 2,
-          teachers: [
-            "Luis Henrique Manosso Von Mecheln"
-          ],
-          classroom: "Sala 12-2",
-          students: "IIW2021",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "História III - 2236",
+          subject: "Sociologia II - 1246",
           size: 1,
           teachers: [
-            "Milton Aparecido Azevedo"
+            "Everaldo Lorensetti"
           ],
-          classroom: "Sala 12-2",
+          classroom: "",
           students: "IIW2021",
           time: "11:05 - 11:55"
         },
@@ -191,7 +56,142 @@ const data = {
           teachers: [
             "Renato Lada Guerreiro"
           ],
-          classroom: "Sala 12-2",
+          classroom: "",
+          students: "IIW2021",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Matemática III - 1244",
+          size: 2,
+          teachers: [
+            "Sérgio Augusto Dias Castro"
+          ],
+          classroom: "",
+          students: "IIW2021",
+          time: "09:25 - 10:15"
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
+          subject: "Língua Portuguesa e Literatura III - 1240",
+          size: 2,
+          teachers: [
+            "Michelli Cristina Galli"
+          ],
+          classroom: "",
+          students: "IIW2021",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "História III - 2236",
+          size: 1,
+          teachers: [
+            "Milton Aparecido Azevedo"
+          ],
+          classroom: "",
+          students: "IIW2021",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Física III - 1242",
+          size: 2,
+          teachers: [
+            "Polyanna Guimarães e Miranda"
+          ],
+          classroom: "",
+          students: "IIW2021",
+          time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Serviços em nuvem - 1250",
+          size: 2,
+          teachers: [
+            "Caroline Domingues Porto do Nascimento Barbieri"
+          ],
+          classroom: "",
+          students: "IIW2021",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Filosofia III - 1245",
+          size: 1,
+          teachers: [
+            "José Jurandir Pereira Junior"
+          ],
+          classroom: "",
+          students: "IIW2021",
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Filosofia III - 1245",
+          size: 1,
+          teachers: [
+            "José Jurandir Pereira Junior"
+          ],
+          classroom: "",
+          students: "IIW2021",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Sistemas Gerenciadores de Conteúdo WEB - 1252",
+          size: 2,
+          teachers: [
+            "Rafael Gil Ferques"
+          ],
+          classroom: "",
+          students: "IIW2021",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Prototipação de Interfaces e Interação Humano-Computador - 1251",
+          size: 2,
+          teachers: [
+            "Rafael Silva Santos"
+          ],
+          classroom: "",
+          students: "IIW2021",
+          time: "13:10 - 14:00"
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
+          subject: "Biologia III - 1241",
+          size: 2,
+          teachers: [
+            "Gabriele Antico Freiria"
+          ],
+          classroom: "",
+          students: "IIW2021",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Desenvolvimento Responsivo e Otimização de Sites - 1249",
+          size: 2,
+          teachers: [
+            "Luis Henrique Manosso Von Mecheln"
+          ],
+          classroom: "",
+          students: "IIW2021",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "História III - 2236",
+          size: 1,
+          teachers: [
+            "Milton Aparecido Azevedo"
+          ],
+          classroom: "",
           students: "IIW2021",
           time: "09:25 - 10:15"
         }
