--- a/docs/professor/bruno_garcia_bonfim.mdx
+++ b/docs/professor/bruno_garcia_bonfim.mdx
@@ -6,14 +6,29 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Física 2 - 175",
+          size: 1,
+          teachers: [
+            "Bruno Garcia Bonfim"
+          ],
+          classroom: "",
+          students: "EIN2022",
+          time: "11:05 - 11:55"
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
+        {
           subject: "Física 4 - 224",
           size: 2,
           teachers: [
             "Bruno Garcia Bonfim"
           ],
-          classroom: "Laboratório de Física",
+          classroom: "",
           students: "EIN2020",
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Física I - 2325",
@@ -21,15 +36,29 @@ const data = {
           teachers: [
             "Bruno Garcia Bonfim"
           ],
-          classroom: "Laboratório de Física",
+          classroom: "",
           students: "COM2023",
-          time: "15:05 - 15:55"
+          time: "13:10 - 14:00"
         }
       ]
     },
     {
-      dayName: "Terça-Feira",
+      dayName: "Quarta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quinta-Feira",
       dayClasses: [
+        {
+          subject: "Física 1 - 125",
+          size: 2,
+          teachers: [
+            "Bruno Garcia Bonfim"
+          ],
+          classroom: "",
+          students: "EIN2023",
+          time: "09:25 - 10:15"
+        },
         {
           subject: "Física Aplicada - 144",
           size: 2,
@@ -53,46 +82,17 @@ const data = {
       ]
     },
     {
-      dayName: "Quarta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Física 1 - 125",
-          size: 2,
-          teachers: [
-            "Bruno Garcia Bonfim"
-          ],
-          classroom: "Laboratório de Física",
-          students: "EIN2023",
-          time: "10:15 - 11:05"
-        }
-      ]
-    },
-    {
       dayName: "Sexta-Feira",
       dayClasses: [
-        {
-          subject: "Física 2 - 175",
-          size: 1,
-          teachers: [
-            "Bruno Garcia Bonfim"
-          ],
-          classroom: "Laboratório de Física",
-          students: "EIN2022",
-          time: "09:25 - 10:15"
-        },
         {
           subject: "Física 3 - 205",
           size: 2,
           teachers: [
             "Bruno Garcia Bonfim"
           ],
-          classroom: "Laboratório de Física",
+          classroom: "",
           students: "EIN2021",
-          time: "07:30 - 08:20"
+          time: "10:15 - 11:05"
         }
       ]
     }
