--- a/docs/professor/daniele_de_almeida_paula.mdx
+++ b/docs/professor/daniele_de_almeida_paula.mdx
@@ -6,24 +6,14 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "(APOVA) - 1094",
+          subject: "Agroindustrialização de Produtos de Origem Vegetal e Animal (APOVA) - 1094",
           size: 1,
           teachers: [
             "Daniele de Almeida Paula"
           ],
           classroom: "",
-          students: "AGO2021 - GA",
+          students: "AGO2021 - Grupo A",
           time: "11:05 - 11:55"
-        },
-        {
-          subject: "Gestão Ambiental na Indústria dos Alimentos - 2338",
-          size: 1,
-          teachers: [
-            "Daniele de Almeida Paula"
-          ],
-          classroom: "",
-          students: "TAL2023",
-          time: "19:50 - 20:40"
         },
         {
           subject: "Gestão e Planejamento aplicados à Agroindústria - 2339",
@@ -33,7 +23,7 @@ const data = {
           ],
           classroom: "",
           students: "TAL2023",
-          time: "21:50 - 22:40"
+          time: "19:50 - 20:40"
         }
       ]
     },
@@ -48,7 +38,7 @@ const data = {
           ],
           classroom: "",
           students: "TAL2023",
-          time: "19:50 - 20:40"
+          time: "21:50 - 22:40"
         },
         {
           subject: "Fundamentos da Química - 2337",
@@ -74,6 +64,16 @@ const data = {
           ],
           classroom: "",
           students: "TAL2023",
+          time: "19:50 - 20:40"
+        },
+        {
+          subject: "Gestão Ambiental na Indústria dos Alimentos - 2338",
+          size: 1,
+          teachers: [
+            "Daniele de Almeida Paula"
+          ],
+          classroom: "",
+          students: "TAL2023",
           time: "21:50 - 22:40"
         },
         {
@@ -85,27 +85,12 @@ const data = {
           ],
           classroom: "",
           students: "TAL2023",
-          time: "19:50 - 20:40"
+          time: "19:00 - 19:50"
         }
       ]
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Gestão Ambiental e Desenvolvimento Sustentável - 1504",
-          size: 2,
-          teachers: [
-            "Daniele de Almeida Paula"
-          ],
-          classroom: "Sala 15-2",
-          students: "TGC2021",
-          time: "21:00 - 21:50"
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
       dayClasses: [
         {
           subject: "Fundamentos da Química - 2337",
@@ -116,7 +101,7 @@ const data = {
           ],
           classroom: "",
           students: "TAL2023",
-          time: "19:50 - 20:40"
+          time: "19:00 - 19:50"
         },
         {
           subject: "Fundamentos da Química - 2337",
@@ -127,6 +112,21 @@ const data = {
           ],
           classroom: "",
           students: "TAL2023",
+          time: "21:50 - 22:40"
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
+          subject: "Gestão Ambiental e Desenvolvimento Sustentável - 1504",
+          size: 2,
+          teachers: [
+            "Daniele de Almeida Paula"
+          ],
+          classroom: "",
+          students: "TGC2021",
           time: "19:00 - 19:50"
         }
       ]
