--- a/docs/professor/eliana_pelicon_pereira_figueira.mdx
+++ b/docs/professor/eliana_pelicon_pereira_figueira.mdx
@@ -6,14 +6,14 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Embriologia animal e histologia - 502",
-          size: 1,
+          subject: "Biologia I - 2324",
+          size: 2,
           teachers: [
             "Eliana Peliçon Pereira Figueira"
           ],
           classroom: "",
-          students: "BIO_ESPECIAL_2",
-          time: "21:00 - 21:50"
+          students: "COM2023",
+          time: "15:05 - 15:55"
         },
         {
           subject: "Embriologia animal e histologia - 502",
@@ -23,7 +23,27 @@ const data = {
           ],
           classroom: "",
           students: "BIO_ESPECIAL_2",
-          time: "21:50 - 22:40"
+          time: "19:50 - 20:40"
+        },
+        {
+          subject: "Embriologia animal e histologia - 502",
+          size: 1,
+          teachers: [
+            "Eliana Peliçon Pereira Figueira"
+          ],
+          classroom: "",
+          students: "BIO_ESPECIAL_2",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Embriologia animal e histologia - 502",
+          size: 1,
+          teachers: [
+            "Eliana Peliçon Pereira Figueira"
+          ],
+          classroom: "",
+          students: "BIO_ESPECIAL_2",
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -31,14 +51,14 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Biologia 1 - 122",
-          size: 1,
+          subject: "Biologia 4 - 222",
+          size: 2,
           teachers: [
             "Eliana Peliçon Pereira Figueira"
           ],
-          classroom: "Laboratório de Biologia",
-          students: "EIN2023",
-          time: "11:05 - 11:55"
+          classroom: "",
+          students: "EIN2020",
+          time: "09:25 - 10:15"
         },
         {
           subject: "Embriologia animal e histologia - 502",
@@ -61,7 +81,7 @@ const data = {
           teachers: [
             "Eliana Peliçon Pereira Figueira"
           ],
-          classroom: "Sala 9-2",
+          classroom: "",
           students: "BIO_ESPECIAL",
           time: "21:00 - 21:50"
         },
@@ -71,19 +91,9 @@ const data = {
           teachers: [
             "Eliana Peliçon Pereira Figueira"
           ],
-          classroom: "Sala 9-2",
+          classroom: "",
           students: "BIO_ESPECIAL",
           time: "19:50 - 20:40"
-        },
-        {
-          subject: "Biologia I - 2324",
-          size: 2,
-          teachers: [
-            "Eliana Peliçon Pereira Figueira"
-          ],
-          classroom: "Laboratório de Biologia",
-          students: "COM2023",
-          time: "07:30 - 08:20"
         },
         {
           subject: "Biologia I - 459",
@@ -91,9 +101,9 @@ const data = {
           teachers: [
             "Eliana Peliçon Pereira Figueira"
           ],
-          classroom: "Laboratório de Biologia",
+          classroom: "",
           students: "AGO2023",
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -105,24 +115,14 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Biologia 4 - 222",
-          size: 2,
-          teachers: [
-            "Eliana Peliçon Pereira Figueira"
-          ],
-          classroom: "Laboratório de Biologia",
-          students: "EIN2020",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Embriologia animal e histologia - 502",
+          subject: "Biologia 1 - 122",
           size: 1,
           teachers: [
             "Eliana Peliçon Pereira Figueira"
           ],
           classroom: "",
-          students: "BIO_ESPECIAL_2",
-          time: "19:50 - 20:40"
+          students: "EIN2023",
+          time: "07:30 - 08:20"
         }
       ]
     }
