--- a/docs/professor/joaquim_jose_honorio_de_lima.mdx
+++ b/docs/professor/joaquim_jose_honorio_de_lima.mdx
@@ -6,14 +6,14 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Informática Instrumental - 1532",
+          subject: "Informática Instrumental - 596",
           size: 2,
           teachers: [
             "Joaquim José Honório de Lima"
           ],
-          classroom: "Laboratório de Informatica A",
-          students: "EIN2023",
-          time: "07:30 - 08:20"
+          classroom: "",
+          students: "ELE2023",
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -23,6 +23,10 @@ const data = {
     },
     {
       dayName: "Quarta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quinta-Feira",
       dayClasses: [
         {
           subject: "Informática instrumental e aplicada - 468",
@@ -30,28 +34,9 @@ const data = {
           teachers: [
             "Joaquim José Honório de Lima"
           ],
-          classroom: "Laboratório de Informatica C",
-          students: "AGO2023 - GB",
-          time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Informática Instrumental - 596",
-          size: 2,
-          teachers: [
-            "Joaquim José Honório de Lima"
-          ],
-          classroom: "Laboratório de Informatica C",
-          students: "ELE2023",
-          time: "19:00 - 19:50"
+          classroom: "",
+          students: "AGO2023 - Grupo A",
+          time: "13:10 - 14:00"
         },
         {
           subject: "Informática instrumental e aplicada - 468",
@@ -59,9 +44,24 @@ const data = {
           teachers: [
             "Joaquim José Honório de Lima"
           ],
-          classroom: "Laboratório de Informatica C",
-          students: "AGO2023 - GA",
+          classroom: "",
+          students: "AGO2023 - Grupo B",
           time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
+          subject: "Informática Instrumental - 1532",
+          size: 2,
+          teachers: [
+            "Joaquim José Honório de Lima"
+          ],
+          classroom: "",
+          students: "EIN2023",
+          time: "09:25 - 10:15"
         }
       ]
     }
