--- a/docs/professor/karen_cristina_guedes_silva.mdx
+++ b/docs/professor/karen_cristina_guedes_silva.mdx
@@ -6,22 +6,27 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "(APOVA) - 1094",
+          subject: "Agroindustrialização de Produtos de Origem Vegetal e Animal (APOVA) - 1094",
           size: 1,
           teachers: [
             "Karen Cristina Guedes Silva"
           ],
           classroom: "",
-          students: "AGO2021 - GB",
+          students: "AGO2021 - Grupo B",
           time: "11:05 - 11:55"
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: [
+        },
         {
-          subject: "Matemática Aplicada - 2342",
+          subject: "Máquinas, Equipamentos e Instalações Industriais - 2341",
+          size: 1,
+          teachers: [
+            "Karen Cristina Guedes Silva"
+          ],
+          classroom: "",
+          students: "TAL2023",
+          time: "21:00 - 21:50"
+        },
+        {
+          subject: "Máquinas, Equipamentos e Instalações Industriais - 2341",
           size: 1,
           teachers: [
             "Karen Cristina Guedes Silva"
@@ -29,18 +34,12 @@ const data = {
           classroom: "",
           students: "TAL2023",
           time: "21:50 - 22:40"
-        },
-        {
-          subject: "Métodos e Técnicas de Pesquisa Aplicada - 1513",
-          size: 2,
-          teachers: [
-            "Karen Cristina Guedes Silva"
-          ],
-          classroom: "Laboratório de Informatica C",
-          students: "TGC2023",
-          time: "19:00 - 19:50"
         }
       ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
@@ -50,6 +49,21 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
+          subject: "Métodos e Técnicas de Pesquisa Aplicada - 1513",
+          size: 2,
+          teachers: [
+            "Karen Cristina Guedes Silva"
+          ],
+          classroom: "",
+          students: "TGC2023",
+          time: "19:00 - 19:50"
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
           subject: "Matemática Aplicada - 2342",
           size: 1,
           teachers: [
@@ -60,29 +74,14 @@ const data = {
           time: "21:00 - 21:50"
         },
         {
-          subject: "Máquinas, Equipamentos e Instalações Industriais - 2341",
+          subject: "Matemática Aplicada - 2342",
           size: 1,
           teachers: [
             "Karen Cristina Guedes Silva"
           ],
           classroom: "",
           students: "TAL2023",
-          time: "19:50 - 20:40"
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Máquinas, Equipamentos e Instalações Industriais - 2341",
-          size: 1,
-          teachers: [
-            "Karen Cristina Guedes Silva"
-          ],
-          classroom: "",
-          students: "TAL2023",
-          time: "21:00 - 21:50"
+          time: "21:50 - 22:40"
         }
       ]
     }
