--- a/docs/professor/keyla_christina_almeida_portela.mdx
+++ b/docs/professor/keyla_christina_almeida_portela.mdx
@@ -6,38 +6,35 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Elaboração de Projetos - 1505",
-          size: 2,
-          teachers: [
-            "Keyla Christina Almeida Portela"
-          ],
-          classroom: "Sala 15-2",
-          students: "TGC2021",
-          time: "21:00 - 21:50"
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
           subject: "Gestão da Informação e documentação - 1502",
           size: 2,
           teachers: [
             "Keyla Christina Almeida Portela"
           ],
-          classroom: "Sala 15-2",
+          classroom: "",
           students: "TGC2021",
           time: "19:00 - 19:50"
-        },
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
+        {
+          subject: "Promoção e organização de eventos empresariais - 1495",
+          size: 2,
+          teachers: [
+            "Keyla Christina Almeida Portela"
+          ],
+          classroom: "",
+          students: "TGC2022",
+          time: "21:00 - 21:50"
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
         {
           subject: "Língua Estrangeira: Inglês - 2329",
           size: 2,
@@ -46,21 +43,25 @@ const data = {
           ],
           classroom: "",
           students: "COM2023",
-          time: "09:25 - 10:15"
+          time: "10:15 - 11:05"
         }
       ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Promoção e organização de eventos empresariais - 1495",
+          subject: "Elaboração de Projetos - 1505",
           size: 2,
           teachers: [
             "Keyla Christina Almeida Portela"
           ],
-          classroom: "Sala 3-1",
-          students: "TGC2022",
+          classroom: "",
+          students: "TGC2021",
           time: "21:00 - 21:50"
         }
       ]
