--- a/docs/professor/leandro_luiz_borges.mdx
+++ b/docs/professor/leandro_luiz_borges.mdx
@@ -8,6 +8,49 @@ const data = {
     },
     {
       dayName: "Terça-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Biologia III - 1083",
+          size: 2,
+          teachers: [
+            "Leandro Luiz Borges"
+          ],
+          classroom: "",
+          students: "AGO2021",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Microbiologia e imunologia - 501",
+          size: 1,
+          teachers: [
+            "Leandro Luiz Borges"
+          ],
+          classroom: "",
+          students: "BIO_ESPECIAL_2",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Microbiologia e imunologia - 501",
+          size: 1,
+          teachers: [
+            "Leandro Luiz Borges"
+          ],
+          classroom: "",
+          students: "BIO_ESPECIAL_2",
+          time: "19:50 - 20:40"
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
       dayClasses: [
         {
           subject: "Microbiologia e imunologia - 501",
@@ -28,51 +71,6 @@ const data = {
           classroom: "",
           students: "BIO_ESPECIAL_2",
           time: "21:50 - 22:40"
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Microbiologia e imunologia - 501",
-          size: 1,
-          teachers: [
-            "Leandro Luiz Borges"
-          ],
-          classroom: "",
-          students: "BIO_ESPECIAL_2",
-          time: "21:00 - 21:50"
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Biologia III - 1083",
-          size: 2,
-          teachers: [
-            "Leandro Luiz Borges"
-          ],
-          classroom: "Laboratório de Biologia",
-          students: "AGO2021",
-          time: "13:10 - 14:00"
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Microbiologia e imunologia - 501",
-          size: 1,
-          teachers: [
-            "Leandro Luiz Borges"
-          ],
-          classroom: "",
-          students: "BIO_ESPECIAL_2",
-          time: "21:00 - 21:50"
         }
       ]
     }
