--- a/docs/professor/leiliane_cristine_de_souza.mdx
+++ b/docs/professor/leiliane_cristine_de_souza.mdx
@@ -11,9 +11,29 @@ const data = {
           teachers: [
             "Leiliane Cristine de Souza"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGR2022",
-          time: "21:00 - 21:50"
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Produção Animal II - 1093",
+          size: 2,
+          teachers: [
+            "Leiliane Cristine de Souza"
+          ],
+          classroom: "",
+          students: "AGO2021",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Sanidade Animal - 1092",
+          size: 2,
+          teachers: [
+            "Leiliane Cristine de Souza"
+          ],
+          classroom: "",
+          students: "AGO2021",
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -21,14 +41,14 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Sanidade Animal - 1092",
-          size: 2,
+          subject: "Produção Animal I - 628",
+          size: 1,
           teachers: [
             "Leiliane Cristine de Souza"
           ],
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "15:05 - 15:55"
+          classroom: "",
+          students: "AGO2022",
+          time: "08:20 - 09:10"
         }
       ]
     },
@@ -36,14 +56,14 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Produção Animal I - 628",
-          size: 1,
+          subject: "Avicultura - 2207",
+          size: 2,
           teachers: [
             "Leiliane Cristine de Souza"
           ],
-          classroom: "Sala 14-2",
-          students: "AGO2022",
-          time: "11:05 - 11:55"
+          classroom: "",
+          students: "AGR2022",
+          time: "19:00 - 19:50"
         },
         {
           subject: "Sanidade Animal - 1092",
@@ -51,7 +71,7 @@ const data = {
           teachers: [
             "Leiliane Cristine de Souza"
           ],
-          classroom: "Sala 15-2",
+          classroom: "",
           students: "AGO2021",
           time: "07:30 - 08:20"
         }
@@ -59,6 +79,10 @@ const data = {
     },
     {
       dayName: "Quinta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Sexta-Feira",
       dayClasses: [
         {
           subject: "Produção Animal I - 628",
@@ -66,34 +90,9 @@ const data = {
           teachers: [
             "Leiliane Cristine de Souza"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGO2022",
-          time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Avicultura - 2207",
-          size: 2,
-          teachers: [
-            "Leiliane Cristine de Souza"
-          ],
-          classroom: "Sala 14-2",
-          students: "AGR2022",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Produção Animal II - 1093",
-          size: 2,
-          teachers: [
-            "Leiliane Cristine de Souza"
-          ],
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "07:30 - 08:20"
+          time: "15:05 - 15:55"
         },
         {
           subject: "Produção Animal II - 1093",
@@ -101,9 +100,9 @@ const data = {
           teachers: [
             "Leiliane Cristine de Souza"
           ],
-          classroom: "Sala 15-2",
+          classroom: "",
           students: "AGO2021",
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         }
       ]
     }
