--- a/docs/professor/luis_henrique_manosso_von_mecheln.mdx
+++ b/docs/professor/luis_henrique_manosso_von_mecheln.mdx
@@ -11,9 +11,9 @@ const data = {
           teachers: [
             "Luis Henrique Manosso Von Mecheln"
           ],
-          classroom: "Laboratório de Informatica BioPark",
+          classroom: "",
           students: "IIW2023B",
-          time: "07:30 - 08:20"
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -30,7 +30,7 @@ const data = {
           teachers: [
             "Luis Henrique Manosso Von Mecheln"
           ],
-          classroom: "Laboratório de Informatica BioPark",
+          classroom: "",
           students: "IIW2023B",
           time: "07:30 - 08:20"
         }
@@ -45,9 +45,9 @@ const data = {
           teachers: [
             "Luis Henrique Manosso Von Mecheln"
           ],
-          classroom: "Sala 11-2",
+          classroom: "",
           students: "IIW2022A",
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -60,7 +60,7 @@ const data = {
           teachers: [
             "Luis Henrique Manosso Von Mecheln"
           ],
-          classroom: "Sala 12-2",
+          classroom: "",
           students: "IIW2021",
           time: "07:30 - 08:20"
         }
