--- a/docs/professor/novo_professor_fisica_biopark_2023.mdx
+++ b/docs/professor/novo_professor_fisica_biopark_2023.mdx
@@ -4,14 +4,6 @@ const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quarta-Feira",
       dayClasses: [
         {
           subject: "Física I - 1070",
@@ -19,19 +11,39 @@ const data = {
           teachers: [
             "Novo professor Física Biopark 2023"
           ],
-          classroom: "BioPark-02",
+          classroom: "",
           students: "IIW2023B",
-          time: "13:10 - 14:00"
-        },
+          time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
+        {
+          subject: "Física I - 1070",
+          size: 2,
+          teachers: [
+            "Novo professor Física Biopark 2023"
+          ],
+          classroom: "",
+          students: "IIW2023B",
+          time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
         {
           subject: "Física II - 1229",
           size: 2,
           teachers: [
             "Novo professor Física Biopark 2023"
           ],
-          classroom: "Laboratório de Física",
+          classroom: "",
           students: "IIW2022B",
-          time: "15:05 - 15:55"
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -43,24 +55,14 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Física I - 1070",
-          size: 2,
-          teachers: [
-            "Novo professor Física Biopark 2023"
-          ],
-          classroom: "BioPark-02",
-          students: "IIW2023B",
-          time: "15:05 - 15:55"
-        },
-        {
           subject: "Física II - 1229",
           size: 2,
           teachers: [
             "Novo professor Física Biopark 2023"
           ],
-          classroom: "Laboratório de Física",
+          classroom: "",
           students: "IIW2022B",
-          time: "13:10 - 14:00"
+          time: "07:30 - 08:20"
         }
       ]
     }
