--- a/docs/professor/novo_professor_ingles_biopark_2023.mdx
+++ b/docs/professor/novo_professor_ingles_biopark_2023.mdx
@@ -4,6 +4,10 @@ const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Terça-Feira",
       dayClasses: [
         {
           subject: "Lingua estrangeira - Inglês - 1225",
@@ -11,15 +15,11 @@ const data = {
           teachers: [
             "Novo professor Inglês Biopark 2023"
           ],
-          classroom: "BioPark-02",
+          classroom: "",
           students: "IIW2023B",
           time: "11:05 - 11:55"
         }
       ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
@@ -30,9 +30,9 @@ const data = {
           teachers: [
             "Novo professor Inglês Biopark 2023"
           ],
-          classroom: "BioPark-02",
+          classroom: "",
           students: "IIW2023B",
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
         }
       ]
     },
