--- a/docs/professor/novo_professor_portugues_biopark_2023.mdx
+++ b/docs/professor/novo_professor_portugues_biopark_2023.mdx
@@ -4,11 +4,33 @@ const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Língua Portuguesa e Literatura II - 1226",
+          size: 2,
+          teachers: [
+            "Novo professor Portugues Biopark 2023"
+          ],
+          classroom: "",
+          students: "IIW2022B",
+          time: "07:30 - 08:20"
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Língua Portuguesa e Literatura I - 1069",
+          size: 2,
+          teachers: [
+            "Novo professor Portugues Biopark 2023"
+          ],
+          classroom: "",
+          students: "IIW2023B",
+          time: "09:25 - 10:15"
+        }
+      ]
     },
     {
       dayName: "Quarta-Feira",
@@ -19,50 +41,30 @@ const data = {
           teachers: [
             "Novo professor Portugues Biopark 2023"
           ],
-          classroom: "BioPark-02",
+          classroom: "",
           students: "IIW2023B",
-          time: "15:05 - 15:55"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura II - 1226",
-          size: 2,
-          teachers: [
-            "Novo professor Portugues Biopark 2023"
-          ],
-          classroom: "BioPark-01",
-          students: "IIW2022B",
-          time: "13:10 - 14:00"
+          time: "10:15 - 11:05"
         }
       ]
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Sexta-Feira",
       dayClasses: [
-        {
-          subject: "Língua Portuguesa e Literatura I - 1069",
-          size: 2,
-          teachers: [
-            "Novo professor Portugues Biopark 2023"
-          ],
-          classroom: "BioPark-02",
-          students: "IIW2023B",
-          time: "13:10 - 14:00"
-        },
         {
           subject: "Língua Portuguesa e Literatura II - 1226",
           size: 2,
           teachers: [
             "Novo professor Portugues Biopark 2023"
           ],
-          classroom: "BioPark-01",
+          classroom: "",
           students: "IIW2022B",
-          time: "15:05 - 15:55"
+          time: "07:30 - 08:20"
         }
       ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: []
     }
   ],
   time: [
