--- a/docs/professor/octavio_henrique_viana.mdx
+++ b/docs/professor/octavio_henrique_viana.mdx
@@ -6,14 +6,24 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Meteorologia e Bioclimatologia na Agropecuária - 631",
+          subject: "Desenho técnico e instalações agropecuárias - 1456",
           size: 2,
           teachers: [
             "Octavio Henrique Viana"
           ],
-          classroom: "Sala 14-2",
-          students: "AGO2022",
-          time: "13:10 - 14:00"
+          classroom: "",
+          students: "AGR2023",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Mecanização Agrícola, Irrigação e Drenagem - 1096",
+          size: 2,
+          teachers: [
+            "Octavio Henrique Viana"
+          ],
+          classroom: "",
+          students: "AGO2021",
+          time: "15:05 - 15:55"
         }
       ]
     },
@@ -21,78 +31,68 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Mecanização Agrícola, Irrigação e Drenagem - 1096",
+          subject: "Mecanização Agrícola - 2217",
           size: 2,
           teachers: [
             "Octavio Henrique Viana"
           ],
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "09:25 - 10:15"
+          classroom: "",
+          students: "AGR2022",
+          time: "21:00 - 21:50"
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Desenho técnico e topografia - 469",
+          size: 2,
+          teachers: [
+            "Octavio Henrique Viana"
+          ],
+          classroom: "",
+          students: "AGO2023 - Grupo A",
+          time: "07:30 - 08:20"
         },
+        {
+          subject: "Desenho técnico e topografia - 469",
+          size: 2,
+          teachers: [
+            "Octavio Henrique Viana"
+          ],
+          classroom: "",
+          students: "AGO2023 - Grupo B",
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Meteorologia e Bioclimatologia na Agropecuária - 631",
+          size: 2,
+          teachers: [
+            "Octavio Henrique Viana"
+          ],
+          classroom: "",
+          students: "AGO2022",
+          time: "09:25 - 10:15"
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
         {
           subject: "Orientação de estágio supervisionado - 1097",
           size: 1,
           teachers: [
             "Octavio Henrique Viana"
           ],
-          classroom: "Laboratório de Informatica C",
+          classroom: "",
           students: "AGO2021",
-          time: "11:05 - 11:55"
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Desenho técnico e instalações agropecuárias - 1456",
-          size: 2,
-          teachers: [
-            "Octavio Henrique Viana"
-          ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
-          students: "AGR2023",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Desenho técnico e topografia - 469",
-          size: 2,
-          teachers: [
-            "Octavio Henrique Viana"
-          ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
-          students: "AGO2023 - GA",
-          time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Desenho técnico e topografia - 469",
-          size: 2,
-          teachers: [
-            "Octavio Henrique Viana"
-          ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
-          students: "AGO2023 - GB",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Mecanização Agrícola - 2217",
-          size: 2,
-          teachers: [
-            "Octavio Henrique Viana"
-          ],
-          classroom: "Sala 14-2",
-          students: "AGR2022",
-          time: "19:00 - 19:50"
+          time: "09:25 - 10:15"
         }
       ]
     }
