--- a/docs/professor/pedro_leites_junior.mdx
+++ b/docs/professor/pedro_leites_junior.mdx
@@ -6,6 +6,41 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Língua Portuguesa e Literatura I - 455",
+          size: 2,
+          teachers: [
+            "Pedro Leites Junior"
+          ],
+          classroom: "",
+          students: "AGO2023",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura II - 613",
+          size: 2,
+          teachers: [
+            "Pedro Leites Junior"
+          ],
+          classroom: "",
+          students: "AGO2022",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura III - 1081",
+          size: 2,
+          teachers: [
+            "Pedro Leites Junior"
+          ],
+          classroom: "",
+          students: "AGO2021",
+          time: "13:10 - 14:00"
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
+        {
           subject: "Comunicação técnica - 2335",
           size: 1,
           teachers: [
@@ -14,48 +49,32 @@ const data = {
           classroom: "",
           students: "TAL2023",
           time: "21:00 - 21:50"
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: [
+        },
         {
-          subject: "Língua Portuguesa e Literatura II - 613",
-          size: 1,
-          teachers: [
-            "Pedro Leites Junior"
-          ],
-          classroom: "Sala 14-2",
-          students: "AGO2022",
-          time: "11:05 - 11:55"
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Comunicação técnica - 2335",
+          subject: "Língua Portuguesa e Literatura I - 455",
           size: 1,
           teachers: [
             "Pedro Leites Junior"
           ],
           classroom: "",
-          students: "TAL2023",
-          time: "19:00 - 19:50"
+          students: "AGO2023",
+          time: "08:20 - 09:10"
         },
         {
           subject: "Língua Portuguesa e Literatura III - 1081",
-          size: 2,
+          size: 1,
           teachers: [
             "Pedro Leites Junior"
           ],
-          classroom: "Sala 15-2",
+          classroom: "",
           students: "AGO2021",
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         }
       ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
@@ -68,37 +87,7 @@ const data = {
           ],
           classroom: "",
           students: "TAL2023",
-          time: "21:50 - 22:40"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura I - 455",
-          size: 2,
-          teachers: [
-            "Pedro Leites Junior"
-          ],
-          classroom: "",
-          students: "AGO2023",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura I - 455",
-          size: 1,
-          teachers: [
-            "Pedro Leites Junior"
-          ],
-          classroom: "",
-          students: "AGO2023",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura III - 1081",
-          size: 1,
-          teachers: [
-            "Pedro Leites Junior"
-          ],
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "09:25 - 10:15"
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -106,14 +95,24 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Língua Portuguesa e Literatura II - 613",
-          size: 2,
+          subject: "Comunicação técnica - 2335",
+          size: 1,
           teachers: [
             "Pedro Leites Junior"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
+          students: "TAL2023",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura II - 613",
+          size: 1,
+          teachers: [
+            "Pedro Leites Junior"
+          ],
+          classroom: "",
           students: "AGO2022",
-          time: "10:15 - 11:05"
+          time: "09:25 - 10:15"
         }
       ]
     }
