--- a/docs/professor/polyanna_guimaraes_e_miranda.mdx
+++ b/docs/professor/polyanna_guimaraes_e_miranda.mdx
@@ -4,21 +4,25 @@ const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Física III - 1084",
+          subject: "Física II - 617",
           size: 2,
           teachers: [
             "Polyanna Guimarães e Miranda"
           ],
-          classroom: "Laboratório de Física",
-          students: "AGO2021",
-          time: "07:30 - 08:20"
+          classroom: "",
+          students: "AGO2022",
+          time: "13:10 - 14:00"
         }
       ]
     },
     {
-      dayName: "Terça-Feira",
+      dayName: "Quarta-Feira",
       dayClasses: [
         {
           subject: "Física III - 1242",
@@ -26,14 +30,14 @@ const data = {
           teachers: [
             "Polyanna Guimarães e Miranda"
           ],
-          classroom: "Laboratório de Física",
+          classroom: "",
           students: "IIW2021",
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         }
       ]
     },
     {
-      dayName: "Quarta-Feira",
+      dayName: "Quinta-Feira",
       dayClasses: [
         {
           subject: "Física I - 1070",
@@ -43,32 +47,27 @@ const data = {
           ],
           classroom: "",
           students: "IIW2023A",
-          time: "15:05 - 15:55"
+          time: "10:15 - 11:05"
         },
         {
-          subject: "Física II - 617",
+          subject: "Física I - 460",
           size: 2,
           teachers: [
             "Polyanna Guimarães e Miranda"
           ],
-          classroom: "Laboratório de Física",
-          students: "AGO2022",
-          time: "09:25 - 10:15"
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
+          classroom: "",
+          students: "AGO2023",
+          time: "15:05 - 15:55"
+        },
         {
           subject: "Física II - 1229",
           size: 2,
           teachers: [
             "Polyanna Guimarães e Miranda"
           ],
-          classroom: "Laboratório de Física",
+          classroom: "",
           students: "IIW2022A",
-          time: "07:30 - 08:20"
+          time: "13:10 - 14:00"
         }
       ]
     },
@@ -76,14 +75,14 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Física I - 460",
+          subject: "Física III - 1084",
           size: 2,
           teachers: [
             "Polyanna Guimarães e Miranda"
           ],
-          classroom: "Laboratório de Física",
-          students: "AGO2023",
-          time: "15:05 - 15:55"
+          classroom: "",
+          students: "AGO2021",
+          time: "10:15 - 11:05"
         }
       ]
     }
