--- a/docs/professor/renata_carolina_pereira.mdx
+++ b/docs/professor/renata_carolina_pereira.mdx
@@ -6,27 +6,12 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Artes 2 - 166",
-          size: 1,
-          teachers: [
-            "Renata Carolina Pereira"
-          ],
-          classroom: "Sala 6-2",
-          students: "EIN2022",
-          time: "10:15 - 11:05"
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: [
-        {
           subject: "Arte I - 1235",
           size: 1,
           teachers: [
             "Renata Carolina Pereira"
           ],
-          classroom: "Sala 11-2",
+          classroom: "",
           students: "IIW2022A",
           time: "09:25 - 10:15"
         },
@@ -38,50 +23,21 @@ const data = {
           ],
           classroom: "",
           students: "EIN2023",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Artes II - 614",
-          size: 2,
-          teachers: [
-            "Renata Carolina Pereira"
-          ],
-          classroom: "Sala 14-2",
-          students: "AGO2022",
-          time: "13:10 - 14:00"
+          time: "11:05 - 11:55"
         }
       ]
     },
     {
-      dayName: "Quarta-Feira",
+      dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Arte I - 1235",
+          subject: "Artes 2 - 166",
           size: 1,
           teachers: [
             "Renata Carolina Pereira"
           ],
-          classroom: "Sala 11-2",
-          students: "IIW2022A",
-          time: "09:25 - 10:15"
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Artes 3 - 221",
-          size: 1,
-          teachers: [
-            "Renata Carolina Pereira"
-          ],
-          classroom: "Sala 8-2",
-          students: "EIN2020",
+          classroom: "",
+          students: "EIN2022",
           time: "09:25 - 10:15"
         },
         {
@@ -92,9 +48,52 @@ const data = {
           ],
           classroom: "",
           students: "AGO2023",
-          time: "13:10 - 14:00"
+          time: "10:15 - 11:05"
         }
       ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Arte I - 1235",
+          size: 1,
+          teachers: [
+            "Renata Carolina Pereira"
+          ],
+          classroom: "",
+          students: "IIW2022A",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Artes 3 - 221",
+          size: 1,
+          teachers: [
+            "Renata Carolina Pereira"
+          ],
+          classroom: "",
+          students: "EIN2020",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Artes II - 614",
+          size: 2,
+          teachers: [
+            "Renata Carolina Pereira"
+          ],
+          classroom: "",
+          students: "AGO2022",
+          time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: []
     }
   ],
   time: [
