--- a/docs/professor/suzane_conceicao_pantolfi_tostes.mdx
+++ b/docs/professor/suzane_conceicao_pantolfi_tostes.mdx
@@ -4,10 +4,64 @@ const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "História 2 - 178",
+          size: 1,
+          teachers: [
+            "Suzane Conceição Pantolfi Tostes"
+          ],
+          classroom: "",
+          students: "EIN2022",
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "História 3 - 207",
+          size: 1,
+          teachers: [
+            "Suzane Conceição Pantolfi Tostes"
+          ],
+          classroom: "",
+          students: "EIN2021",
+          time: "07:30 - 08:20"
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
+      dayClasses: [
+        {
+          subject: "História I - 626",
+          size: 1,
+          teachers: [
+            "Suzane Conceição Pantolfi Tostes"
+          ],
+          classroom: "",
+          students: "AGO2022",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "História I - 626",
+          size: 1,
+          teachers: [
+            "Suzane Conceição Pantolfi Tostes"
+          ],
+          classroom: "",
+          students: "AGO2022",
+          time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Sexta-Feira",
       dayClasses: [
         {
           subject: "História 1 - 131",
@@ -17,72 +71,17 @@ const data = {
           ],
           classroom: "",
           students: "EIN2023",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "História 2 - 178",
-          size: 1,
-          teachers: [
-            "Suzane Conceição Pantolfi Tostes"
-          ],
-          classroom: "Sala 6-2",
-          students: "EIN2022",
-          time: "11:05 - 11:55"
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "História 3 - 207",
-          size: 1,
-          teachers: [
-            "Suzane Conceição Pantolfi Tostes"
-          ],
-          classroom: "Sala 7-2",
-          students: "EIN2021",
           time: "08:20 - 09:10"
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
+        },
         {
           subject: "História 4 - 229",
           size: 2,
           teachers: [
             "Suzane Conceição Pantolfi Tostes"
           ],
-          classroom: "Sala 8-2",
+          classroom: "",
           students: "EIN2020",
-          time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "História I - 626",
-          size: 1,
-          teachers: [
-            "Suzane Conceição Pantolfi Tostes"
-          ],
-          classroom: "Sala 14-2",
-          students: "AGO2022",
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "História I - 626",
-          size: 1,
-          teachers: [
-            "Suzane Conceição Pantolfi Tostes"
-          ],
-          classroom: "Sala 14-2",
-          students: "AGO2022",
-          time: "14:00 - 14:50"
         }
       ]
     }
