--- a/docs/turma/ago2021.mdx
+++ b/docs/turma/ago2021.mdx
@@ -6,44 +6,64 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Gestão e Empreendedorismo Rural - 1095",
-          size: 2,
-          teachers: [
-            "Cesar Gomes de Freitas"
-          ],
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "(APOVA) - 1094",
+          subject: "Agroindustrialização de Produtos de Origem Vegetal e Animal (APOVA) - 1094",
           size: 1,
           teachers: [
             "Daniele de Almeida Paula"
           ],
           classroom: "",
-          students: "AGO2021 - GA",
+          students: "AGO2021 - Grupo A",
           time: "11:05 - 11:55"
         },
         {
-          subject: "(APOVA) - 1094",
+          subject: "Agroindustrialização de Produtos de Origem Vegetal e Animal (APOVA) - 1094",
           size: 1,
           teachers: [
             "Karen Cristina Guedes Silva"
           ],
           classroom: "",
-          students: "AGO2021 - GB",
+          students: "AGO2021 - Grupo B",
           time: "11:05 - 11:55"
         },
         {
-          subject: "Física III - 1084",
+          subject: "Produção Animal II - 1093",
           size: 2,
           teachers: [
-            "Polyanna Guimarães e Miranda"
+            "Leiliane Cristine de Souza"
           ],
-          classroom: "Laboratório de Física",
+          classroom: "",
+          students: "AGO2021",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Sanidade Animal - 1092",
+          size: 2,
+          teachers: [
+            "Leiliane Cristine de Souza"
+          ],
+          classroom: "",
           students: "AGO2021",
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Mecanização Agrícola, Irrigação e Drenagem - 1096",
+          size: 2,
+          teachers: [
+            "Octavio Henrique Viana"
+          ],
+          classroom: "",
+          students: "AGO2021",
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura III - 1081",
+          size: 2,
+          teachers: [
+            "Pedro Leites Junior"
+          ],
+          classroom: "",
+          students: "AGO2021",
+          time: "13:10 - 14:00"
         }
       ]
     },
@@ -56,129 +76,9 @@ const data = {
           teachers: [
             "Amilcar Machado Profeta Filho"
           ],
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "História II - 1089",
-          size: 1,
-          teachers: [
-            "Amilcar Machado Profeta Filho"
-          ],
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Educação Física III - 1082",
-          size: 2,
-          teachers: [
-            "Bruna Valeriano da Silva Lisboa"
-          ],
-          classroom: "Educação Física / Sala 4 B2",
-          students: "AGO2021",
-          time: "13:10 - 14:00"
-        },
-        {
-          subject: "Sanidade Animal - 1092",
-          size: 2,
-          teachers: [
-            "Leiliane Cristine de Souza"
-          ],
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "15:05 - 15:55"
-        },
-        {
-          subject: "Mecanização Agrícola, Irrigação e Drenagem - 1096",
-          size: 2,
-          teachers: [
-            "Octavio Henrique Viana"
-          ],
-          classroom: "Sala 15-2",
+          classroom: "",
           students: "AGO2021",
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Orientação de estágio supervisionado - 1097",
-          size: 1,
-          teachers: [
-            "Octavio Henrique Viana"
-          ],
-          classroom: "Laboratório de Informatica C",
-          students: "AGO2021",
-          time: "11:05 - 11:55"
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Matemática III - 1086",
-          size: 2,
-          teachers: [
-            "Elenice Josefa Kolancko Setti"
-          ],
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "15:05 - 15:55"
-        },
-        {
-          subject: "Cultura e Cinema Nacional III - 1193",
-          size: 1,
-          teachers: [
-            "Josiane Paula Maltauro"
-          ],
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Química III - 1085",
-          size: 2,
-          teachers: [
-            "Kathia Regina Kunzler Bechlin"
-          ],
-          classroom: "Laboratório de Química",
-          students: "AGO2021",
-          time: "13:10 - 14:00"
-        },
-        {
-          subject: "Sanidade Animal - 1092",
-          size: 2,
-          teachers: [
-            "Leiliane Cristine de Souza"
-          ],
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura III - 1081",
-          size: 2,
-          teachers: [
-            "Pedro Leites Junior"
-          ],
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "10:15 - 11:05"
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Sociologia e extensão rural - 1087",
-          size: 2,
-          teachers: [
-            "Elias Franco"
-          ],
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "07:30 - 08:20"
         },
         {
           subject: "Filosofia III - 1088",
@@ -186,17 +86,17 @@ const data = {
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "Sala 15-2",
+          classroom: "",
           students: "AGO2021",
-          time: "15:05 - 15:55"
+          time: "08:20 - 09:10"
         },
         {
-          subject: "Biologia III - 1083",
+          subject: "Química III - 1085",
           size: 2,
           teachers: [
-            "Leandro Luiz Borges"
+            "Kathia Regina Kunzler Bechlin"
           ],
-          classroom: "Laboratório de Biologia",
+          classroom: "",
           students: "AGO2021",
           time: "13:10 - 14:00"
         },
@@ -206,19 +106,19 @@ const data = {
           teachers: [
             "Pedro Leites Junior"
           ],
-          classroom: "Sala 15-2",
+          classroom: "",
           students: "AGO2021",
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Culturas II - 1091",
-          size: 1,
+          size: 2,
           teachers: [
             "Sônia Maria Mandotti"
           ],
-          classroom: "Sala 15-2",
+          classroom: "",
           students: "AGO2021",
-          time: "15:55 - 16:45"
+          time: "15:05 - 15:55"
         },
         {
           subject: "Horticultura - 1090",
@@ -226,9 +126,99 @@ const data = {
           teachers: [
             "Tatiane Martinazzo Portz"
           ],
-          classroom: "Sala 15-2",
+          classroom: "",
           students: "AGO2021",
           time: "10:15 - 11:05"
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
+          subject: "História II - 1089",
+          size: 1,
+          teachers: [
+            "Amilcar Machado Profeta Filho"
+          ],
+          classroom: "",
+          students: "AGO2021",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Educação Física III - 1082",
+          size: 2,
+          teachers: [
+            "Bruna Valeriano da Silva Lisboa"
+          ],
+          classroom: "",
+          students: "AGO2021",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Sanidade Animal - 1092",
+          size: 2,
+          teachers: [
+            "Leiliane Cristine de Souza"
+          ],
+          classroom: "",
+          students: "AGO2021",
+          time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Gestão e Empreendedorismo Rural - 1095",
+          size: 2,
+          teachers: [
+            "Cesar Gomes de Freitas"
+          ],
+          classroom: "",
+          students: "AGO2021",
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Matemática III - 1086",
+          size: 2,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "",
+          students: "AGO2021",
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Sociologia e extensão rural - 1087",
+          size: 2,
+          teachers: [
+            "Elias Franco"
+          ],
+          classroom: "",
+          students: "AGO2021",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Cultura e Cinema Nacional III - 1193",
+          size: 1,
+          teachers: [
+            "Josiane Paula Maltauro"
+          ],
+          classroom: "",
+          students: "AGO2021",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Biologia III - 1083",
+          size: 2,
+          teachers: [
+            "Leandro Luiz Borges"
+          ],
+          classroom: "",
+          students: "AGO2021",
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -237,33 +227,43 @@ const data = {
       dayClasses: [
         {
           subject: "Produção Animal II - 1093",
-          size: 2,
-          teachers: [
-            "Leiliane Cristine de Souza"
-          ],
-          classroom: "Sala 15-2",
-          students: "AGO2021",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Produção Animal II - 1093",
           size: 1,
           teachers: [
             "Leiliane Cristine de Souza"
           ],
-          classroom: "Sala 15-2",
+          classroom: "",
+          students: "AGO2021",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Orientação de estágio supervisionado - 1097",
+          size: 1,
+          teachers: [
+            "Octavio Henrique Viana"
+          ],
+          classroom: "",
           students: "AGO2021",
           time: "09:25 - 10:15"
         },
         {
-          subject: "Culturas II - 1091",
+          subject: "Física III - 1084",
           size: 2,
+          teachers: [
+            "Polyanna Guimarães e Miranda"
+          ],
+          classroom: "",
+          students: "AGO2021",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Culturas II - 1091",
+          size: 1,
           teachers: [
             "Sônia Maria Mandotti"
           ],
-          classroom: "Sala 15-2",
+          classroom: "",
           students: "AGO2021",
-          time: "10:15 - 11:05"
+          time: "08:20 - 09:10"
         }
       ]
     }
