--- a/docs/turma/agr2022.mdx
+++ b/docs/turma/agr2022.mdx
@@ -11,19 +11,19 @@ const data = {
           teachers: [
             "Leiliane Cristine de Souza"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGR2022",
-          time: "21:00 - 21:50"
+          time: "19:00 - 19:50"
         },
         {
-          subject: "Planejamento Agropecuário - 2215",
+          subject: "Culturas II - 2221",
           size: 2,
           teachers: [
             "Sônia Maria Mandotti"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGR2022",
-          time: "19:00 - 19:50"
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -36,17 +36,17 @@ const data = {
           teachers: [
             "Cesar Gomes de Freitas"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGR2022",
           time: "19:00 - 19:50"
         },
         {
-          subject: "Culturas II - 2221",
+          subject: "Mecanização Agrícola - 2217",
           size: 2,
           teachers: [
-            "Sônia Maria Mandotti"
+            "Octavio Henrique Viana"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGR2022",
           time: "21:00 - 21:50"
         }
@@ -56,14 +56,14 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Bovinocultura de Corte - 2208",
+          subject: "Avicultura - 2207",
           size: 2,
           teachers: [
-            "Roberto Haruyoshi Ito"
+            "Leiliane Cristine de Souza"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGR2022",
-          time: "21:00 - 21:50"
+          time: "19:00 - 19:50"
         }
       ]
     },
@@ -76,17 +76,17 @@ const data = {
           teachers: [
             "Roberto Haruyoshi Ito"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGR2022",
           time: "21:00 - 21:50"
         },
         {
-          subject: "Culturas II - 2221",
+          subject: "Planejamento Agropecuário - 2215",
           size: 2,
           teachers: [
             "Sônia Maria Mandotti"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGR2022",
           time: "19:00 - 19:50"
         }
@@ -96,22 +96,22 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Avicultura - 2207",
+          subject: "Bovinocultura de Corte - 2208",
           size: 2,
           teachers: [
-            "Leiliane Cristine de Souza"
+            "Roberto Haruyoshi Ito"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGR2022",
           time: "21:00 - 21:50"
         },
         {
-          subject: "Mecanização Agrícola - 2217",
+          subject: "Culturas II - 2221",
           size: 2,
           teachers: [
-            "Octavio Henrique Viana"
+            "Sônia Maria Mandotti"
           ],
-          classroom: "Sala 14-2",
+          classroom: "",
           students: "AGR2022",
           time: "19:00 - 19:50"
         }
