--- a/docs/turma/ein2021.mdx
+++ b/docs/turma/ein2021.mdx
@@ -6,34 +6,14 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Sociologia 3 - 212",
-          size: 1,
-          teachers: [
-            "Everaldo Lorensetti"
-          ],
-          classroom: "Sala 7-2",
-          students: "EIN2021",
-          time: "11:05 - 11:55"
-        },
-        {
           subject: "Filosofia 3 - 204",
           size: 1,
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "Sala 7-2",
+          classroom: "",
           students: "EIN2021",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Projetos e Instalações Elétricas - 200",
-          size: 2,
-          teachers: [
-            "Grazielli Bueno"
-          ],
-          classroom: "Sala 7-2",
-          students: "EIN2021",
-          time: "07:30 - 08:20"
+          time: "08:20 - 09:10"
         },
         {
           subject: "Segurança do Trabalho - 197",
@@ -41,59 +21,9 @@ const data = {
           teachers: [
             "Grazielli Bueno"
           ],
-          classroom: "Sala 7-2",
-          students: "EIN2021",
-          time: "09:25 - 10:15"
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Lingua Estrangeira Moderna 2 - Ingles - 208",
-          size: 1,
-          teachers: [
-            "Celina de Oliveira Barbosa Gomes"
-          ],
-          classroom: "Sala 7-2",
+          classroom: "",
           students: "EIN2021",
           time: "11:05 - 11:55"
-        },
-        {
-          subject: "Biologia 3 - 202",
-          size: 2,
-          teachers: [
-            "Karina Dias Espartosa"
-          ],
-          classroom: "Laboratório de Biologia",
-          students: "EIN2021",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Matemática 3 - 210",
-          size: 2,
-          teachers: [
-            "Mauro César de Souza Siena"
-          ],
-          classroom: "Sala 7-2",
-          students: "EIN2021",
-          time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Educação Física 3 - 203",
-          size: 1,
-          teachers: [
-            "Bruna Valeriano da Silva Lisboa"
-          ],
-          classroom: "Educação Física / Sala 4 B2",
-          students: "EIN2021",
-          time: "07:30 - 08:20"
         },
         {
           subject: "História 3 - 207",
@@ -101,52 +31,7 @@ const data = {
           teachers: [
             "Suzane Conceição Pantolfi Tostes"
           ],
-          classroom: "Sala 7-2",
-          students: "EIN2021",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Máquinas e Acionamentos - 1575",
-          size: 2,
-          teachers: [
-            "Wylliam Salviano Gongora"
-          ],
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
-          students: "EIN2021",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Máquinas e Acionamentos - 1575",
-          size: 1,
-          teachers: [
-            "Wylliam Salviano Gongora"
-          ],
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
-          students: "EIN2021",
-          time: "09:25 - 10:15"
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Geografia 3 - 206",
-          size: 1,
-          teachers: [
-            "Jhones Donizetti Mendes"
-          ],
-          classroom: "Sala 7-2",
-          students: "EIN2021",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Lingua Portuguesa 3 - 209",
-          size: 2,
-          teachers: [
-            "Kátia Cristiane Kobus Novaes"
-          ],
-          classroom: "Sala 7-2",
+          classroom: "",
           students: "EIN2021",
           time: "07:30 - 08:20"
         },
@@ -156,34 +41,24 @@ const data = {
           teachers: [
             "Vander Fabio Silveira"
           ],
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
+          classroom: "",
           students: "EIN2021",
-          time: "10:15 - 11:05"
+          time: "09:25 - 10:15"
         }
       ]
     },
     {
-      dayName: "Sexta-Feira",
+      dayName: "Terça-Feira",
       dayClasses: [
-        {
-          subject: "Física 3 - 205",
-          size: 2,
-          teachers: [
-            "Bruno Garcia Bonfim"
-          ],
-          classroom: "Laboratório de Física",
-          students: "EIN2021",
-          time: "07:30 - 08:20"
-        },
         {
           subject: "Química 3 - 211",
           size: 1,
           teachers: [
             "Elizangela Cavazzini Cesca"
           ],
-          classroom: "Laboratório de Química",
+          classroom: "",
           students: "EIN2021",
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Processos de Fabricação 2 - 1573",
@@ -191,9 +66,134 @@ const data = {
           teachers: [
             "Luiz Inácio Chaves"
           ],
-          classroom: "Laboratório de Usinagem B4",
+          classroom: "",
+          students: "EIN2021",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Matemática 3 - 210",
+          size: 2,
+          teachers: [
+            "Mauro César de Souza Siena"
+          ],
+          classroom: "",
+          students: "EIN2021",
+          time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
+          subject: "Lingua Estrangeira Moderna 2 - Ingles - 208",
+          size: 1,
+          teachers: [
+            "Celina de Oliveira Barbosa Gomes"
+          ],
+          classroom: "",
           students: "EIN2021",
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Sociologia 3 - 212",
+          size: 1,
+          teachers: [
+            "Everaldo Lorensetti"
+          ],
+          classroom: "",
+          students: "EIN2021",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Geografia 3 - 206",
+          size: 1,
+          teachers: [
+            "Jhones Donizetti Mendes"
+          ],
+          classroom: "",
+          students: "EIN2021",
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "Biologia 3 - 202",
+          size: 2,
+          teachers: [
+            "Karina Dias Espartosa"
+          ],
+          classroom: "",
+          students: "EIN2021",
+          time: "10:15 - 11:05"
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Projetos e Instalações Elétricas - 200",
+          size: 2,
+          teachers: [
+            "Grazielli Bueno"
+          ],
+          classroom: "",
+          students: "EIN2021",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Máquinas e Acionamentos - 1575",
+          size: 2,
+          teachers: [
+            "Wylliam Salviano Gongora"
+          ],
+          classroom: "",
+          students: "EIN2021",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Máquinas e Acionamentos - 1575",
+          size: 1,
+          teachers: [
+            "Wylliam Salviano Gongora"
+          ],
+          classroom: "",
+          students: "EIN2021",
+          time: "11:05 - 11:55"
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
+          subject: "Educação Física 3 - 203",
+          size: 1,
+          teachers: [
+            "Bruna Valeriano da Silva Lisboa"
+          ],
+          classroom: "",
+          students: "EIN2021",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Física 3 - 205",
+          size: 2,
+          teachers: [
+            "Bruno Garcia Bonfim"
+          ],
+          classroom: "",
+          students: "EIN2021",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Lingua Portuguesa 3 - 209",
+          size: 2,
+          teachers: [
+            "Kátia Cristiane Kobus Novaes"
+          ],
+          classroom: "",
+          students: "EIN2021",
+          time: "07:30 - 08:20"
         }
       ]
     }
