--- a/docs/turma/ein2022.mdx
+++ b/docs/turma/ein2022.mdx
@@ -6,59 +6,44 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Lingua Estrangeira Moderna 1 - Inglês - 179",
+          subject: "Física 2 - 175",
           size: 1,
           teachers: [
-            "Kátia Cristiane Kobus Novaes"
+            "Bruno Garcia Bonfim"
           ],
-          classroom: "Sala 6-2",
+          classroom: "",
           students: "EIN2022",
           time: "11:05 - 11:55"
         },
         {
-          subject: "Matemática 2 - 185",
-          size: 2,
-          teachers: [
-            "Mauro César de Souza Siena"
-          ],
-          classroom: "Sala 6-2",
-          students: "EIN2022",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Biologia 2 - 168",
+          subject: "Sociologia 2 - 189",
           size: 1,
           teachers: [
-            "Paula Magalhães Souza Deccache"
+            "Everaldo Lorensetti"
           ],
-          classroom: "Laboratório de Biologia",
+          classroom: "",
           students: "EIN2022",
           time: "09:25 - 10:15"
         },
         {
-          subject: "Artes 2 - 166",
+          subject: "Geografia 2 - 177",
           size: 1,
           teachers: [
-            "Renata Carolina Pereira"
+            "Jhones Donizetti Mendes"
           ],
-          classroom: "Sala 6-2",
+          classroom: "",
           students: "EIN2022",
           time: "10:15 - 11:05"
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: [
+        },
         {
           subject: "História 2 - 178",
           size: 1,
           teachers: [
             "Suzane Conceição Pantolfi Tostes"
           ],
-          classroom: "Sala 6-2",
+          classroom: "",
           students: "EIN2022",
-          time: "11:05 - 11:55"
+          time: "08:20 - 09:10"
         },
         {
           subject: "Metrologia - 1550",
@@ -66,52 +51,42 @@ const data = {
           teachers: [
             "Sérgio Takahashi"
           ],
-          classroom: "Laboratório de Metrologia B4",
-          students: "EIN2022",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Eletrônica - 1554",
-          size: 2,
-          teachers: [
-            "Tiago Henrique dos Santos"
-          ],
-          classroom: "Laboratório de Eletrônica",
+          classroom: "",
           students: "EIN2022",
           time: "07:30 - 08:20"
-        },
-        {
-          subject: "Eletrônica - 1554",
-          size: 1,
-          teachers: [
-            "Tiago Henrique dos Santos"
-          ],
-          classroom: "Laboratório de Eletrônica",
-          students: "EIN2022",
-          time: "09:25 - 10:15"
         }
       ]
     },
     {
-      dayName: "Quarta-Feira",
+      dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Educação Física 2 - 170",
+          subject: "Filosofia 2 - 173",
           size: 1,
           teachers: [
-            "Bruna Valeriano da Silva Lisboa"
+            "Fabio Antônio da Silva"
           ],
-          classroom: "Educação Física / Sala 4 B2",
+          classroom: "",
+          students: "EIN2022",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Lingua Estrangeira Moderna 1 - Inglês - 179",
+          size: 1,
+          teachers: [
+            "Kátia Cristiane Kobus Novaes"
+          ],
+          classroom: "",
           students: "EIN2022",
           time: "11:05 - 11:55"
         },
         {
-          subject: "Cálculo Mecânico - 154",
-          size: 2,
+          subject: "Artes 2 - 166",
+          size: 1,
           teachers: [
-            "Darlan Roque Dapieve"
+            "Renata Carolina Pereira"
           ],
-          classroom: "Sala 6-2",
+          classroom: "",
           students: "EIN2022",
           time: "09:25 - 10:15"
         },
@@ -121,9 +96,44 @@ const data = {
           teachers: [
             "Sérgio Takahashi"
           ],
-          classroom: "Laboratório de Usinagem B4",
+          classroom: "",
           students: "EIN2022",
           time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
+          subject: "Química 2 - 187",
+          size: 2,
+          teachers: [
+            "Elizangela Cavazzini Cesca"
+          ],
+          classroom: "",
+          students: "EIN2022",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Eletrônica - 1554",
+          size: 2,
+          teachers: [
+            "Tiago Henrique dos Santos"
+          ],
+          classroom: "",
+          students: "EIN2022",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Eletrônica - 1554",
+          size: 1,
+          teachers: [
+            "Tiago Henrique dos Santos"
+          ],
+          classroom: "",
+          students: "EIN2022",
+          time: "11:05 - 11:55"
         }
       ]
     },
@@ -131,69 +141,24 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Sociologia 2 - 189",
-          size: 1,
-          teachers: [
-            "Everaldo Lorensetti"
-          ],
-          classroom: "Sala 6-2",
-          students: "EIN2022",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Filosofia 2 - 173",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "Sala 6-2",
-          students: "EIN2022",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Geografia 2 - 177",
-          size: 1,
-          teachers: [
-            "Jhones Donizetti Mendes"
-          ],
-          classroom: "Sala 6-2",
-          students: "EIN2022",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Lingua Portuguesa 2 - 183",
+          subject: "Matemática 2 - 185",
           size: 2,
           teachers: [
-            "Kátia Cristiane Kobus Novaes"
+            "Mauro César de Souza Siena"
           ],
-          classroom: "Sala 6-2",
+          classroom: "",
           students: "EIN2022",
-          time: "09:25 - 10:15"
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Física 2 - 175",
-          size: 1,
-          teachers: [
-            "Bruno Garcia Bonfim"
-          ],
-          classroom: "Laboratório de Física",
-          students: "EIN2022",
-          time: "09:25 - 10:15"
+          time: "10:15 - 11:05"
         },
         {
-          subject: "Química 2 - 187",
-          size: 2,
+          subject: "Biologia 2 - 168",
+          size: 1,
           teachers: [
-            "Elizangela Cavazzini Cesca"
+            "Paula Magalhães Souza Deccache"
           ],
-          classroom: "Laboratório de Química",
+          classroom: "",
           students: "EIN2022",
-          time: "07:30 - 08:20"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Sistemas Digitais - 1553",
@@ -201,9 +166,44 @@ const data = {
           teachers: [
             "Vander Fabio Silveira"
           ],
-          classroom: "Sala 6-2",
+          classroom: "",
           students: "EIN2022",
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
+          subject: "Educação Física 2 - 170",
+          size: 1,
+          teachers: [
+            "Bruna Valeriano da Silva Lisboa"
+          ],
+          classroom: "",
+          students: "EIN2022",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Cálculo Mecânico - 154",
+          size: 2,
+          teachers: [
+            "Darlan Roque Dapieve"
+          ],
+          classroom: "",
+          students: "EIN2022",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Lingua Portuguesa 2 - 183",
+          size: 2,
+          teachers: [
+            "Kátia Cristiane Kobus Novaes"
+          ],
+          classroom: "",
+          students: "EIN2022",
+          time: "09:25 - 10:15"
         }
       ]
     }
