--- a/docs/turma/ein2023.mdx
+++ b/docs/turma/ein2023.mdx
@@ -6,128 +6,156 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Informática Instrumental - 1532",
-          size: 2,
-          teachers: ["Joaquim José Honório de Lima"],
-          classroom: "Laboratório de Informatica A",
+          subject: "Química 1 - 143",
+          size: 1,
+          teachers: [
+            "Elizangela Cavazzini Cesca"
+          ],
+          classroom: "",
           students: "EIN2023",
-          time: "07:30 - 08:20",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Artes 1 - 121",
+          size: 1,
+          teachers: [
+            "Renata Carolina Pereira"
+          ],
+          classroom: "",
+          students: "EIN2023",
+          time: "11:05 - 11:55"
         },
         {
           subject: "Desenho Técnico - 1529",
           size: 2,
-          teachers: ["Sérgio Takahashi"],
+          teachers: [
+            "Sérgio Takahashi"
+          ],
           classroom: "",
-          students: "EIN2023 - GB",
-          time: "10:15 - 11:05",
+          students: "EIN2023 - Grupo B",
+          time: "09:25 - 10:15"
         },
         {
           subject: "Desenho Técnico - 1529",
           size: 1,
-          teachers: ["Michelli Cristina Galli"],
+          teachers: [
+            "Sérgio Takahashi"
+          ],
           classroom: "",
-          students: "EIN2023 - GB",
-          time: "09:25 - 10:15",
+          students: "EIN2023 - Grupo B",
+          time: "08:20 - 09:10"
         },
         {
-          subject: "Matemática 1 - 142",
+          subject: "Eletricidade e Medidas Elétricas - 1530",
           size: 2,
-          teachers: ["Sérgio Augusto Dias Castro"],
+          teachers: [
+            "Tiago Henrique dos Santos"
+          ],
           classroom: "",
-          students: "EIN2023 - GA",
-          time: "09:25 - 10:15",
+          students: "EIN2023 - Grupo A",
+          time: "09:25 - 10:15"
         },
         {
           subject: "Eletricidade e Medidas Elétricas - 1530",
           size: 1,
-          teachers: ["Tiago Henrique dos Santos"],
+          teachers: [
+            "Tiago Henrique dos Santos"
+          ],
           classroom: "",
-          students: "EIN2023 - GA",
-          time: "11:05 - 11:55",
-        },
-      ],
+          students: "EIN2023 - Grupo A",
+          time: "08:20 - 09:10"
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Biologia 1 - 122",
-          size: 1,
-          teachers: ["Eliana Peliçon Pereira Figueira"],
-          classroom: "Laboratório de Biologia",
+          subject: "Matemática 1 - 142",
+          size: 2,
+          teachers: [
+            "Sérgio Augusto Dias Castro"
+          ],
+          classroom: "",
           students: "EIN2023",
-          time: "10:15 - 11:05",
+          time: "07:30 - 08:20"
         },
         {
-          subject: "Sociologia 1 - 146",
-          size: 1,
-          teachers: ["Everaldo Lorensetti"],
+          subject: "Desenho Técnico - 1529",
+          size: 2,
+          teachers: [
+            "Sérgio Takahashi"
+          ],
           classroom: "",
-          students: "EIN2023 - GA",
-          time: "07:30 - 08:20",
+          students: "EIN2023 - Grupo A",
+          time: "09:25 - 10:15"
         },
         {
-          subject: "Geografia 1 - 126",
+          subject: "Desenho Técnico - 1529",
           size: 1,
-          teachers: ["Jhones Donizetti Mendes"],
+          teachers: [
+            "Sérgio Takahashi"
+          ],
           classroom: "",
-          students: "EIN2023 - GA",
-          time: "09:25 - 10:15",
+          students: "EIN2023 - Grupo A",
+          time: "11:05 - 11:55"
         },
         {
-          subject: "Artes 1 - 121",
-          size: 1,
-          teachers: ["Renata Carolina Pereira"],
+          subject: "Eletricidade e Medidas Elétricas - 1530",
+          size: 2,
+          teachers: [
+            "Tiago Henrique dos Santos"
+          ],
           classroom: "",
-          students: "EIN2023 - GB",
-          time: "07:30 - 08:20",
+          students: "EIN2023 - Grupo B",
+          time: "10:15 - 11:05"
         },
         {
-          subject: "História 1 - 131",
+          subject: "Eletricidade e Medidas Elétricas - 1530",
           size: 1,
-          teachers: ["Suzane Conceição Pantolfi Tostes"],
+          teachers: [
+            "Tiago Henrique dos Santos"
+          ],
           classroom: "",
-          students: "EIN2023 - GB",
-          time: "09:25 - 10:15",
-        },
-      ],
+          students: "EIN2023 - Grupo B",
+          time: "09:25 - 10:15"
+        }
+      ]
     },
     {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
+          subject: "Tecnologia dos Materiais - 1531",
+          size: 2,
+          teachers: [
+            "Darlan Roque Dapieve"
+          ],
+          classroom: "",
+          students: "EIN2023",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Sociologia 1 - 146",
+          size: 1,
+          teachers: [
+            "Everaldo Lorensetti"
+          ],
+          classroom: "",
+          students: "EIN2023",
+          time: "11:05 - 11:55"
+        },
+        {
           subject: "Lingua Portuguesa 1 - 138",
           size: 2,
-          teachers: ["Kátia Cristiane Kobus Novaes"],
+          teachers: [
+            "Kátia Cristiane Kobus Novaes"
+          ],
           classroom: "",
           students: "EIN2023",
-          time: "07:30 - 08:20",
-        },
-        {
-          subject: "Desenho Técnico - 1529",
-          size: 2,
-          teachers: ["Sérgio Takahashi"],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
-          students: "EIN2023 - GB",
-          time: "09:25 - 10:15",
-        },
-        {
-          subject: "Desenho Técnico - 1529",
-          size: 1,
-          teacher: "Renata Carolina Pereira",
-          classroom: "",
-          students: "EIN2023",
-          time: "11:05 - 11:55",
-        },
-        {
-          subject: "Eletricidade e Medidas Elétricas - 1530",
-          size: 2,
-          teacher: "Sérgio Augusto Dias Castro",
-          classroom: "",
-          students: "EIN2023",
-          time: "09:25 - 10:15",
-        },
-      ],
+          time: "09:25 - 10:15"
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
@@ -135,169 +163,175 @@ const data = {
         {
           subject: "Educação Física 1 - 123",
           size: 1,
-          teachers: ["Bruna Valeriano da Silva Lisboa"],
-          classroom: "Educação Física / Sala 4 B2",
+          teachers: [
+            "Bruna Valeriano da Silva Lisboa"
+          ],
+          classroom: "",
           students: "EIN2023",
-          time: "09:25 - 10:15",
+          time: "07:30 - 08:20"
         },
         {
           subject: "Física 1 - 125",
           size: 2,
-          teachers: ["Bruno Garcia Bonfim"],
-          classroom: "Laboratório de Física",
+          teachers: [
+            "Bruno Garcia Bonfim"
+          ],
+          classroom: "",
           students: "EIN2023",
-          time: "11:05 - 11:55",
-        },
-        {
-          subject: "Química 1 - 143",
-          size: 1,
-          teachers: ["Elizangela Cavazzini Cesca"],
-          classroom: "Laboratório de Química",
-          students: "EIN2023",
-          time: "10:15 - 11:05",
+          time: "09:25 - 10:15"
         },
         {
           subject: "Filosofia 1 - 124",
           size: 1,
-          teacher: "Fabio Antônio da Silva",
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
           classroom: "",
           students: "EIN2023",
-          time: "08:20 - 09:10",
+          time: "08:20 - 09:10"
         },
         {
-          subject: "Lingua Estrangeira Moderna - Espanhol - 1540",
+          subject: "Geografia 1 - 126",
           size: 1,
-          teacher: "Michelli Cristina Galli",
+          teachers: [
+            "Jhones Donizetti Mendes"
+          ],
           classroom: "",
           students: "EIN2023",
-          time: "07:30 - 08:20",
-        },
-      ],
+          time: "11:05 - 11:55"
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Educação Física 1 - 123",
+          subject: "Biologia 1 - 122",
           size: 1,
-          teacher: "Bruna Valeriano da Silva Lisboa",
-          classroom: "Educação Física / Sala 4 B2",
+          teachers: [
+            "Eliana Peliçon Pereira Figueira"
+          ],
+          classroom: "",
           students: "EIN2023",
-          time: "10:15 - 11:05",
+          time: "07:30 - 08:20"
         },
         {
-          subject: "Física 1 - 125",
+          subject: "Informática Instrumental - 1532",
           size: 2,
-          teachers: ["Darlan Roque Dapieve"],
+          teachers: [
+            "Joaquim José Honório de Lima"
+          ],
           classroom: "",
           students: "EIN2023",
-          time: "07:30 - 08:20",
+          time: "09:25 - 10:15"
         },
         {
-          subject: "Desenho Técnico - 1529",
-          size: 2,
-          teachers: ["Sérgio Takahashi"],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
-          students: "EIN2023 - GA",
-          time: "10:15 - 11:05",
-        },
-        {
-          subject: "Desenho Técnico - 1529",
+          subject: "Lingua Estrangeira Moderna - Espanhol - 1540",
           size: 1,
-          teacher: "Jhones Donizetti Mendes",
+          teachers: [
+            "Michelli Cristina Galli"
+          ],
           classroom: "",
           students: "EIN2023",
-          time: "11:05 - 11:55",
+          time: "11:05 - 11:55"
         },
         {
-          subject: "Eletricidade e Medidas Elétricas - 1530",
+          subject: "História 1 - 131",
           size: 1,
-          teacher: "Suzane Conceição Pantolfi Tostes",
+          teachers: [
+            "Suzane Conceição Pantolfi Tostes"
+          ],
           classroom: "",
           students: "EIN2023",
-          time: "09:25 - 10:15",
-        },
-      ],
-    },
+          time: "08:20 - 09:10"
+        }
+      ]
+    }
   ],
   time: [
     {
       time: "07:30 - 08:20",
-      size: 50,
+      size: 50
     },
     {
       time: "08:20 - 09:10",
-      size: 50,
+      size: 50
     },
     {
       time: "09:10 - 09:25",
-      size: 15,
+      size: 15
     },
     {
       time: "09:25 - 10:15",
-      size: 50,
+      size: 50
     },
     {
       time: "10:15 - 11:05",
-      size: 50,
+      size: 50
     },
     {
       time: "11:05 - 11:55",
-      size: 50,
+      size: 50
     },
     {
       time: "11:55 - 13:10",
-      size: 75,
+      size: 75
     },
     {
       time: "13:10 - 14:00",
-      size: 50,
+      size: 50
     },
     {
       time: "14:00 - 14:50",
-      size: 50,
+      size: 50
     },
     {
       time: "14:50 - 15:05",
-      size: 15,
+      size: 15
     },
     {
       time: "15:05 - 15:55",
-      size: 50,
+      size: 50
     },
     {
       time: "15:55 - 16:45",
-      size: 50,
+      size: 50
     },
     {
       time: "16:45 - 19:00",
-      size: 135,
+      size: 135
     },
     {
       time: "19:00 - 19:50",
-      size: 50,
+      size: 50
     },
     {
       time: "19:50 - 20:40",
-      size: 50,
+      size: 50
     },
     {
       time: "20:40 - 21:00",
-      size: 20,
+      size: 20
     },
     {
       time: "21:00 - 21:50",
-      size: 50,
+      size: 50
     },
     {
       time: "21:50 - 22:40",
-      size: 50,
-    },
-  ],
-};
+      size: 50
+    }
+  ]
+}
 
 # EIN2023
 
 <div>
-  {<Grid title={data.title} weekClasses={data.weekClasses} time={data.time} />}
+    {
+        <Grid
+            title={data.title} 
+            weekClasses={data.weekClasses} 
+            time={data.time}
+        />
+    }
 </div>
