--- a/docs/turma/elm2022.mdx
+++ b/docs/turma/elm2022.mdx
@@ -6,22 +6,22 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Eletrônica de Potência - 114",
+          subject: "Gestão de Produção - 117",
           size: 2,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Cesar Gomes de Freitas"
           ],
-          classroom: "Laboratório de Eletrônica",
+          classroom: "",
           students: "ELM2022",
           time: "21:00 - 21:50"
         },
         {
-          subject: "Elementos de Automação - 112",
+          subject: "Resistência dos Materiais - 109",
           size: 2,
           teachers: [
-            "Vander Fabio Silveira"
+            "Darlan Roque Dapieve"
           ],
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
+          classroom: "",
           students: "ELM2022",
           time: "19:00 - 19:50"
         }
@@ -31,22 +31,22 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Resistência dos Materiais - 109",
+          subject: "Eletrônica de Potência - 114",
           size: 2,
           teachers: [
-            "Darlan Roque Dapieve"
+            "Novo Professor de Elétrica PSS - 40h"
           ],
-          classroom: "Sala 7-2",
+          classroom: "",
           students: "ELM2022",
           time: "19:00 - 19:50"
         },
         {
-          subject: "Máquinas Térmicas de Fluxo - 111",
+          subject: "Metrologia - 108",
           size: 2,
           teachers: [
-            "Luiz Inácio Chaves"
+            "Sérgio Takahashi"
           ],
-          classroom: "Laboratório de Materiais e Hidráulica B4",
+          classroom: "",
           students: "ELM2022",
           time: "21:00 - 21:50"
         }
@@ -61,7 +61,7 @@ const data = {
           teachers: [
             "Darlan Roque Dapieve"
           ],
-          classroom: "Sala 7-2",
+          classroom: "",
           students: "ELM2022",
           time: "19:00 - 19:50"
         },
@@ -71,7 +71,7 @@ const data = {
           teachers: [
             "Novo Professor de Elétrica PSS - 40h"
           ],
-          classroom: "Laboratório de Eletrônica",
+          classroom: "",
           students: "ELM2022",
           time: "21:00 - 21:50"
         }
@@ -81,24 +81,24 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Gestão de Produção - 117",
-          size: 2,
-          teachers: [
-            "Cesar Gomes de Freitas"
-          ],
-          classroom: "Sala 7-2",
-          students: "ELM2022",
-          time: "21:00 - 21:50"
-        },
-        {
           subject: "Máquinas Térmicas de Fluxo - 111",
           size: 2,
           teachers: [
             "Luiz Inácio Chaves"
           ],
-          classroom: "Laboratório de Materiais e Hidráulica B4",
+          classroom: "",
           students: "ELM2022",
           time: "19:00 - 19:50"
+        },
+        {
+          subject: "Elementos de Automação - 112",
+          size: 2,
+          teachers: [
+            "Vander Fabio Silveira"
+          ],
+          classroom: "",
+          students: "ELM2022",
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -106,12 +106,12 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Metrologia - 108",
+          subject: "Máquinas Térmicas de Fluxo - 111",
           size: 2,
           teachers: [
-            "Sérgio Takahashi"
+            "Luiz Inácio Chaves"
           ],
-          classroom: "Laboratório de Metrologia B4",
+          classroom: "",
           students: "ELM2022",
           time: "19:00 - 19:50"
         },
@@ -121,7 +121,7 @@ const data = {
           teachers: [
             "Wylliam Salviano Gongora"
           ],
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
+          classroom: "",
           students: "ELM2022",
           time: "21:00 - 21:50"
         }
