--- a/docs/turma/iiw2022b.mdx
+++ b/docs/turma/iiw2022b.mdx
@@ -6,49 +6,24 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Química II - 1230",
-          size: 2,
-          teachers: [
-            "Elizangela Cavazzini Cesca"
-          ],
-          classroom: "BioPark-01",
-          students: "IIW2022B",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Arte I - 1235",
-          size: 1,
-          teachers: [
-            "Josiane Paula Maltauro"
-          ],
-          classroom: "BioPark-01",
-          students: "IIW2022B",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Geografia I - 1233",
-          size: 2,
-          teachers: [
-            "Renato Lada Guerreiro"
-          ],
-          classroom: "BioPark-01",
-          students: "IIW2022B",
-          time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: [
-        {
           subject: "História II - 1234",
           size: 1,
           teachers: [
             "Milton Aparecido Azevedo"
           ],
-          classroom: "BioPark-01",
+          classroom: "",
           students: "IIW2022B",
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Língua Portuguesa e Literatura II - 1226",
+          size: 2,
+          teachers: [
+            "Novo professor Portugues Biopark 2023"
+          ],
+          classroom: "",
+          students: "IIW2022B",
+          time: "07:30 - 08:20"
         },
         {
           subject: "Administração de Sistemas Operacionais e Redes - 1236",
@@ -56,7 +31,52 @@ const data = {
           teachers: [
             "Olavo José Luiz Junior"
           ],
-          classroom: "Laboratório de Informatica BioPark",
+          classroom: "",
+          students: "IIW2022B",
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Geografia I - 1233",
+          size: 2,
+          teachers: [
+            "Renato Lada Guerreiro"
+          ],
+          classroom: "",
+          students: "IIW2022B",
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Matemática II - 1231",
+          size: 2,
+          teachers: [
+            "Sérgio Augusto Dias Castro"
+          ],
+          classroom: "",
+          students: "IIW2022B",
+          time: "10:15 - 11:05"
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
+        {
+          subject: "Projeto Integrador II - 1239",
+          size: 2,
+          teachers: [
+            "Eduardo Alberto Felippsen"
+          ],
+          classroom: "",
+          students: "IIW2022B",
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Arte I - 1235",
+          size: 1,
+          teachers: [
+            "Josiane Paula Maltauro"
+          ],
+          classroom: "",
           students: "IIW2022B",
           time: "09:25 - 10:15"
         },
@@ -66,7 +86,17 @@ const data = {
           teachers: [
             "Paula Magalhães Souza Deccache"
           ],
-          classroom: "Laboratório de Biologia",
+          classroom: "",
+          students: "IIW2022B",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Desenvolvimento WEB Orientado a Objetos - 1237",
+          size: 2,
+          teachers: [
+            "Rafael Luis Bartz"
+          ],
+          classroom: "",
           students: "IIW2022B",
           time: "07:30 - 08:20"
         }
@@ -76,14 +106,24 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "História II - 1234",
-          size: 1,
+          subject: "Laboratório de Banco de Dados - 1238",
+          size: 2,
           teachers: [
-            "Milton Aparecido Azevedo"
+            "Alexandre Rodrigues Monge"
           ],
-          classroom: "BioPark-01",
+          classroom: "",
           students: "IIW2022B",
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Filosofia II - 1232",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "",
+          students: "IIW2022B",
+          time: "11:05 - 11:55"
         },
         {
           subject: "Física II - 1229",
@@ -91,37 +131,7 @@ const data = {
           teachers: [
             "Novo professor Física Biopark 2023"
           ],
-          classroom: "Laboratório de Física",
-          students: "IIW2022B",
-          time: "15:05 - 15:55"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura II - 1226",
-          size: 2,
-          teachers: [
-            "Novo professor Portugues Biopark 2023"
-          ],
-          classroom: "BioPark-01",
-          students: "IIW2022B",
-          time: "13:10 - 14:00"
-        },
-        {
-          subject: "Desenvolvimento WEB Orientado a Objetos - 1237",
-          size: 2,
-          teachers: [
-            "Rafael Luis Bartz"
-          ],
-          classroom: "Laboratório de Informatica BioPark",
-          students: "IIW2022B",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Matemática II - 1231",
-          size: 2,
-          teachers: [
-            "Sérgio Augusto Dias Castro"
-          ],
-          classroom: "BioPark-01",
+          classroom: "",
           students: "IIW2022B",
           time: "07:30 - 08:20"
         }
@@ -131,34 +141,34 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Laboratório de Banco de Dados - 1238",
+          subject: "Química II - 1230",
           size: 2,
           teachers: [
-            "Alexandre Rodrigues Monge"
+            "Elizangela Cavazzini Cesca"
           ],
-          classroom: "Laboratório de Informatica BioPark",
+          classroom: "",
           students: "IIW2022B",
-          time: "07:30 - 08:20"
+          time: "10:15 - 11:05"
         },
         {
-          subject: "Arte I - 1235",
+          subject: "História II - 1234",
           size: 1,
           teachers: [
-            "Josiane Paula Maltauro"
+            "Milton Aparecido Azevedo"
           ],
-          classroom: "BioPark-01",
+          classroom: "",
           students: "IIW2022B",
           time: "09:25 - 10:15"
         },
         {
-          subject: "Matemática II - 1231",
+          subject: "Língua Portuguesa e Literatura II - 1226",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Novo professor Portugues Biopark 2023"
           ],
-          classroom: "BioPark-01",
+          classroom: "",
           students: "IIW2022B",
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -166,22 +176,12 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Projeto Integrador II - 1239",
-          size: 2,
-          teachers: [
-            "Eduardo Alberto Felippsen"
-          ],
-          classroom: "Laboratório de Informatica BioPark",
-          students: "IIW2022B",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Filosofia II - 1232",
+          subject: "Arte I - 1235",
           size: 1,
           teachers: [
-            "Fabio Antônio da Silva"
+            "Josiane Paula Maltauro"
           ],
-          classroom: "BioPark-01",
+          classroom: "",
           students: "IIW2022B",
           time: "09:25 - 10:15"
         },
@@ -191,19 +191,9 @@ const data = {
           teachers: [
             "Novo professor Física Biopark 2023"
           ],
-          classroom: "Laboratório de Física",
+          classroom: "",
           students: "IIW2022B",
-          time: "13:10 - 14:00"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura II - 1226",
-          size: 2,
-          teachers: [
-            "Novo professor Portugues Biopark 2023"
-          ],
-          classroom: "BioPark-01",
-          students: "IIW2022B",
-          time: "15:05 - 15:55"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Administração de Sistemas Operacionais e Redes - 1236",
@@ -211,9 +201,19 @@ const data = {
           teachers: [
             "Olavo José Luiz Junior"
           ],
-          classroom: "Laboratório de Informatica BioPark",
+          classroom: "",
           students: "IIW2022B",
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Matemática II - 1231",
+          size: 2,
+          teachers: [
+            "Sérgio Augusto Dias Castro"
+          ],
+          classroom: "",
+          students: "IIW2022B",
+          time: "13:10 - 14:00"
         }
       ]
     }
