--- a/docs/turma/iiw2023b.mdx
+++ b/docs/turma/iiw2023b.mdx
@@ -6,12 +6,12 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Fundamentos de informática - 1076",
-          size: 2,
+          subject: "Filosofia I - 1139",
+          size: 1,
           teachers: [
-            "Caroline Domingues Porto do Nascimento Barbieri"
+            "Fabio Antônio da Silva"
           ],
-          classroom: "Laboratório de Informatica BioPark",
+          classroom: "",
           students: "IIW2023B",
           time: "09:25 - 10:15"
         },
@@ -21,7 +21,32 @@ const data = {
           teachers: [
             "Luis Henrique Manosso Von Mecheln"
           ],
-          classroom: "Laboratório de Informatica BioPark",
+          classroom: "",
+          students: "IIW2023B",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Física I - 1070",
+          size: 2,
+          teachers: [
+            "Novo professor Física Biopark 2023"
+          ],
+          classroom: "",
+          students: "IIW2023B",
+          time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
+        {
+          subject: "Física I - 1070",
+          size: 2,
+          teachers: [
+            "Novo professor Física Biopark 2023"
+          ],
+          classroom: "",
           students: "IIW2023B",
           time: "07:30 - 08:20"
         },
@@ -31,42 +56,17 @@ const data = {
           teachers: [
             "Novo professor Inglês Biopark 2023"
           ],
-          classroom: "BioPark-02",
+          classroom: "",
           students: "IIW2023B",
           time: "11:05 - 11:55"
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Lógica de programação - 1075",
-          size: 2,
-          teachers: [
-            "Caroline Domingues Porto do Nascimento Barbieri"
-          ],
-          classroom: "Laboratório de Informatica BioPark",
-          students: "IIW2023B",
-          time: "07:30 - 08:20"
         },
         {
-          subject: "Química I - 1068",
+          subject: "Língua Portuguesa e Literatura I - 1069",
           size: 2,
           teachers: [
-            "Elizangela Cavazzini Cesca"
+            "Novo professor Portugues Biopark 2023"
           ],
-          classroom: "BioPark-02",
-          students: "IIW2023B",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Sociologia I - 1071",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "BioPark-02",
+          classroom: "",
           students: "IIW2023B",
           time: "09:25 - 10:15"
         }
@@ -76,24 +76,34 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
+          subject: "Projeto integrador I - 1078",
+          size: 2,
+          teachers: [
+            "Alexandre Rodrigues Monge"
+          ],
+          classroom: "",
+          students: "IIW2023B",
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Lógica de programação - 1075",
+          size: 2,
+          teachers: [
+            "Caroline Domingues Porto do Nascimento Barbieri"
+          ],
+          classroom: "",
+          students: "IIW2023B",
+          time: "15:05 - 15:55"
+        },
+        {
           subject: "Linguagens de apresentação e estruturação de conteúdos - 1074",
           size: 2,
           teachers: [
             "Luis Henrique Manosso Von Mecheln"
           ],
-          classroom: "Laboratório de Informatica BioPark",
+          classroom: "",
           students: "IIW2023B",
           time: "07:30 - 08:20"
-        },
-        {
-          subject: "Física I - 1070",
-          size: 2,
-          teachers: [
-            "Novo professor Física Biopark 2023"
-          ],
-          classroom: "BioPark-02",
-          students: "IIW2023B",
-          time: "13:10 - 14:00"
         },
         {
           subject: "Lingua estrangeira - Inglês - 1225",
@@ -101,9 +111,9 @@ const data = {
           teachers: [
             "Novo professor Inglês Biopark 2023"
           ],
-          classroom: "BioPark-02",
+          classroom: "",
           students: "IIW2023B",
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Língua Portuguesa e Literatura I - 1069",
@@ -111,19 +121,9 @@ const data = {
           teachers: [
             "Novo professor Portugues Biopark 2023"
           ],
-          classroom: "BioPark-02",
+          classroom: "",
           students: "IIW2023B",
-          time: "15:05 - 15:55"
-        },
-        {
-          subject: "Matemática I - 1064",
-          size: 2,
-          teachers: [
-            "Sérgio Augusto Dias Castro"
-          ],
-          classroom: "BioPark-02",
-          students: "IIW2023B",
-          time: "09:25 - 10:15"
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -131,14 +131,34 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Projeto integrador I - 1078",
+          subject: "Química I - 1068",
           size: 2,
           teachers: [
-            "Alexandre Rodrigues Monge"
+            "Elizangela Cavazzini Cesca"
           ],
-          classroom: "Laboratório de Informatica BioPark",
+          classroom: "",
           students: "IIW2023B",
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Sociologia I - 1071",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "",
+          students: "IIW2023B",
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Sociologia I - 1071",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "",
+          students: "IIW2023B",
+          time: "15:55 - 16:45"
         },
         {
           subject: "História I - 1224",
@@ -146,7 +166,17 @@ const data = {
           teachers: [
             "Milton Aparecido Azevedo"
           ],
-          classroom: "BioPark-02",
+          classroom: "",
+          students: "IIW2023B",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Matemática I - 1064",
+          size: 2,
+          teachers: [
+            "Sérgio Augusto Dias Castro"
+          ],
+          classroom: "",
           students: "IIW2023B",
           time: "09:25 - 10:15"
         },
@@ -156,9 +186,9 @@ const data = {
           teachers: [
             "Sérgio Augusto Dias Castro"
           ],
-          classroom: "BioPark-02",
+          classroom: "",
           students: "IIW2023B",
-          time: "07:30 - 08:20"
+          time: "13:10 - 14:00"
         }
       ]
     },
@@ -166,54 +196,24 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
+          subject: "Fundamentos de informática - 1076",
+          size: 2,
+          teachers: [
+            "Caroline Domingues Porto do Nascimento Barbieri"
+          ],
+          classroom: "",
+          students: "IIW2023B",
+          time: "10:15 - 11:05"
+        },
+        {
           subject: "Filosofia I - 1139",
           size: 1,
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "BioPark-02",
+          classroom: "",
           students: "IIW2023B",
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Filosofia I - 1139",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "BioPark-02",
-          students: "IIW2023B",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Sociologia I - 1071",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "BioPark-02",
-          students: "IIW2023B",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Física I - 1070",
-          size: 2,
-          teachers: [
-            "Novo professor Física Biopark 2023"
-          ],
-          classroom: "BioPark-02",
-          students: "IIW2023B",
-          time: "15:05 - 15:55"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura I - 1069",
-          size: 2,
-          teachers: [
-            "Novo professor Portugues Biopark 2023"
-          ],
-          classroom: "BioPark-02",
-          students: "IIW2023B",
-          time: "13:10 - 14:00"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Biologia I - 1073",
@@ -221,9 +221,9 @@ const data = {
           teachers: [
             "Paula Magalhães Souza Deccache"
           ],
-          classroom: "BioPark-02",
+          classroom: "",
           students: "IIW2023B",
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         }
       ]
     }
