--- a/docs/turma/tgc2021.mdx
+++ b/docs/turma/tgc2021.mdx
@@ -6,24 +6,24 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Elaboração de Projetos - 1505",
+          subject: "Gestão da Informação e documentação - 1502",
           size: 2,
           teachers: [
             "Keyla Christina Almeida Portela"
           ],
-          classroom: "Sala 15-2",
-          students: "TGC2021",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Plano de Negócio - 1506",
-          size: 2,
-          teachers: [
-            "Novo professor de Administração PSS - 40h"
-          ],
-          classroom: "Sala 15-2",
+          classroom: "",
           students: "TGC2021",
           time: "19:00 - 19:50"
+        },
+        {
+          subject: "Comércio Eletrônico e Mídias Digitais - 1499",
+          size: 2,
+          teachers: [
+            "Rafael Silva Santos"
+          ],
+          classroom: "",
+          students: "TGC2021",
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -36,17 +36,17 @@ const data = {
           teachers: [
             "Cesar Gomes de Freitas"
           ],
-          classroom: "Sala 15-2",
+          classroom: "",
           students: "TGC2021",
           time: "21:00 - 21:50"
         },
         {
-          subject: "Comércio Eletrônico e Mídias Digitais - 1499",
+          subject: "Plano de Negócio - 1506",
           size: 2,
           teachers: [
-            "Rafael Silva Santos"
+            "Novo professor de Administração PSS - 40h"
           ],
-          classroom: "Sala 15-2",
+          classroom: "",
           students: "TGC2021",
           time: "19:00 - 19:50"
         }
@@ -61,17 +61,17 @@ const data = {
           teachers: [
             "Cesar Gomes de Freitas"
           ],
-          classroom: "Sala 15-2",
+          classroom: "",
           students: "TGC2021",
           time: "21:00 - 21:50"
         },
         {
-          subject: "Planejamento e Gestão estratégica - 1500",
+          subject: "Comércio Eletrônico e Mídias Digitais - 1499",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Rafael Silva Santos"
           ],
-          classroom: "Sala 15-2",
+          classroom: "",
           students: "TGC2021",
           time: "19:00 - 19:50"
         }
@@ -81,24 +81,24 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Gestão Ambiental e Desenvolvimento Sustentável - 1504",
+          subject: "Planejamento e Gestão estratégica - 1500",
           size: 2,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Novo professor de Administração PSS - 40h"
           ],
-          classroom: "Sala 15-2",
-          students: "TGC2021",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Gestão da Informação e documentação - 1502",
-          size: 2,
-          teachers: [
-            "Keyla Christina Almeida Portela"
-          ],
-          classroom: "Sala 15-2",
+          classroom: "",
           students: "TGC2021",
           time: "19:00 - 19:50"
+        },
+        {
+          subject: "Planejamento e Gestão estratégica - 1500",
+          size: 2,
+          teachers: [
+            "Novo professor de Administração PSS - 40h"
+          ],
+          classroom: "",
+          students: "TGC2021",
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -106,22 +106,22 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Planejamento e Gestão estratégica - 1500",
+          subject: "Gestão Ambiental e Desenvolvimento Sustentável - 1504",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Daniele de Almeida Paula"
           ],
-          classroom: "Sala 15-2",
+          classroom: "",
           students: "TGC2021",
           time: "19:00 - 19:50"
         },
         {
-          subject: "Comércio Eletrônico e Mídias Digitais - 1499",
+          subject: "Elaboração de Projetos - 1505",
           size: 2,
           teachers: [
-            "Rafael Silva Santos"
+            "Keyla Christina Almeida Portela"
           ],
-          classroom: "Sala 15-2",
+          classroom: "",
           students: "TGC2021",
           time: "21:00 - 21:50"
         }
