--- a/docs/turma/tgc2022.mdx
+++ b/docs/turma/tgc2022.mdx
@@ -6,22 +6,22 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Contabilidade de Custos e Formação de Preços - 1492",
+          subject: "Direito Empresarial e Tributário - 1494",
           size: 2,
           teachers: [
-            "Cesar Gomes de Freitas"
+            "José Jurandir Pereira Junior"
           ],
-          classroom: "Sala 3-1",
+          classroom: "",
           students: "TGC2022",
           time: "19:00 - 19:50"
         },
         {
-          subject: "Contabilidade de Custos e Formação de Preços - 1492",
+          subject: "Técnicas de Vendas e Negociação - 1493",
           size: 2,
           teachers: [
-            "Cesar Gomes de Freitas"
+            "Novo professor de Administração PSS - 40h"
           ],
-          classroom: "Sala 3-1",
+          classroom: "",
           students: "TGC2022",
           time: "21:00 - 21:50"
         }
@@ -36,82 +36,7 @@ const data = {
           teachers: [
             "Amilcar Machado Profeta Filho"
           ],
-          classroom: "Sala 3-1",
-          students: "TGC2022",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Técnicas de Vendas e Negociação - 1493",
-          size: 2,
-          teachers: [
-            "Novo professor de Administração PSS - 40h"
-          ],
-          classroom: "Sala 3-1",
-          students: "TGC2022",
-          time: "19:00 - 19:50"
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Gestão de Compras e Estoques - 1491",
-          size: 2,
-          teachers: [
-            "Cesar Gomes de Freitas"
-          ],
-          classroom: "Sala 3-1",
-          students: "TGC2022",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Plano de Marketing - 1498",
-          size: 2,
-          teachers: [
-            "Novo professor de Administração PSS - 40h"
-          ],
-          classroom: "Sala 3-1",
-          students: "TGC2022",
-          time: "21:00 - 21:50"
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Direito Empresarial e Tributário - 1494",
-          size: 2,
-          teachers: [
-            "José Jurandir Pereira Junior"
-          ],
-          classroom: "Sala 3-1",
-          students: "TGC2022",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Gestão Estratégica de Pessoas - 1496",
-          size: 2,
-          teachers: [
-            "Novo professor de Administração PSS - 40h"
-          ],
-          classroom: "Sala 3-1",
-          students: "TGC2022",
-          time: "19:00 - 19:50"
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Direito Empresarial e Tributário - 1494",
-          size: 2,
-          teachers: [
-            "José Jurandir Pereira Junior"
-          ],
-          classroom: "Sala 3-1",
+          classroom: "",
           students: "TGC2022",
           time: "19:00 - 19:50"
         },
@@ -121,7 +46,82 @@ const data = {
           teachers: [
             "Keyla Christina Almeida Portela"
           ],
-          classroom: "Sala 3-1",
+          classroom: "",
+          students: "TGC2022",
+          time: "21:00 - 21:50"
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
+          subject: "Direito Empresarial e Tributário - 1494",
+          size: 2,
+          teachers: [
+            "José Jurandir Pereira Junior"
+          ],
+          classroom: "",
+          students: "TGC2022",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Gestão Estratégica de Pessoas - 1496",
+          size: 2,
+          teachers: [
+            "Novo professor de Administração PSS - 40h"
+          ],
+          classroom: "",
+          students: "TGC2022",
+          time: "21:00 - 21:50"
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Contabilidade de Custos e Formação de Preços - 1492",
+          size: 2,
+          teachers: [
+            "Cesar Gomes de Freitas"
+          ],
+          classroom: "",
+          students: "TGC2022",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Contabilidade de Custos e Formação de Preços - 1492",
+          size: 2,
+          teachers: [
+            "Cesar Gomes de Freitas"
+          ],
+          classroom: "",
+          students: "TGC2022",
+          time: "21:00 - 21:50"
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
+          subject: "Gestão de Compras e Estoques - 1491",
+          size: 2,
+          teachers: [
+            "Cesar Gomes de Freitas"
+          ],
+          classroom: "",
+          students: "TGC2022",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Plano de Marketing - 1498",
+          size: 2,
+          teachers: [
+            "Novo professor de Administração PSS - 40h"
+          ],
+          classroom: "",
           students: "TGC2022",
           time: "21:00 - 21:50"
         }
